Add machine translations

--- a/i18n/po/ja_JP/_guides/README.adoc.po
+++ b/i18n/po/ja_JP/_guides/README.adoc.po
@@ -18,98 +18,132 @@ msgstr ""
 
 #. type: Title =
 #: upstream/_guides/README.adoc:1
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "How to Create Quarkus Documentation"
-msgstr ""
+msgstr "Quarkusのドキュメントを作成する方法"
 
 #. type: Plain text
 #: upstream/_guides/README.adoc:5
+#, fuzzy
 msgid ""
 "This guide describes the asciidoc format and conventions that Quarkus has "
 "adopted."
-msgstr ""
+msgstr "このガイドでは、Quarkusが採用しているアスキードックのフォーマットと規約について説明します。"
 
 #. type: Title ==
 #: upstream/_guides/README.adoc:6
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "References"
-msgstr ""
+msgstr "参考文献"
 
 #. type: Plain text
 #: upstream/_guides/README.adoc:9
+#, fuzzy
 msgid ""
 "The following links provide background on the general conventions and "
 "Asciidoc syntax."
-msgstr ""
+msgstr "以下のリンクは、一般的な規約と Asciidoc 構文の背景を提供します。"
 
 #. type: Plain text
 #: upstream/_guides/README.adoc:11
+#, fuzzy
 msgid ""
 "https://redhat-documentation.github.io/asciidoc-markup-conventions/[AsciiDoc "
 "Mark-up Quick Reference for Documentation]"
 msgstr ""
+"link:https://redhat-documentation.github.io/asciidoc-markup-conventions/"
+"[ドキュメントのためのAsciiDocマークアップクイックリファレンス]"
 
 #. type: Plain text
 #: upstream/_guides/README.adoc:12
+#, fuzzy
 msgid "http://asciidoctor.org/docs/user-manual/[Asciidoctor User Manual]"
-msgstr ""
+msgstr "link:http://asciidoctor.org/docs/user-manual/[アサイードクターユーザーマニュアル]"
 
 #. type: Plain text
 #: upstream/_guides/README.adoc:13
+#, fuzzy
 msgid ""
 "http://asciidoctor.org/docs/asciidoc-syntax-quick-reference/[AsciiDoc Syntax "
 "Quick Reference]"
 msgstr ""
+"link:http://asciidoctor.org/docs/asciidoc-syntax-quick-reference/[AsciiDoc "
+"構文クイックリファレンス]"
 
 #. type: Title ==
 #: upstream/_guides/README.adoc:14
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Variables for Use in Documents"
-msgstr ""
+msgstr "ドキュメントで使用する変数"
 
 #. type: Plain text
 #: upstream/_guides/README.adoc:19
+#, fuzzy
 msgid ""
 "The following variables externalize key information that can change over "
 "time, and so references to such information should be done by using the "
 "variable inside of {} curly brackets. The complete list of externalized "
 "variables for use is given in the following table:"
 msgstr ""
+"以下の変数は、時間の経過とともに変化する可能性のあるキー情報を外部化していますので、そのような情報への参照は "
+"{}中括弧内の変数を使用して行う必要があります。使用する外部化された変数の完全なリストを以下の表に示します。"
 
 #. type: Block title
 #: upstream/_guides/README.adoc:20
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Variables"
-msgstr ""
+msgstr "変数"
 
 #. type: Table
 #: upstream/_guides/README.adoc:49
-#, no-wrap
+#, no-wrap, fuzzy
 msgid ""
 "|Property Name|Value|Description\n"
 "|\\{quarkus-version}|{quarkus-version}|The current version of the project.\n"
-"|\\{quarkus-home-url}|{quarkus-home-url}| The location of the project home page.\n"
-"|\\{quarkus-site-getting-started}|{quarkus-site-getting-started}| The location of the getting started page.\n"
+"|\\{quarkus-home-url}|{quarkus-home-url}| The location of the project home "
+"page.\n"
+"|\\{quarkus-site-getting-started}|{quarkus-site-getting-started}| The "
+"location of the getting started page.\n"
 "\n"
-"|\\{quarkus-org-url}|{quarkus-org-url}| The location of the project github organization.\n"
-"|\\{quarkus-base-url}|{quarkus-base-url}| Quarkus GitHub URL common base prefix.\n"
-"|\\{quarkus-clone-url}|{quarkus-clone-url}| Quarkus URL for git clone referenced by the documentation.\n"
-"|\\{quarkus-archive-url}|{quarkus-archive-url}| Quarkus URL to master source archive.\n"
-"|\\{quarkus-blob-url}|{quarkus-blob-url}| Quarkus URL to master blob source tree; used for referencing source files.\n"
-"|\\{quarkus-tree-url}|{quarkus-tree-url}| Quarkus URL to master source tree root; used for referencing directories.\n"
-"|\\{quarkus-issues-url}|{quarkus-issues-url}| Quarkus URL to the issues page.\n"
-"|\\{quarkus-images-url}|{quarkus-images-url}| Quarkus URL to set of container images delivered for Quarkus.\n"
+"|\\{quarkus-org-url}|{quarkus-org-url}| The location of the project github "
+"organization.\n"
+"|\\{quarkus-base-url}|{quarkus-base-url}| Quarkus GitHub URL common base "
+"prefix.\n"
+"|\\{quarkus-clone-url}|{quarkus-clone-url}| Quarkus URL for git clone "
+"referenced by the documentation.\n"
+"|\\{quarkus-archive-url}|{quarkus-archive-url}| Quarkus URL to master source "
+"archive.\n"
+"|\\{quarkus-blob-url}|{quarkus-blob-url}| Quarkus URL to master blob source "
+"tree; used for referencing source files.\n"
+"|\\{quarkus-tree-url}|{quarkus-tree-url}| Quarkus URL to master source tree "
+"root; used for referencing directories.\n"
+"|\\{quarkus-issues-url}|{quarkus-issues-url}| Quarkus URL to the issues page."
+"\n"
+"|\\{quarkus-images-url}|{quarkus-images-url}| Quarkus URL to set of "
+"container images delivered for Quarkus.\n"
 "\n"
 "|\\{quarkus-chat-url}|{quarkus-chat-url} | URL of our chat.\n"
-"|\\{quarkus-mailing-list-subscription-email}|{quarkus-mailing-list-subscription-email} | Email used to subscribe to our mailing list.\n"
-"|\\{quarkus-mailing-list-index}|{quarkus-mailing-list-index} | Mailing list index page.\n"
+"|\\{quarkus-mailing-list-subscription-email}|{quarkus-mailing-list-"
+"subscription-email} | Email used to subscribe to our mailing list.\n"
+"|\\{quarkus-mailing-list-index}|{quarkus-mailing-list-index} | Mailing list "
+"index page.\n"
 "\n"
-"|\\{quickstarts-base-url}|{quickstarts-base-url}| Quickstarts URL common base prefix.\n"
-"|\\{quickstarts-clone-url}|{quickstarts-clone-url}| Quickstarts URL for git clone referenced by the documentation.\n"
-"|\\{quickstarts-archive-url}|{quickstarts-archive-url}| Quickstarts URL to master source archive.\n"
-"|\\{quickstarts-blob-url}|{quickstarts-blob-url}| Quickstarts URL to master blob source tree; used for referencing source files.\n"
-"|\\{quickstarts-tree-url}|{quickstarts-tree-url}| Quickstarts URL to master source tree root; used for referencing directories.\n"
+"|\\{quickstarts-base-url}|{quickstarts-base-url}| Quickstarts URL common "
+"base prefix.\n"
+"|\\{quickstarts-clone-url}|{quickstarts-clone-url}| Quickstarts URL for git "
+"clone referenced by the documentation.\n"
+"|\\{quickstarts-archive-url}|{quickstarts-archive-url}| Quickstarts URL to "
+"master source archive.\n"
+"|\\{quickstarts-blob-url}|{quickstarts-blob-url}| Quickstarts URL to master "
+"blob source tree; used for referencing source files.\n"
+"|\\{quickstarts-tree-url}|{quickstarts-tree-url}| Quickstarts URL to master "
+"source tree root; used for referencing directories.\n"
 "\n"
 "|\\{graalvm-version}|{graalvm-version}| Recommended GraalVM version to use.\n"
-"|\\{graalvm-flavor}|{graalvm-flavor}| The full flavor of GraaVM to use e.g. `19.3.1-java11`. Make sure to use a `java11` version.\n"
+"|\\{graalvm-flavor}|{graalvm-flavor}| The full flavor of GraaVM to use e.g. "
+"`19.3.1-java11`. Make sure to use a `java11` version.\n"
 msgstr ""
+"|プロパティ名|Value|Description |{quarkus-version}|{quarkus-"
+"version}|プロジェクトの現在のバージョン。|{quarkus-home-url}|{quarkus-home-"
+"url}|プロジェクトのホームページの場所。|{quarkus-site-getting-started}|{quarkus-site-getting-"
+"started}| 開始ページの場所。"
