--- a/i18n/po/ja_JP/_guides/building-substrate-howto.adoc.po
+++ b/i18n/po/ja_JP/_guides/building-substrate-howto.adoc.po
@@ -21,52 +21,62 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/building-substrate-howto.adoc:6
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Quarkus - Building a Custom SubstrateVM"
-msgstr ""
+msgstr "Quarkus - カスタムSubstrateVMの構築"
 
 #. type: Title ==
 #: upstream/_guides/building-substrate-howto.adoc:10
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Prerequisites"
-msgstr ""
+msgstr "前提条件"
 
 #. type: Title ===
 #: upstream/_guides/building-substrate-howto.adoc:12
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Install JVMCI"
-msgstr ""
+msgstr "JVMCI のインストール"
 
 #. type: Plain text
 #: upstream/_guides/building-substrate-howto.adoc:15
+#, fuzzy
 msgid "Before anything can be done you must first install a JVMCI build."
-msgstr ""
+msgstr "何かをする前に、まずJVMCIビルドをインストールしなければなりません。"
 
 #. type: Plain text
 #: upstream/_guides/building-substrate-howto.adoc:18
+#, fuzzy
 msgid ""
 "These can be downloaded from OTN http://www.oracle.com/technetwork/oracle-"
 "labs/program-languages/downloads/index.html[here]"
 msgstr ""
+"これらは link:http://www.oracle.com/technetwork/oracle-labs/program-languages/"
+"downloads/index.html[ここで]OTNからダウンロードすることができます"
 
 #. type: Plain text
 #: upstream/_guides/building-substrate-howto.adoc:22
+#, fuzzy
 msgid ""
 "Note, if you are installing on an alternative system, you can use the "
 "developer tools on chrome or firefox to capture a direct URL with an auth "
 "param."
 msgstr ""
+"別のシステムにインストールしている場合は、クロームやファイアフォックスの開発者ツールを使用して、auth パラメーターを指定して直接 URL "
+"をキャプチャすることができます。"
 
 #. type: Plain text
 #: upstream/_guides/building-substrate-howto.adoc:24
+#, fuzzy
 msgid "After obtaining the download install it and set `JAVA_HOME`"
-msgstr ""
+msgstr "ダウンロードした後、インストールして `JAVA_HOME`"
 
 #. type: delimited block -
 #: upstream/_guides/building-substrate-howto.adoc:32
 #, no-wrap
 msgid ""
-"wget -O jvmci.tgz http://download.oracle.com/otn/utilities_drivers/oracle-labs/labsjdk-8u202-jvmci-0.56-darwin-amd64.tar.gz?AuthParam=[GENERATED AUTH TOKEN HERE]\n"
+"wget -O jvmci.tgz http://download.oracle.com/otn/utilities_drivers/oracle-"
+"labs/labsjdk-8u202-jvmci-0.56-darwin-amd64.tar.gz?AuthParam=[GENERATED AUTH "
+"TOKEN HERE]\n"
 "tar -xzvf jvmci.tgz -C /opt\n"
 "# On Mac do labsjdk1.8.0_202-jvmci-0.56/Contents/Home\n"
 "export JAVA_HOME=/opt/labsjdk1.8.0_202-jvmci-0.46/\n"
@@ -75,27 +85,29 @@ msgstr ""
 
 #. type: Block title
 #: upstream/_guides/building-substrate-howto.adoc:34
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "NOTE"
-msgstr ""
+msgstr "ノート"
 
 #. type: Plain text
 #: upstream/_guides/building-substrate-howto.adoc:37
+#, fuzzy
 msgid ""
 "Get the latest version available as graal tends to keep updating the minimum "
 "requirements."
-msgstr ""
+msgstr "graalは最低限の要件を更新し続ける傾向があるので、最新版を入手しましょう。"
 
 #. type: Title ===
 #: upstream/_guides/building-substrate-howto.adoc:38
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Install MX"
-msgstr ""
+msgstr "MXのインストール"
 
 #. type: Plain text
 #: upstream/_guides/building-substrate-howto.adoc:41
+#, fuzzy
 msgid "Now you need to install Graal’s special build tool, `mx`."
-msgstr ""
+msgstr "今、あなたはGraalの特別なビルドツールをインストールする必要があります、 `mx`."
 
 #. type: delimited block -
 #: upstream/_guides/building-substrate-howto.adoc:46
@@ -107,14 +119,15 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/building-substrate-howto.adoc:48
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Checkout and build SubstrateVM"
-msgstr ""
+msgstr "SubstrateVMのチェックアウトとビルド"
 
 #. type: Plain text
 #: upstream/_guides/building-substrate-howto.adoc:51
+#, fuzzy
 msgid "You can now check-out and build Substrate:"
-msgstr ""
+msgstr "これでサブストレートのチェックアウトとビルドができるようになりました。"
 
 #. type: delimited block -
 #: upstream/_guides/building-substrate-howto.adoc:57
@@ -127,14 +140,16 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/building-substrate-howto.adoc:60
+#, fuzzy
 msgid "Once built, you can quickly run the tools in place"
-msgstr ""
+msgstr "一度構築したら、その場でツールを素早く実行することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/building-substrate-howto.adoc:67
 #, no-wrap
 msgid ""
-"echo \"public class HelloWorld { public static void main(String[] args) { System.out.println(\\\"Hello World\\\"); } }\" > HelloWorld.java\n"
+"echo \"public class HelloWorld { public static void main(String[] args) { "
+"System.out.println(\\\"Hello World\\\"); } }\" > HelloWorld.java\n"
 "javac HelloWorld.java\n"
 "mx native-image HelloWorld\n"
 "./helloworld\n"
@@ -142,24 +157,27 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/building-substrate-howto.adoc:69
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Building a custom GraalVM distribution"
-msgstr ""
+msgstr "カスタムGraalVMディストリビューションの構築"
 
 #. type: Plain text
 #: upstream/_guides/building-substrate-howto.adoc:74
+#, fuzzy
 msgid ""
 "In order to create a custom GraalVM distribution (necessary for usage in "
 "quarkus) you must switch to the vm subdirectory, and use special build "
 "options to pick the modules in your distribution."
 msgstr ""
+"カスタムGraalVMディストリビューションを作成するためには、(quarkusで使用するために必要な)vmサブディレクトリに切り替えて、特別なビルドオプションを使用して、ディストリビューションのモジュールを選択する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/building-substrate-howto.adoc:77
+#, fuzzy
 msgid ""
 "For a simple subset VM with just substrate and its native tools execute the "
 "following:"
-msgstr ""
+msgstr "基板とそのネイティブツールだけのシンプルなサブセット VM の場合は、以下を実行します。"
 
 #. type: delimited block -
 #: upstream/_guides/building-substrate-howto.adoc:83
@@ -172,8 +190,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/building-substrate-howto.adoc:86
+#, fuzzy
 msgid "For a stock CE build the following will do:"
-msgstr ""
+msgstr "純正CEビルドの場合は以下のようになります。"
 
 #. type: delimited block -
 #: upstream/_guides/building-substrate-howto.adoc:91
