--- a/i18n/po/ja_JP/_guides/credentials-provider.adoc.po
+++ b/i18n/po/ja_JP/_guides/credentials-provider.adoc.po
@@ -21,12 +21,13 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/credentials-provider.adoc:6
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Quarkus - Using a Credentials Provider"
-msgstr ""
+msgstr "Quarkus - クレデンシャルプロバイダの使用"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:18
+#, fuzzy
 msgid ""
 "Interacting with a datastore typically implies first connecting using "
 "credentials.  Those credentials will allow the client to be identified, "
@@ -37,9 +38,14 @@ msgid ""
 "information in secure stores, such as HashiCorp Vault, Azure Key Vault or "
 "the AWS Secrets Manager to name just a few."
 msgstr ""
+"データストアとのやりとりは、通常、最初にクレデンシャルを使用して接続することを意味します。これらの認証情報によって、クライアントは識別され、認証され、最終的には認可されるようになります。ユーザ名/"
+"パスワードベースの認証は非常に一般的ですが、それだけではありません。このようなクレデンシャル情報はアプリケーションの設定に表示されるかもしれませんが、HashiCorp "
+"Vault、Azure Key Vault、AWS Secrets "
+"Managerなどのセキュアなストアにこのタイプの機密情報を保存することが一般的になってきています。"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:24
+#, fuzzy
 msgid ""
 "To bridge datastores that consume credentials, which can take different "
 "forms, and secure stores that provide those credentials, Quarkus introduces "
@@ -47,45 +53,60 @@ msgid ""
 "extensions may support to consume credentials (e.g. `agroal`), and some "
 "others may implement to produce credentials (e.g. `vault`)."
 msgstr ""
+"さまざまな形式をとることができるクレデンシャルを消費するデータストアと、それらのクレデンシャルを提供する安全なストアの橋渡しをするために、Quarkusでは、 "
+"`Credentials Provider` "
+"と呼ばれる中間的な抽象化を導入しています。これは、一部の拡張機能がクレデンシャルを消費するためにサポートしている場合もあれば（例： `agroal` "
+"）、クレデンシャルを生成するために実装している場合もあります（例： `vault` ）。"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:27
+#, fuzzy
 msgid ""
 "This Service Programming Interface (SPI) may also be used by implementers "
 "that want to support custom providers not yet implemented in Quarkus (e.g. "
 "Azure Key Vault)."
 msgstr ""
+"このService Programming Interface（SPI）は、Quarkusにまだ実装されていないカスタムプロバイダ（Azure Key "
+"Vaultなど）をサポートしたい実装者が使用することもできます。"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:30
+#, fuzzy
 msgid ""
 "Currently, the `Credentials Provider` interface is implemented by the "
 "`vault` extension, and is supported by the following credentials consumer "
 "extensions:"
 msgstr ""
+"現在、 `Credentials Provider` インターフェイスは `vault` "
+"拡張モジュールによって実装されており、以下のクレデンシャル消費者拡張モジュールによってサポートされています。"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:32
+#, fuzzy
 msgid "`agroal`"
-msgstr ""
+msgstr "`agroal`"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:33
+#, fuzzy
 msgid "`reactive-db2-client`"
-msgstr ""
+msgstr "`reactive-db2-client`"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:34
+#, fuzzy
 msgid "`reactive-mysql-client`"
-msgstr ""
+msgstr "`reactive-mysql-client`"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:35
+#, fuzzy
 msgid "`reactive-pg-client`"
-msgstr ""
+msgstr "`reactive-pg-client`"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:39
+#, fuzzy
 msgid ""
 "All extensions that rely on username/password authentication also allow "
 "setting configuration properties in the `application.properties` as an "
@@ -93,64 +114,78 @@ msgid ""
 "credentials are generated (e.g. `Vault Dynamic DB Credentials`) or if a "
 "custom credentials provider is required."
 msgstr ""
+"ユーザー名/パスワード認証に依存するすべての拡張機能では、代替として `application.properties` "
+"で設定プロパティを設定することもできます。しかし、クレデンシャルが生成されている場合 (例: `Vault Dynamic DB "
+"Credentials`) やカスタムのクレデンシャルプロバイダが必要な場合は `Credentials Provider` が唯一の選択肢です。"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:43
+#, fuzzy
 msgid ""
 "This guide will show how to use the `Credentials Provider` provided in the "
 "`vault` extension, then we will look at implementing a custom `Credentials "
 "Provider`, and finally we will talk about additional considerations "
 "regarding implementing a `Credentials Provider` in a new extension."
 msgstr ""
+"このガイドでは、 `vault` 拡張モジュールで提供されている `Credentials Provider` の使い方を紹介し、次にカスタム "
+"`Credentials Provider` の実装について見ていき、最後に新しい拡張モジュールで `Credentials Provider` "
+"を実装する際の追加考慮事項について説明します。"
 
 #. type: Title ==
 #: upstream/_guides/credentials-provider.adoc:46
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Prerequisites"
-msgstr ""
+msgstr "前提条件"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:49
+#, fuzzy
 msgid "To complete this guide, you need:"
-msgstr ""
+msgstr "このガイドを完成させるには、以下のものが必要です。"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:51
+#, fuzzy
 msgid "roughly 20 minutes"
-msgstr ""
+msgstr "ざっと20分"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:52
+#, fuzzy
 msgid "an IDE"
-msgstr ""
+msgstr "アイディーイーイー"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:53
+#, fuzzy
 msgid "JDK 1.8+ installed with `JAVA_HOME` configured appropriately"
-msgstr ""
+msgstr "JDK 1.8+ がインストールされ、 `JAVA_HOME` が適切に設定されています。"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:54
+#, fuzzy
 msgid "Apache Maven {maven-version}"
-msgstr ""
+msgstr "Apache Maven {maven-version} の場合"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:55
+#, fuzzy
 msgid "Docker installed"
-msgstr ""
+msgstr "Dockerのインストール"
 
 #. type: Title ==
 #: upstream/_guides/credentials-provider.adoc:56
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Vault Credentials Provider"
-msgstr ""
+msgstr "Vault Credentials Provider"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:59
+#, fuzzy
 msgid ""
 "To configure a `Vault Credentials Provider` you need to provide the "
 "following properties:"
-msgstr ""
+msgstr "`Vault Credentials Provider` を設定するには、以下のプロパティを提供する必要があります。"
 
 #. type: delimited block -
 #: upstream/_guides/credentials-provider.adoc:63
@@ -160,30 +195,40 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:66
+#, fuzzy
 msgid ""
 "The `<name>` will be used in the consumer to refer to this provider. The "
 "`<property>` and `<value>` fields are specific to the `Vault Credentials "
 "Provider`. For complete details, please refer to the {vault-datasource-"
 "guide}."
 msgstr ""
+"`&amp;lt;name&amp;gt;` は、消費者がこのプロバイダを参照するために使用されます。 "
+"`&amp;lt;property&amp;gt;` および `&amp;lt;value&amp;gt;` フィールドは、 `Vault "
+"Credentials Provider`.完全な詳細については、{vault-datasource-guide}を参照してください。"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:68
+#, fuzzy
 msgid "For instance:"
-msgstr ""
+msgstr "例えば"
 
 #. type: delimited block -
 #: upstream/_guides/credentials-provider.adoc:72
 #, no-wrap
-msgid "quarkus.vault.credentials-provider.mydatabase.kv-path=myapps/vault-quickstart/db\n"
+msgid ""
+"quarkus.vault.credentials-provider.mydatabase.kv-path=myapps/vault-"
+"quickstart/db\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:75
+#, fuzzy
 msgid ""
 "Once defined, the `mydatabase` provider can be used in any extension that "
 "supports the `Credentials Provider` interface. For instance in `agroal`:"
 msgstr ""
+"一度定義すると、 `mydatabase` プロバイダは `Credentials Provider` "
+"インターフェイスをサポートするすべての拡張機能で使用することができます。例えば、 `agroal`."
 
 #. type: delimited block -
 #: upstream/_guides/credentials-provider.adoc:83
@@ -198,6 +243,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:90
+#, fuzzy
 msgid ""
 "Note that `quarkus.datasource.username` is the original `agroal` property, "
 "whereas the `password` property is not included because the value will come "
@@ -207,25 +253,32 @@ msgid ""
 "do support the ability to fetch both the username and password from the "
 "provider, or just the password."
 msgstr ""
+"`quarkus.datasource.username` `mydatabase` が元々の プロパティであるのに対し、 "
+"プロパティは含まれていないことに注意してください。別の方法としては、Vault でユーザー名とパスワードの両方を定義し、設定から "
+"プロパティを削除する方法があります。すべての消費型拡張機能は、ユーザー名とパスワードの両方をプロバイダから取得する機能、またはパスワードのみを取得する機能をサポートしています。 "
+"`agroal` `password` `quarkus.datasource.username`"
 
 #. type: Title ==
 #: upstream/_guides/credentials-provider.adoc:91
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Custom Credentials Provider"
-msgstr ""
+msgstr "カスタム認証情報プロバイダ"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:94
+#, fuzzy
 msgid ""
 "Implementing a custom credentials provider is the only option when a vault "
 "product is not yet supported in Quarkus, or if credentials need to be "
 "retrieved from a custom store."
 msgstr ""
+"カスタム認証情報プロバイダの実装は、QuarkusでVault製品がまだサポートされていない場合や、カスタムストアから認証情報を取得する必要がある場合の唯一のオプションです。"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:96
+#, fuzzy
 msgid "The only interface to implement is:"
-msgstr ""
+msgstr "実装するインターフェースはこれだけです。"
 
 #. type: delimited block -
 #: upstream/_guides/credentials-provider.adoc:100
@@ -244,7 +297,8 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_guides/credentials-provider.adoc:105
 #, no-wrap
-msgid "    Map<String, String> getCredentials(String credentialsProviderName);\n"
+msgid ""
+"    Map<String, String> getCredentials(String credentialsProviderName);\n"
 msgstr ""
 
 #. type: delimited block -
@@ -256,22 +310,27 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:110
+#, fuzzy
 msgid ""
 "`USER_PROPERTY_NAME` and `PASSWORD_PROPERTY_NAME` are standard properties "
 "that should be recognized by any consuming extension that support username/"
 "password based authentication."
 msgstr ""
+"`USER_PROPERTY_NAME` と `PASSWORD_PROPERTY_NAME` は、ユーザ名/"
+"パスワードベースの認証をサポートするすべてのコンシューマー拡張機能で認識されるべき標準的なプロパティです。"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:112
+#, fuzzy
 msgid ""
 "It is required that implementations be valid `@ApplicationScoped` CDI beans."
-msgstr ""
+msgstr "実装は有効な `@ApplicationScoped` CDI ビーンズであることが要求されます。"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:114
+#, fuzzy
 msgid "Here is a simple example:"
-msgstr ""
+msgstr "簡単な例を挙げてみます。"
 
 #. type: delimited block -
 #: upstream/_guides/credentials-provider.adoc:120
@@ -287,7 +346,8 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\t@Override\n"
-"\tpublic Map<String, String> getCredentials(String credentialsProviderName) {\n"
+"\tpublic Map<String, String> getCredentials(String credentialsProviderName) "
+"{\n"
 msgstr ""
 
 #. type: delimited block -
@@ -303,13 +363,16 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:134
-msgid "Note that we decided here to return both the username and the password."
-msgstr ""
+#, fuzzy
+msgid ""
+"Note that we decided here to return both the username and the password."
+msgstr "ここでは、ユーザー名とパスワードの両方を返すことにしました。"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:136
+#, fuzzy
 msgid "This provider may be used in a datasource definition like this:"
-msgstr ""
+msgstr "このプロバイダは、次のようなデータソースの定義で使用することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/credentials-provider.adoc:142
@@ -317,15 +380,17 @@ msgstr ""
 msgid ""
 "quarkus.datasource.db-kind=postgresql\n"
 "quarkus.datasource.credentials-provider=custom\n"
-"quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5431/hibernate_orm_test\n"
+"quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5431/"
+"hibernate_orm_test\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:145
+#, fuzzy
 msgid ""
 "It is also possible to pass configuration properties to the provider using "
 "standard MicroProfile Config injection:"
-msgstr ""
+msgstr "標準的なMicroProfile Configインジェクションを使用して、設定プロパティをプロバイダに渡すことも可能です。"
 
 #. type: delimited block -
 #: upstream/_guides/credentials-provider.adoc:149
@@ -335,14 +400,14 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:152
+#, fuzzy
 msgid "And in the provider implementation:"
-msgstr ""
+msgstr "そして、プロバイダの実装では"
 
 #. type: delimited block -
 #: upstream/_guides/credentials-provider.adoc:157
 #, no-wrap
-msgid ""
-"@Inject\n"
+msgid "@Inject\n"
 "Config config;\n"
 msgstr ""
 
@@ -351,36 +416,40 @@ msgstr ""
 #, no-wrap
 msgid ""
 "@Override\n"
-"public Map<String, String> getCredentials(String credentialsProviderName) {\n"
+"public Map<String, String> getCredentials(String credentialsProviderName) "
+"{\n"
 msgstr ""
 
 #. type: delimited block -
 #: upstream/_guides/credentials-provider.adoc:163
 #, no-wrap
 msgid ""
-"    System.out.println(\"MyCredentialsProvider called with foo=\" + config.getValue(credentialsProviderName + \".foo\", String.class));\n"
+"    System.out.println(\"MyCredentialsProvider called with foo=\" + config."
+"getValue(credentialsProviderName + \".foo\", String.class));\n"
 "    ...\n"
 msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/credentials-provider.adoc:165
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "New Credentials Provider extension"
-msgstr ""
+msgstr "新しいクレデンシャルプロバイダ拡張機能"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:168
+#, fuzzy
 msgid ""
 "When creating a custom credentials provider in a new extension, there are a "
 "few additional considerations."
-msgstr ""
+msgstr "新しい拡張機能でカスタムクレデンシャルプロバイダを作成する際には、いくつかの追加考慮事項があります。"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:170
+#, fuzzy
 msgid ""
 "First, you need to name it to avoid collisions in case multiple credentials "
 "providers are available in the project:"
-msgstr ""
+msgstr "まず、プロジェクト内で複数のクレデンシャルプロバイダが利用可能な場合の衝突を避けるために、名前を付ける必要があります。"
 
 #. type: delimited block -
 #: upstream/_guides/credentials-provider.adoc:177
@@ -394,10 +463,11 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:180
+#, fuzzy
 msgid ""
 "It is the responsibility of the consumer to allow a `credentials-provider-"
 "name` property:"
-msgstr ""
+msgstr "`credentials-provider-name` の物件を許可するのは消費者の責任です。"
 
 #. type: delimited block -
 #: upstream/_guides/credentials-provider.adoc:185
@@ -409,30 +479,38 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:189
+#, fuzzy
 msgid ""
 "The extension should allow runtime config, such as the "
 "`CredentialsProviderConfig` from the `vault` extension to configure any "
 "custom property in the provider. For an AWS Secrets Manager extension, this "
 "could be:"
 msgstr ""
+"拡張機能では、 `vault` 拡張機能の `CredentialsProviderConfig` "
+"のように、ランタイムコンフィグでプロバイダ内の任意のカスタムプロパティを設定できるようにしておく必要があります。AWS Secrets "
+"Managerエクステンションの場合は、これが可能です。"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:191
+#, fuzzy
 msgid "`region`"
-msgstr ""
+msgstr "`region`"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:192
+#, fuzzy
 msgid "`credentials-type`"
-msgstr ""
+msgstr "`credentials-type`"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:193
+#, fuzzy
 msgid "`secrets-id`"
-msgstr ""
+msgstr "`secrets-id`"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:197
+#, fuzzy
 msgid ""
 "Note also that some consumers such as `agroal` will add to their connection "
 "configuration any properties returned by the credentials provider, not just "
@@ -440,3 +518,5 @@ msgid ""
 "limit the properties to what would be understood by consumers, or provide "
 "appropriate configuration options to support different modes."
 msgstr ""
+"また、 `agroal` "
+"のような消費者の中には、ユーザー名とパスワードだけでなく、クレデンシャル・プロバイダが返すプロパティを接続構成に追加するものがあることにも注意してください。したがって、新しいクレデンシャル・プロバイダを設計する際には、プロパティを消費者が理解できるものに限定するか、異なるモードをサポートするための適切な構成オプションを提供してください。"
