--- a/i18n/po/ja_JP/_guides/faq.adoc.po
+++ b/i18n/po/ja_JP/_guides/faq.adoc.po
@@ -18,57 +18,69 @@ msgstr ""
 
 #. type: Title =
 #: upstream/_guides/faq.adoc:1
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Quarkus - Frequently Asked Questions"
-msgstr ""
+msgstr "Quarkus - よくある質問"
 
 #. type: Title ==
 #: upstream/_guides/faq.adoc:15
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Native compilation"
-msgstr ""
+msgstr "ネイティブコンパイル"
 
 #. type: Labeled list
 #: upstream/_guides/faq.adoc:17
-#, no-wrap
-msgid "Native executable fails on macOS with `error: unknown type name 'uint8_t'`"
-msgstr ""
+#, no-wrap, fuzzy
+msgid ""
+"Native executable fails on macOS with `error: unknown type name 'uint8_t'`"
+msgstr "で macOS でのネイティブ実行ファイルの失敗 `error: unknown type name 'uint8_t'`"
 
 #. type: Plain text
 #: upstream/_guides/faq.adoc:21
+#, fuzzy
 msgid ""
 "Your macOS has the wrong `*.h` files compared to the OS and no gcc "
 "compilation will work.  This can happen when you migrate from versions of "
 "the OS.  See https://stackoverflow.com/questions/48029309/cannot-compile-any-"
 "c-programs-error-unknown-type-name-uint8-t"
 msgstr ""
+"あなたのmacOSはOSと比較して `*.h` "
+"ファイルが間違っていて、gccコンパイルが動作しません。これはOSのバージョンから移行したときに起こる可能性があります。 https://"
+"stackoverflow.com/questions/48029309/cannot-compile-any-c-programs-error-"
+"unknown-type-name-uint8-t 。"
 
 #. type: Plain text
 #: upstream/_guides/faq.adoc:23
+#, fuzzy
 msgid "The solution is to"
-msgstr ""
+msgstr "解決策は、以下の通りです。"
 
 #. type: Plain text
 #: upstream/_guides/faq.adoc:25
+#, fuzzy
 msgid "`sudo mv /usr/local/include /usr/local/include.old`"
-msgstr ""
+msgstr "`sudo mv /usr/local/include /usr/local/include.old`"
 
 #. type: Plain text
 #: upstream/_guides/faq.adoc:26
+#, fuzzy
 msgid "Reinstall XCode for good measure"
-msgstr ""
+msgstr "念のためにXCodeを再インストールします。"
 
 #. type: Plain text
 #: upstream/_guides/faq.adoc:27
+#, fuzzy
 msgid "(optional?) `brew install llvm`"
-msgstr ""
+msgstr "(オプション？) `brew install llvm`"
 
 #. type: Plain text
 #: upstream/_guides/faq.adoc:28
+#, fuzzy
 msgid "generally reinstall your brew dependencies with native compilation"
-msgstr ""
+msgstr "一般的には、ネイティブコンパイルで brew の依存関係を再インストールします。"
 
 #. type: Plain text
 #: upstream/_guides/faq.adoc:29
+#, fuzzy
 msgid "The executable should work now."
-msgstr ""
+msgstr "実行ファイルが動作するようになりました。"
