--- a/i18n/po/ja_JP/_guides/flyway.adoc.po
+++ b/i18n/po/ja_JP/_guides/flyway.adoc.po
@@ -21,65 +21,77 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/flyway.adoc:6
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Quarkus - Using Flyway"
-msgstr ""
+msgstr "Quarkus - フライウェイの使用"
 
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:13
+#, fuzzy
 msgid ""
 "https://flywaydb.org/[Flyway] is a popular database migration tool that is "
 "commonly used in JVM environments."
-msgstr ""
+msgstr "link:https://flywaydb.org/[Flyway]は、JVM環境でよく使われているデータベース移行ツールです。"
 
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:15
+#, fuzzy
 msgid ""
 "Quarkus provides first class support for using Flyway as will be explained "
 "in this guide."
-msgstr ""
+msgstr "Quarkusでは、このガイドで説明するように、Flywayを使用するためのファーストクラスのサポートを提供しています。"
 
 #. type: Title ==
 #: upstream/_guides/flyway.adoc:16
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Setting up support for Flyway"
-msgstr ""
+msgstr "フライウェイのサポート設定"
 
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:19
+#, fuzzy
 msgid "To start using Flyway with your project, you just need to:"
-msgstr ""
+msgstr "プロジェクトでFlywayを使い始めるには、以下のことを行う必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:21
+#, fuzzy
 msgid ""
 "add your migrations to the `{migrations-path}` folder as you usually do with "
 "Flyway"
-msgstr ""
+msgstr "Flywayで通常行うように、移行を `{migrations-path}` フォルダに追加します。"
 
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:23
+#, fuzzy
 msgid ""
 "activate the `migrate-at-start` option to migrate the schema automatically "
 "or inject the `Flyway` object and run your migration as you normally do"
 msgstr ""
+"`migrate-at-start` オプションを有効にしてスキーマを自動的に移行するか、 `Flyway` "
+"オブジェクトを注入して通常のように移行を実行します。"
 
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:25
+#, fuzzy
 msgid "In your `pom.xml`, add the following dependencies:"
-msgstr ""
+msgstr "あなたの `pom.xml` で、以下の依存関係を追加します。"
 
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:27
+#, fuzzy
 msgid "the Flyway extension"
-msgstr ""
+msgstr "フライウェイ延長線"
 
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:28
+#, fuzzy
 msgid ""
 "your JDBC driver extension (`quarkus-jdbc-postgresql`, `quarkus-jdbc-h2`, "
 "`quarkus-jdbc-mariadb`, ...)"
 msgstr ""
+"お使いの JDBC ドライバの拡張子 ( `quarkus-jdbc-postgresql`, `quarkus-jdbc-h2`, `quarkus-"
+"jdbc-mariadb`, ...)"
 
 #. type: delimited block -
 #: upstream/_guides/flyway.adoc:37
@@ -107,6 +119,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:51
+#, fuzzy
 msgid ""
 "Flyway support relies on the Quarkus datasource config.  It can be "
 "customized for the default datasource as well as for every <<multiple-"
@@ -115,11 +128,16 @@ msgid ""
 "schema.  Also, you can customize the Flyway behaviour by using the following "
 "properties:"
 msgstr ""
+"Flywayのサポートは、Quarkusのデータソース設定に依存しています。この設定は、デフォルトのデータソースだけでなく、 link:"
+"#multiple-datasources[名前の付いた]すべての link:#multiple-"
+"datasources[データソース]に対してカスタマイズすることができます。まず、Flywayがスキーマを管理できるようにするために、データソース設定を "
+"`{config-file}` ファイルに追加する必要があります。また、以下のプロパティを使用して、Flywayの動作をカスタマイズすることができます。"
 
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:56
+#, fuzzy
 msgid "The following is an example for the `{config-file}` file:"
-msgstr ""
+msgstr "`{config-file}` ファイルの例は以下の通りです。"
 
 #. type: delimited block -
 #: upstream/_guides/flyway.adoc:64
@@ -158,10 +176,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:81
+#, fuzzy
 msgid ""
 "Add a SQL migration to the default folder following the Flyway naming "
 "conventions: `{migrations-path}/V1.0.0__Quarkus.sql`"
 msgstr ""
+"Flywayの命名規則に従って、デフォルトフォルダにSQLマイグレーションを追加します。 `{migrations-path}/V1.0."
+"0__Quarkus.sql`"
 
 #. type: delimited block -
 #: upstream/_guides/flyway.adoc:91
@@ -178,10 +199,11 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:94
+#, fuzzy
 msgid ""
 "Now you can start your application and Quarkus will run the Flyway's migrate "
 "method according to your config:"
-msgstr ""
+msgstr "これでアプリケーションを起動することができ、Quarkusは設定に従ってFlywayのマイグレーションメソッドを実行します。"
 
 #. type: delimited block -
 #: upstream/_guides/flyway.adoc:102 upstream/_guides/flyway.adoc:169
@@ -207,21 +229,25 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:111 upstream/_guides/flyway.adoc:189
+#, fuzzy
 msgid "Inject the Flyway object if you want to use it directly"
-msgstr ""
+msgstr "Flywayオブジェクトを直接使用したい場合はインジェクトします。"
 
 #. type: Title ==
 #: upstream/_guides/flyway.adoc:112
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Multiple datasources"
-msgstr ""
+msgstr "複数のデータソース"
 
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:116
+#, fuzzy
 msgid ""
 "Flyway can be configured for multiple datasources.  The Flyway properties "
 "are prefixed exactly the same way as the named datasources, for example:"
 msgstr ""
+"Flyway は、複数のデータソースに対して設定することができます。Flyway "
+"のプロパティは、例えば、名前の付いたデータソースと全く同じように接頭辞が付けられます。"
 
 #. type: delimited block -
 #: upstream/_guides/flyway.adoc:123
@@ -279,44 +305,53 @@ msgstr ""
 msgid ""
 "# Flyway configuration for the \"inventory\" datasource\n"
 "quarkus.flyway.inventory.schemas=INVENTORY_TEST_SCHEMA\n"
-"quarkus.flyway.inventory.locations=db/inventory/location1,db/inventory/location2\n"
+"quarkus.flyway.inventory.locations=db/inventory/location1,db/inventory/"
+"location2\n"
 "quarkus.flyway.inventory.migrate-at-start=true\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:152
+#, fuzzy
 msgid ""
 "Notice there's an extra bit in the key.  The syntax is as follows: `quarkus."
 "flyway.[optional name.][datasource property]`."
 msgstr ""
+"キーに余分なビットがあることに注意してください。構文は以下の通りです。 `quarkus.flyway.[optional name."
+"][datasource property]`."
 
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:154
+#, fuzzy
 msgid ""
 "Without configuration, Flyway is set up for every datasource using the "
 "default settings."
-msgstr ""
+msgstr "設定なしでは、Flywayはデフォルト設定を使用して各データソースに対して設定されます。"
 
 #. type: Title ==
 #: upstream/_guides/flyway.adoc:155
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Using the Flyway object"
-msgstr ""
+msgstr "フライウェイオブジェクトを使用して"
 
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:158
+#, fuzzy
 msgid ""
 "In case you are interested in using the `Flyway` object directly, you can "
 "inject it as follows:"
-msgstr ""
+msgstr "念のため、 `Flyway` オブジェクトを直接使いたい場合は、以下のように注入します。"
 
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:161
+#, fuzzy
 msgid ""
 "If you enabled the `quarkus.flyway.migrate-at-start` property, by the time "
 "you use the Flyway instance, Quarkus will already have run the migrate "
 "operation"
 msgstr ""
+"`quarkus.flyway.migrate-at-start` "
+"プロパティを有効にした場合、Flywayインスタンスを使用する時点で、Quarkusはすでに移行操作を実行しています。"
 
 #. type: delimited block -
 #: upstream/_guides/flyway.adoc:173
@@ -330,8 +365,7 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_guides/flyway.adoc:177
 #, no-wrap
-msgid ""
-"    @Inject\n"
+msgid "    @Inject\n"
 "    @Named(\"flyway_users\") <3>\n"
 "    Flyway flywayForUsers;\n"
 msgstr ""
@@ -352,17 +386,20 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:190
+#, fuzzy
 msgid ""
 "Inject Flyway for named datasources using the Quarkus `FlywayDataSource` "
 "qualifier"
-msgstr ""
+msgstr "Quarkus `FlywayDataSource` の修飾子を使用して、指定されたデータソースに Flyway を注入します。"
 
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:191
+#, fuzzy
 msgid "Inject Flyway for named datasources"
-msgstr ""
+msgstr "指定されたデータソースにFlywayを注入する"
 
 #. type: Plain text
 #: upstream/_guides/flyway.adoc:192
+#, fuzzy
 msgid "Use the Flyway instance directly"
-msgstr ""
+msgstr "Flyway インスタンスを直接使用する"
