--- a/i18n/po/ja_JP/_guides/grpc-service-consumption.adoc.po
+++ b/i18n/po/ja_JP/_guides/grpc-service-consumption.adoc.po
@@ -21,51 +21,60 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/grpc-service-consumption.adoc:6
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Consuming a gRPC Service"
-msgstr ""
+msgstr "gRPC サービスを消費する"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:11
+#, fuzzy
 msgid "gRPC services can be injected in your application code."
-msgstr ""
+msgstr "gRPC サービスは、アプリケーションのコードに注入することができます。"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:14
+#, fuzzy
 msgid ""
 "Consuming gRPC services requires the gRPC classes to be generated.  Place "
 "your `proto` files in `src/main/proto` and run `mvn compile`."
 msgstr ""
+"gRPC サービスを消費するには、gRPC クラスを生成する必要があります。 `proto` ファイルを `src/main/proto` に置き、 "
+"`mvn compile`."
 
 #. type: Title ==
 #: upstream/_guides/grpc-service-consumption.adoc:15
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Stubs and Injection"
-msgstr ""
+msgstr "スタブと注射"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:19
+#, fuzzy
 msgid ""
 "gRPC generation provides several stubs, providing different way to consume a "
 "service.  Quarkus gRPC can inject:"
 msgstr ""
+"gRPC生成はいくつかのスタブを提供し、サービスを消費するためのさまざまな方法を提供します。QuarkusのgRPCは注入することができます。"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:21
+#, fuzzy
 msgid "blocking stubs"
-msgstr ""
+msgstr "ブロッキングスタブ"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:22
+#, fuzzy
 msgid "reactive stubs based on Mutiny"
-msgstr ""
+msgstr "Mutinyをベースにしたリアクティブスタブ"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:24
+#, fuzzy
 msgid ""
 "In addition, it also can inject the gRPC `io.grpc.Channel`, that lets you "
 "create other types of stubs."
-msgstr ""
+msgstr "さらに、それはまた、他のタイプのスタブを作成することができますgRPC `io.grpc.Channel` を注入することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/grpc-service-consumption.adoc:29
@@ -86,17 +95,17 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_guides/grpc-service-consumption.adoc:35
 #, no-wrap
-msgid ""
-"@Inject @GrpcService(\"hello-service\")\n"
+msgid "@Inject @GrpcService(\"hello-service\")\n"
 "Channel channel;\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:39
+#, fuzzy
 msgid ""
 "The stub class names are computed from the service name.  For example, if "
 "you use `Greeter` as service name as in:"
-msgstr ""
+msgstr "スタブクラス名はサービス名から計算されます。例えば、サービス名として `Greeter` とした場合。"
 
 #. type: delimited block -
 #: upstream/_guides/grpc-service-consumption.adoc:45
@@ -109,38 +118,47 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:49
+#, fuzzy
 msgid ""
 "The Mutiny stub name is: `MutinyGreeterGrpc.MutinyGreeterStub` The blocking "
 "stub name is: `GreeterGrpc.GreeterBlockingStub`"
 msgstr ""
+"Mutinyのスタブ名は `MutinyGreeterGrpc.MutinyGreeterStub` ブロッキングのスタブ名は。 "
+"`GreeterGrpc.GreeterBlockingStub`"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:53
+#, fuzzy
 msgid ""
 "Client injection must be qualified using `@GrpcService`.  This annotation "
 "indicates the configuration prefix used to configure the service.  For "
 "example, if you set it to `hello-service`, configuring the host of the "
 "service is done using `hello-service.host`."
 msgstr ""
+"クライアントインジェクションは、 `@GrpcService` "
+"を使用して修飾する必要があります。このアノテーションは、サービスを構成するために使用する構成プレフィックスを示します。たとえば、 `hello-"
+"service` に設定した場合、サービスのホストの構成は `hello-service.host` を使用して行われます。"
 
 #. type: Title ==
 #: upstream/_guides/grpc-service-consumption.adoc:54
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Examples"
-msgstr ""
+msgstr "例としては、以下のようなものがあります。"
 
 #. type: Title ===
 #: upstream/_guides/grpc-service-consumption.adoc:56
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Using a blocking and mutiny stubs"
-msgstr ""
+msgstr "ブロッキングとミューティニーのスタブを使って"
 
 #. type: delimited block -
 #: upstream/_guides/grpc-service-consumption.adoc:62
 #, no-wrap
 msgid ""
-"@Inject @GrpcService(\"hello\") GreeterGrpc.GreeterBlockingStub blockingHelloService;\n"
-"@Inject @GrpcService(\"hello\") MutinyGreeterGrpc.MutinyGreeterStub mutinyHelloService;\n"
+"@Inject @GrpcService(\"hello\") GreeterGrpc.GreeterBlockingStub "
+"blockingHelloService;\n"
+"@Inject @GrpcService(\"hello\") MutinyGreeterGrpc.MutinyGreeterStub "
+"mutinyHelloService;\n"
 msgstr ""
 
 #. type: delimited block -
@@ -150,7 +168,8 @@ msgid ""
 "@GET\n"
 "@Path(\"/blocking/{name}\")\n"
 "public String helloBlocking(@PathParam(\"name\") String name) {\n"
-"    return blockingHelloService.sayHello(HelloRequest.newBuilder().setName(name).build()).getMessage();\n"
+"    return blockingHelloService.sayHello(HelloRequest.newBuilder()."
+"setName(name).build()).getMessage();\n"
 "}\n"
 msgstr ""
 
@@ -161,28 +180,31 @@ msgid ""
 "@GET\n"
 "@Path(\"/mutiny/{name}\")\n"
 "public Uni<String> helloMutiny(@PathParam(\"name\") String name) {\n"
-"    return mutinyHelloService.sayHello(HelloRequest.newBuilder().setName(name).build())\n"
+"    return mutinyHelloService.sayHello(HelloRequest.newBuilder()."
+"setName(name).build())\n"
 "            .onItem().transform(HelloReply::getMessage);\n"
 "}\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:78
+#, fuzzy
 msgid ""
 "Note that in this example, the `quarkus.grpc.clients.hello.host` property "
 "must be set."
-msgstr ""
+msgstr "この例では、 `quarkus.grpc.clients.hello.host` プロパティを設定する必要があることに注意してください。"
 
 #. type: Title ===
 #: upstream/_guides/grpc-service-consumption.adoc:79
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Handling streams"
-msgstr ""
+msgstr "ストリームの取り扱い"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:82
+#, fuzzy
 msgid "gRPC allows sending and receiving streams:"
-msgstr ""
+msgstr "gRPCでは、ストリームの送受信が可能です。"
 
 #. type: delimited block -
 #: upstream/_guides/grpc-service-consumption.adoc:90
@@ -191,14 +213,16 @@ msgid ""
 "service Streaming {\n"
 "    rpc Source(Empty) returns (stream Item) {} // Returns a stream\n"
 "    rpc Sink(stream Item) returns (Empty) {}   // Reads a stream\n"
-"    rpc Pipe(stream Item) returns (stream Item) {}  // Reads a streams and return a streams\n"
+"    rpc Pipe(stream Item) returns (stream Item) {}  // Reads a streams and "
+"return a streams\n"
 "}\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:93
+#, fuzzy
 msgid "Using the Mutiny stub, you can interact with these as follows:"
-msgstr ""
+msgstr "Mutinyのスタブを使用すると、以下のようにこれらと対話することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/grpc-service-consumption.adoc:97
@@ -241,7 +265,9 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_guides/grpc-service-consumption.adoc:116
 #, no-wrap
-msgid "    @Inject @GrpcService(\"streaming\") MutinyStreamingGrpc.MutinyStreamingStub client;\n"
+msgid ""
+"    @Inject @GrpcService(\"streaming\") MutinyStreamingGrpc."
+"MutinyStreamingStub client;\n"
 msgstr ""
 
 #. type: delimited block -
@@ -294,45 +320,51 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/grpc-service-consumption.adoc:148
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Client configuration"
-msgstr ""
+msgstr "クライアント設定"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:151
+#, fuzzy
 msgid ""
 "For each gRPC service you inject in your application, you can configure the "
 "following attributes:"
-msgstr ""
+msgstr "アプリケーションに注入する各gRPCサービスに対して、以下の属性を設定することができます。"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:155
+#, fuzzy
 msgid "The `service-name` is the name set in the `@GrpcService`."
-msgstr ""
+msgstr "`service-name` は、 `@GrpcService`."
 
 #. type: Title ==
 #: upstream/_guides/grpc-service-consumption.adoc:156
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Example of configuration"
-msgstr ""
+msgstr "構成例"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:160
+#, fuzzy
 msgid ""
 "The 2 following examples uses _hello_ as service name.  Don't forget to "
 "replace it with the name you used in in the `@GrpcService` annotation."
 msgstr ""
+"以下の2つの例では、サービス名として _hello_を使用しています。 `@GrpcService` "
+"アノテーションで使用した名前に置き換えることを忘れないでください。"
 
 #. type: Title ===
 #: upstream/_guides/grpc-service-consumption.adoc:161
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Enabling TLS"
-msgstr ""
+msgstr "TLSを有効にする"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:164
+#, fuzzy
 msgid "To enable TLS, use the following configuration:"
-msgstr ""
+msgstr "TLSを有効にするには、以下の設定を使用します。"
 
 #. type: delimited block -
 #: upstream/_guides/grpc-service-consumption.adoc:169
@@ -344,19 +376,22 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:172
+#, fuzzy
 msgid "When SSL/TLS is configured, `plain-text` is automatically disabled."
-msgstr ""
+msgstr "SSL/TLSを設定すると、 `plain-text` は自動的に無効になります。"
 
 #. type: Title ===
 #: upstream/_guides/grpc-service-consumption.adoc:173
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "TLS with Mutual Auth"
-msgstr ""
+msgstr "相互認証付きTLS"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:176
-msgid "To use TLS with mutual authentication, use the following configuration:"
-msgstr ""
+#, fuzzy
+msgid ""
+"To use TLS with mutual authentication, use the following configuration:"
+msgstr "相互認証付きのTLSを使用するには、以下の設定を使用します。"
 
 #. type: delimited block -
 #: upstream/_guides/grpc-service-consumption.adoc:184
