--- a/i18n/po/ja_JP/_guides/grpc.adoc.po
+++ b/i18n/po/ja_JP/_guides/grpc.adoc.po
@@ -21,73 +21,91 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/grpc.adoc:6
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Quarkus gRPC"
-msgstr ""
+msgstr "クォークラスジーアールピーシー"
 
 #. type: Plain text
 #: upstream/_guides/grpc.adoc:13
+#, fuzzy
 msgid ""
 "https://grpc.io/[gRPC] is a high-performance RPC framework.  It can "
 "efficiently connect services implemented using various languages and "
 "frameworks.  It is also applicable in the last mile of distributed computing "
 "to connect devices, mobile applications, and browsers to backend services."
 msgstr ""
+"link:https://grpc.io/"
+"[gRPCは]高性能なRPCフレームワークです。様々な言語やフレームワークを使って実装されたサービスを効率的に接続することができます。また、デバイスやモバイルアプリケーション、ブラウザとバックエンドサービスを接続するために、分散コンピューティングのラストワンマイルにも適用可能です。"
 
 #. type: Plain text
 #: upstream/_guides/grpc.adoc:16
+#, fuzzy
 msgid ""
 "In general, gRPC uses HTTP/2, TLS, and https://developers.google.com/"
 "protocol-buffers[Protobuf (Protocol Buffers)].  In a microservice "
 "architecture, gRPC is an efficient, type-safe alternative to HTTP."
 msgstr ""
+"一般的に、gRPCはHTTP/2、TLS、 link:https://developers.google.com/protocol-"
+"buffers[Protobuf（プロトコルバッファ）を]使用します。マイクロサービスアーキテクチャでは、gRPCはHTTPに代わる効率的で型安全な代替手段です。"
 
 #. type: Plain text
 #: upstream/_guides/grpc.adoc:19
+#, fuzzy
 msgid "The Quarkus gRPC extension integrate gRPC in Quarkus application.  It:"
-msgstr ""
+msgstr "QuarkusのgRPC拡張機能は、QuarkusアプリケーションにgRPCを統合します。それは"
 
 #. type: Plain text
 #: upstream/_guides/grpc.adoc:21
+#, fuzzy
 msgid "supports implementing gRPC services"
-msgstr ""
+msgstr "gRPCサービスの実装をサポートしています。"
 
 #. type: Plain text
 #: upstream/_guides/grpc.adoc:22
+#, fuzzy
 msgid "supports consuming gRPC services"
-msgstr ""
+msgstr "gRPC サービスの消費をサポートしています。"
 
 #. type: Plain text
 #: upstream/_guides/grpc.adoc:23
+#, fuzzy
 msgid ""
 "integrates with the reactive engine from Quarkus as well as the reactive "
 "development model"
-msgstr ""
+msgstr "は、Quarkusのリアクティブエンジンやリアクティブ開発モデルと統合されています。"
 
 #. type: Plain text
 #: upstream/_guides/grpc.adoc:24
+#, fuzzy
 msgid ""
 "allows plain-text communication as well as TLS, and TLS with mutual "
 "authentication"
-msgstr ""
+msgstr "平文通信に加えてTLS、相互認証付きのTLSも可能です。"
 
 #. type: Plain text
 #: upstream/_guides/grpc.adoc:26
+#, fuzzy
 msgid ""
 "Quarkus gRPC is based on https://vertx.io/docs/vertx-grpc/java/[Vert.x gRPC]."
+""
 msgstr ""
+"Quarkus gRPCは link:https://vertx.io/docs/vertx-grpc/java/[Vert.x "
+"gRPCを]ベースにしています。"
 
 #. type: Plain text
 #: upstream/_guides/grpc.adoc:28
+#, fuzzy
 msgid "link:./grpc-getting-started.adoc[Getting Started]"
-msgstr ""
+msgstr "link:./grpc-getting-started.adoc[はじめに]"
 
 #. type: Plain text
 #: upstream/_guides/grpc.adoc:29
+#, fuzzy
 msgid "link:./grpc-service-implementation.adoc[Implementing a gRPC Service]"
-msgstr ""
+msgstr "link:./grpc-service-implementation.adoc[gRPCサービスの実装]"
 
 #. type: Plain text
 #: upstream/_guides/grpc.adoc:29
+#, fuzzy
 msgid "link:./grpc-service-consumption.adoc[Consuming a gRPC Service]"
-msgstr ""
+msgstr "link:./grpc-service-consumption.adoc[gRPC サービスを消費する]"
