--- a/i18n/po/ja_JP/_guides/microprofile-metrics.adoc.po
+++ b/i18n/po/ja_JP/_guides/microprofile-metrics.adoc.po
@@ -21,89 +21,109 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/microprofile-metrics.adoc:6
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Quarkus - MicroProfile Metrics"
-msgstr ""
+msgstr "Quarkus - MicroProfile Metrics"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:12
+#, fuzzy
 msgid ""
 "This guide demonstrates how your Quarkus application can utilize the "
 "MicroProfile Metrics specification through the SmallRye Metrics extension."
 msgstr ""
+"このガイドでは、QuarkusアプリケーションがSmallRye Metrics拡張機能を使用してMicroProfile "
+"Metrics仕様を利用する方法を説明します。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:15
+#, fuzzy
 msgid ""
 "MicroProfile Metrics allows applications to gather various metrics and "
 "statistics that provide insights into what is happening inside the "
 "application."
 msgstr ""
+"MicroProfileメトリクスは、アプリケーションで様々なメトリクスや統計情報を収集して、アプリケーション内で何が起こっているかについての洞察を提供します。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:19
+#, fuzzy
 msgid ""
 "The metrics can be read remotely using JSON format or the OpenMetrics "
 "format, so that they can be processed by additional tools such as "
 "Prometheus, and stored for analysis and visualisation."
 msgstr ""
+"このように、JSON 形式または OpenMetrics 形式を使用してメトリクスをリモートで読み取ることができるため、Prometheus "
+"などの追加ツールで処理したり、分析や可視化のために保存したりすることができます。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:23
+#, fuzzy
 msgid ""
 "Apart from application-specific metrics, which are described in this guide, "
 "you may also utilize built-in metrics exposed by various Quarkus extensions. "
 "These are described in the guide for each particular extension that supports "
 "built-in metrics."
 msgstr ""
+"このガイドで説明されているアプリケーション固有のメトリクスとは別に、Quarkusのさまざまな拡張機能によって公開されているビルトインメトリクスを利用することもできます。これらについては、ビルトインメトリクスをサポートしている各拡張機能のガイドで説明します。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:26
+#, fuzzy
 msgid ""
 "link:micrometer[Micrometer] is the recommended approach to metrics for "
 "Quarkus.  Use the MicroProfile Metrics extension when it's required to "
 "retain MicroProfile specification compatibility."
 msgstr ""
+"link:"
+"micrometer[マイクロメーターは]、Quarkusのメトリクスへの推奨アプローチです。MicroProfile仕様の互換性を維持する必要がある場合は、MicroProfile "
+"Metrics拡張機能を使用します。"
 
 #. type: Title ==
 #: upstream/_guides/microprofile-metrics.adoc:27
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Prerequisites"
-msgstr ""
+msgstr "前提条件"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:30
+#, fuzzy
 msgid "To complete this guide, you need:"
-msgstr ""
+msgstr "このガイドを完成させるには、以下のものが必要です。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:32
+#, fuzzy
 msgid "less than 15 minutes"
-msgstr ""
+msgstr "15分以内"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:33
+#, fuzzy
 msgid "an IDE"
-msgstr ""
+msgstr "アイディーイーイー"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:34
+#, fuzzy
 msgid "JDK 1.8+ installed with `JAVA_HOME` configured appropriately"
-msgstr ""
+msgstr "JDK 1.8+ がインストールされ、 `JAVA_HOME` が適切に設定されています。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:35
+#, fuzzy
 msgid "Apache Maven {maven-version}"
-msgstr ""
+msgstr "Apache Maven {maven-version} の場合"
 
 #. type: Title ==
 #: upstream/_guides/microprofile-metrics.adoc:36
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Architecture"
-msgstr ""
+msgstr "建築"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:40
+#, fuzzy
 msgid ""
 "In this example, we build a very simple microservice which offers one REST "
 "endpoint and that endpoint serves for determining whether a number is prime. "
@@ -111,47 +131,56 @@ msgid ""
 "while responding to user's requests, some metrics are gathered. The meaning "
 "of each metric will be explained later."
 msgstr ""
+"この例では、1つのRESTエンドポイントを提供する非常にシンプルなマイクロサービスを構築し、そのエンドポイントは数値が素数であるかどうかを判断するのに役立ちます。実装クラスは、ユーザのリクエストに応答している間に、いくつかのメトリクスが収集されるように、いくつかのメトリックアノテーションでアノテーションされています。各メトリックの意味は後ほど説明します。"
 
 #. type: Title ==
 #: upstream/_guides/microprofile-metrics.adoc:41
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Solution"
-msgstr ""
+msgstr "解決策"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:45
+#, fuzzy
 msgid ""
 "We recommend that you follow the instructions in the next sections and "
 "create the application step by step.  However, you can go right to the "
 "completed example."
-msgstr ""
+msgstr "次の章で紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、完成した例にそのまま進んでも構いません。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:47
+#, fuzzy
 msgid ""
 "Clone the Git repository: `git clone {quickstarts-clone-url}`, or download "
 "an {quickstarts-archive-url}[archive]."
 msgstr ""
+"Git リポジトリをクローンします: `git clone {quickstarts-clone-url}` 、または {quickstarts-"
+"archive-url}[archive] をダウンロードしてください。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:49
+#, fuzzy
 msgid ""
 "The solution is located in the `microprofile-metrics-quickstart` "
 "{quickstarts-tree-url}/microprofile-metrics-quickstart[directory]."
 msgstr ""
+"ソリューションは `microprofile-metrics-quickstart` {quickstarts-tree-url}/"
+"microprofile-metrics-quickstart[directory] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/microprofile-metrics.adoc:50
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Creating the Maven Project"
-msgstr ""
+msgstr "Mavenプロジェクトの作成"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:53
+#, fuzzy
 msgid ""
 "First, we need a new project. Create a new project with the following "
 "command:"
-msgstr ""
+msgstr "まず、新しいプロジェクトが必要です。以下のコマンドで新規プロジェクトを作成します。"
 
 #. type: delimited block -
 #: upstream/_guides/microprofile-metrics.adoc:61
@@ -166,19 +195,25 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:64
+#, fuzzy
 msgid ""
 "This command generates a Maven project, importing the `smallrye-metrics` "
 "extension which is an implementation of the MicroProfile Metrics "
 "specification used in Quarkus."
 msgstr ""
+"このコマンドは、Quarkusで使用されているMicroProfile Metrics仕様の実装である `smallrye-metrics` "
+"拡張子をインポートして、Mavenプロジェクトを生成します。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:67
+#, fuzzy
 msgid ""
 "If you already have your Quarkus project configured, you can add the "
 "`smallrye-metrics` extension to your project by running the following "
 "command in your project base directory:"
 msgstr ""
+"すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリで以下のコマンドを実行することで、プロジェクトに "
+"`smallrye-metrics` 拡張機能を追加することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/microprofile-metrics.adoc:71
@@ -188,8 +223,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:74
+#, fuzzy
 msgid "This will add the following to your `pom.xml`:"
-msgstr ""
+msgstr "これにより、 `pom.xml`."
 
 #. type: delimited block -
 #: upstream/_guides/microprofile-metrics.adoc:81
@@ -203,12 +239,13 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/microprofile-metrics.adoc:83
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Writing the application"
-msgstr ""
+msgstr "アプリケーションの書き方"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:88
+#, fuzzy
 msgid ""
 "The application consists of a single class that implements an algorithm for "
 "checking whether a number is prime.  This algorithm is exposed over a REST "
@@ -216,40 +253,48 @@ msgid ""
 "desired metrics are calculated over time and can be exported for manual "
 "analysis or processing by additional tooling."
 msgstr ""
+"このアプリケーションは、数値が素数であるかどうかをチェックするアルゴリズムを実装した単一のクラスで構成されています。このアルゴリズムは、RESTインターフェースを介して公開されています。さらに、必要なメトリクスが時間の経過とともに計算され、手動分析や追加のツールによる処理のためにエクスポートできることを確認するために、いくつかのアノテーションが必要です。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:90
+#, fuzzy
 msgid "The metrics that we will gather are these:"
-msgstr ""
+msgstr "集めようとしているメトリクスは、このようなものです。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:92
 #: upstream/_guides/microprofile-metrics.adoc:210
+#, fuzzy
 msgid ""
 "`performedChecks`: A counter which is increased by one each time the user "
 "asks about a number."
-msgstr ""
+msgstr "`performedChecks`: ユーザーが数字を尋ねるたびに1つ増えるカウンター。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:93
 #: upstream/_guides/microprofile-metrics.adoc:211
+#, fuzzy
 msgid ""
 "`highestPrimeNumberSoFar`: This is a gauge that stores the highest number "
 "that was asked about by the user and which was determined to be prime."
-msgstr ""
+msgstr "`highestPrimeNumberSoFar`: ユーザーから質問されて素数と判断された最高の数字を保存するゲージです。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:94
+#, fuzzy
 msgid ""
 "`checksTimer`: This is a timer, therefore a compound metric that benchmarks "
 "how much time the primality tests take. We will explain that one in more "
 "details later."
 msgstr ""
+"`checksTimer`: "
+"これはタイマーであり、したがって、プライマリテストにどれだけの時間がかかるかをベンチマークする複合的なメトリックです。これについては後ほど詳しく説明します。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:96
+#, fuzzy
 msgid "The full source code looks like this:"
-msgstr ""
+msgstr "完全なソースコードは以下のようになります。"
 
 #. type: delimited block -
 #: upstream/_guides/microprofile-metrics.adoc:100
@@ -281,8 +326,7 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_guides/microprofile-metrics.adoc:114
 #, no-wrap
-msgid ""
-"@Path(\"/\")\n"
+msgid "@Path(\"/\")\n"
 "public class PrimeNumberChecker {\n"
 msgstr ""
 
@@ -299,8 +343,10 @@ msgid ""
 "    @GET\n"
 "    @Path(\"/{number}\")\n"
 "    @Produces(MediaType.TEXT_PLAIN)\n"
-"    @Counted(name = \"performedChecks\", description = \"How many primality checks have been performed.\")\n"
-"    @Timed(name = \"checksTimer\", description = \"A measure of how long it takes to perform the primality test.\", unit = MetricUnits.MILLISECONDS)\n"
+"    @Counted(name = \"performedChecks\", description = \"How many primality "
+"checks have been performed.\")\n"
+"    @Timed(name = \"checksTimer\", description = \"A measure of how long it "
+"takes to perform the primality test.\", unit = MetricUnits.MILLISECONDS)\n"
 "    public String checkIfPrime(@PathParam long number) {\n"
 "        if (number < 1) {\n"
 "            return \"Only natural numbers can be prime numbers.\";\n"
@@ -316,7 +362,8 @@ msgid ""
 "        }\n"
 "        for (int i = 3; i < Math.floor(Math.sqrt(number)) + 1; i = i + 2) {\n"
 "            if (number % i == 0) {\n"
-"                return number + \" is not prime, is divisible by \" + i + \".\";\n"
+"                return number + \" is not prime, is divisible by \" + i + \"."
+"\";\n"
 "            }\n"
 "        }\n"
 "        if (number > highestPrimeNumberSoFar) {\n"
@@ -330,7 +377,8 @@ msgstr ""
 #: upstream/_guides/microprofile-metrics.adoc:150
 #, no-wrap
 msgid ""
-"    @Gauge(name = \"highestPrimeNumberSoFar\", unit = MetricUnits.NONE, description = \"Highest prime number so far.\")\n"
+"    @Gauge(name = \"highestPrimeNumberSoFar\", unit = MetricUnits.NONE, "
+"description = \"Highest prime number so far.\")\n"
 "    public Long highestPrimeNumberSoFar() {\n"
 "        return highestPrimeNumberSoFar;\n"
 "    }\n"
@@ -344,26 +392,28 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/microprofile-metrics.adoc:154
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Running and using the application"
-msgstr ""
+msgstr "アプリケーションの実行と使用"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:157
+#, fuzzy
 msgid ""
 "To run the microservice in dev mode, use `./mvnw clean compile quarkus:dev`"
-msgstr ""
+msgstr "マイクロサービスをdevモードで実行するには、次のようにします。 `./mvnw clean compile quarkus:dev`"
 
 #. type: Title ===
 #: upstream/_guides/microprofile-metrics.adoc:158
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Generate some values for the metrics"
-msgstr ""
+msgstr "メトリクスの値を生成する"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:160
+#, fuzzy
 msgid "First, ask the endpoint whether some numbers are prime numbers."
-msgstr ""
+msgstr "まず、ある数が素数であるかどうかを終点に問います。"
 
 #. type: delimited block -
 #: upstream/_guides/microprofile-metrics.adoc:164
@@ -373,15 +423,18 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:167
+#, fuzzy
 msgid ""
 "The application will respond that 350 is not a prime number because it can "
 "be divided by 2."
-msgstr ""
+msgstr "アプリでは、350は2で割れるので素数ではないと回答します。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:169
-msgid "Now for some large prime number so that the test takes a bit more time:"
-msgstr ""
+#, fuzzy
+msgid ""
+"Now for some large prime number so that the test takes a bit more time:"
+msgstr "さて、テストにもう少し時間がかかるように、いくつかの大きな素数のために。"
 
 #. type: delimited block -
 #: upstream/_guides/microprofile-metrics.adoc:173
@@ -391,23 +444,27 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:177
+#, fuzzy
 msgid ""
 "The application will respond that 629521085409773 is a prime number.  If you "
 "want, try some more calls with numbers of your choice."
-msgstr ""
+msgstr "アプリは629521085409773が素数であることを回答します。よろしければ、お好きな番号でもう何回かかけてみてください。"
 
 #. type: Title ===
 #: upstream/_guides/microprofile-metrics.adoc:178
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Review the generated metrics"
-msgstr ""
+msgstr "生成されたメトリクスを確認する"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:181
+#, fuzzy
 msgid ""
-"To view the metrics, execute `curl -H\"Accept: application/json\" "
-"localhost:8080/metrics/application` You will receive a response such as:"
+"To view the metrics, execute `curl -H\"Accept: application/json\" localhost:"
+"8080/metrics/application` You will receive a response such as:"
 msgstr ""
+"メトリクスを表示するには、 `curl -H\"Accept: application/json\" localhost:8080/metrics/"
+"application` を実行してください。"
 
 #. type: delimited block -
 #: upstream/_guides/microprofile-metrics.adoc:205
@@ -432,77 +489,97 @@ msgid ""
 "    \"fifteenMinRate\": 0.38474303050928976\n"
 "  },\n"
 "  \"org.acme.microprofile.metrics.PrimeNumberChecker.performedChecks\" : 2,\n"
-"  \"org.acme.microprofile.metrics.PrimeNumberChecker.highestPrimeNumberSoFar\" : 629521085409773\n"
+"  \"org.acme.microprofile.metrics.PrimeNumberChecker."
+"highestPrimeNumberSoFar\" : 629521085409773\n"
 "}\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:208
+#, fuzzy
 msgid "Let's explain the meaning of each metric:"
-msgstr ""
+msgstr "それぞれのメトリックの意味を説明しましょう。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:212
+#, fuzzy
 msgid ""
 "`checksTimer`: This is a timer, therefore a compound metric that benchmarks "
 "how much time the primality tests take. All durations are measured in "
 "milliseconds. It consists of these values:"
 msgstr ""
+"`checksTimer`: "
+"これはタイマーであり、したがって、プライマリテストにどれだけの時間がかかるかをベンチマークとする複合メトリックです。すべての持続時間はミリ秒単位で測定されます。これらの値で構成されています。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:213
+#, fuzzy
 msgid ""
 "`min`: The shortest duration it took to perform a primality test, probably "
 "it was performed for a small number."
-msgstr ""
+msgstr "`min`: 原始性試験を行うのにかかった時間が最も短く、おそらく少数のために行われたのではないかと思います。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:214
-msgid "`max`: The longest duration, probably it was with a large prime number."
-msgstr ""
+#, fuzzy
+msgid ""
+"`max`: The longest duration, probably it was with a large prime number."
+msgstr "`max`: 最長持続時間、たぶん大きな素数と一緒だった。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:215
+#, fuzzy
 msgid "`mean`: The mean value of the measured durations."
-msgstr ""
+msgstr "`mean`: 測定された持続時間の平均値。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:216
+#, fuzzy
 msgid "`stddev`: The standard deviation."
-msgstr ""
+msgstr "`stddev`: 標準偏差です。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:217
+#, fuzzy
 msgid ""
 "`count`: The number of observations (so it will be the same value as "
 "`performedChecks`)."
-msgstr ""
+msgstr "`count`: オブザベーションの数（だから `performedChecks` と同じ値になります）。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:218
+#, fuzzy
 msgid ""
 "`p50, p75, p95, p99, p999`: Percentiles of the durations. For example the "
 "value in `p95` means that 95 % of the measurements were faster than this "
 "duration."
 msgstr ""
+"`p50, p75, p95, p99, p999`: 持続時間のパーセンタイル。例えば、 `p95` "
+"の値は、測定の95%がこの持続時間よりも速いことを意味します。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:219
+#, fuzzy
 msgid ""
-"`meanRate, oneMinRate, fiveMinRate, fifteenMinRate`: Mean throughput and "
-"one-, five-, and fifteen-minute exponentially-weighted moving average "
-"throughput."
+"`meanRate, oneMinRate, fiveMinRate, fifteenMinRate`: Mean throughput and one-"
+", five-, and fifteen-minute exponentially-weighted moving average throughput."
+""
 msgstr ""
+"`meanRate, oneMinRate, fiveMinRate, fifteenMinRate`: 平均スループットと 1、5、および 15 "
+"分間の指数関数的に加重された移動平均スループット。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:221
+#, fuzzy
 msgid ""
 "If you prefer an OpenMetrics export rather than the JSON format, remove the "
 "`-H\"Accept: application/json\"` argument from your command line."
 msgstr ""
+"JSON形式ではなくOpenMetricsのエクスポートを希望する場合は、コマンドラインから `-H\"Accept: application/"
+"json\"` 引数を削除してください。"
 
 #. type: Title ==
 #: upstream/_guides/microprofile-metrics.adoc:222
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Configuration Reference"
-msgstr ""
+msgstr "設定リファレンス"
