--- a/i18n/po/ja_JP/_guides/platform-include.adoc.po
+++ b/i18n/po/ja_JP/_guides/platform-include.adoc.po
@@ -18,7 +18,8 @@ msgstr ""
 
 #. type: delimited block =
 #: upstream/_guides/platform-include.adoc:4
+#, fuzzy
 msgid ""
 "This extension is developed by a third party and is part of the Quarkus "
 "Platform."
-msgstr ""
+msgstr "この拡張機能はサードパーティによって開発されたもので、Quarkus Platformの一部です。"
