--- a/i18n/po/ja_JP/_guides/security-properties.adoc.po
+++ b/i18n/po/ja_JP/_guides/security-properties.adoc.po
@@ -2,7 +2,7 @@
 # Copyright (C) YEAR Free Software Foundation, Inc.
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
@@ -34,10 +34,7 @@ msgid ""
 "passwords are used, and properties files are generally too limited to use in "
 "production."
 msgstr ""
-"Quarkusでは、開発とテストを目的としたプロパティファイルベースの認証をサポート"
-"しています。現在のところ、平文とMD5ハッシュ化されたパスワードしか使用されてお"
-"らず、プロパティファイルは一般的に本番環境で使用するには制限が多すぎるため、"
-"本番環境で使用することはお勧めできません。"
+"Quarkusでは、開発とテストを目的としたプロパティファイルベースの認証をサポートしています。現在のところ、平文とMD5ハッシュ化されたパスワードしか使用されておらず、プロパティファイルは一般的に本番環境で使用するには制限が多すぎるため、本番環境で使用することはお勧めできません。"
 
 #. type: Plain text
 #: upstream/_guides/security-properties.adoc:15
@@ -68,10 +65,8 @@ msgid ""
 "information. Both support storage of this information in properties files. "
 "The following sections detail the specific configuration properties."
 msgstr ""
-"elytron-security-properties-file 拡張機能は、現在、認証と認可情報の保存のため"
-"の2つの異なる領域をサポートしています。どちらもこの情報のプロパティファイルへ"
-"の保存をサポートしています。以下のセクションでは、特定の設定プロパティについ"
-"て詳しく説明します。"
+"elytron-security-properties-file "
+"拡張機能は、現在、認証と認可情報の保存のための2つの異なる領域をサポートしています。どちらもこの情報のプロパティファイルへの保存をサポートしています。以下のセクションでは、特定の設定プロパティについて詳しく説明します。"
 
 #. type: Title ===
 #: upstream/_guides/security-properties.adoc:32
@@ -86,10 +81,8 @@ msgid ""
 "to roles with a combination of properties files. They are configured with "
 "properties starting with `quarkus.security.users.file`."
 msgstr ""
-"プロパティファイルのレルムは、プロパティファイルの組み合わせを使用して、ユー"
-"ザーをパスワードに、ユーザーをロールにマッピングすることをサポートしていま"
-"す。これらは `quarkus.security.users.file` で始まるプロパティで構成されていま"
-"す。"
+"プロパティファイルのレルムは、プロパティファイルの組み合わせを使用して、ユーザーをパスワードに、ユーザーをロールにマッピングすることをサポートしています。これらは "
+"`quarkus.security.users.file` で始まるプロパティで構成されています。"
 
 #. type: Block title
 #: upstream/_guides/security-properties.adoc:36
@@ -122,10 +115,9 @@ msgid ""
 "mapping, one per line. The following <<test-users-example>> illustrates the "
 "format:"
 msgstr ""
-"`quarkus.security.users.file.users` 設定プロパティは、クラスパスリソースを指"
-"定します。これは、1行に1つずつ、ユーザーとパスワードをマッピングしたプロパ"
-"ティファイルです。以下の link:#test-users-example[[test-users-example] は]そ"
-"のフォーマットを示しています。"
+"`quarkus.security.users.file.users` "
+"設定プロパティは、クラスパスリソースを指定します。これは、1行に1つずつ、ユーザーとパスワードをマッピングしたプロパティファイルです。以下の link:"
+"#test-users-example[[test-users-example] は]そのフォーマットを示しています。"
 
 #. type: Block title
 #: upstream/_guides/security-properties.adoc:51
@@ -136,8 +128,7 @@ msgstr "例：test-users.propertiesファイル"
 #. type: delimited block -
 #: upstream/_guides/security-properties.adoc:58
 #, no-wrap
-msgid ""
-"scott=jb0ss <1>\n"
+msgid "scott=jb0ss <1>\n"
 "jdoe=p4ssw0rd <2>\n"
 "stuart=test\n"
 "noadmin=n0Adm1n\n"
@@ -162,12 +153,10 @@ msgid ""
 "This can be generated for the first example above by running the command "
 "`echo -n scott:MyRealm:jb0ss | md5` from the command line."
 msgstr ""
-"このファイルには、ユーザ名とパスワードがプレーンテキストで保存されています"
-"が、これは推奨されません。設定でプレーンテキストが false に設定されている (ま"
-"たは省略されている) 場合、パスワードは `MD5 ( username : realm : password )` "
-"の形式で保存されなければなりません。これは上の最初の例では、コマンドラインか"
-"ら `echo -n scott:MyRealm:jb0ss | md5` コマンドを実行することで生成することが"
-"できます。"
+"このファイルには、ユーザ名とパスワードがプレーンテキストで保存されていますが、これは推奨されません。設定でプレーンテキストが false "
+"に設定されている (または省略されている) 場合、パスワードは `MD5 ( username : realm : password )` "
+"の形式で保存されなければなりません。これは上の最初の例では、コマンドラインから `echo -n scott:MyRealm:jb0ss | md5` "
+"コマンドを実行することで生成することができます。"
 
 #. type: Title ====
 #: upstream/_guides/security-properties.adoc:66
@@ -206,8 +195,7 @@ msgstr "ユーザー `jdoe` に役割が割り当てられています。 `NoRol
 #. type: Plain text
 #: upstream/_guides/security-properties.adoc:79
 msgid "User `stuart` has been assigned the roles `admin` and `user`."
-msgstr ""
-"ユーザー `stuart` には `admin` と `user` の役割が割り当てられています。"
+msgstr "ユーザー `stuart` には `admin` と `user` の役割が割り当てられています。"
 
 #. type: Title ===
 #: upstream/_guides/security-properties.adoc:80
@@ -223,19 +211,16 @@ msgid ""
 "to embed this information. They are configured with properties starting with "
 "`quarkus.security.users.embedded`."
 msgstr ""
-"埋め込まれたレルムは、ユーザーのパスワードへのマッピングやユーザーのロールへ"
-"のマッピングもサポートしています。この情報を埋め込むには、メインの "
-"`application.properties` Quarkus設定ファイルを使用します。これらは、 "
-"`quarkus.security.users.embedded` で始まるプロパティで設定されます。"
+"埋め込まれたレルムは、ユーザーのパスワードへのマッピングやユーザーのロールへのマッピングもサポートしています。この情報を埋め込むには、メインの "
+"`application.properties` Quarkus設定ファイルを使用します。これらは、 `quarkus.security.users."
+"embedded` で始まるプロパティで設定されます。"
 
 #. type: Plain text
 #: upstream/_guides/security-properties.adoc:85
 msgid ""
 "The following is an example application.properties file section illustrating "
 "the embedded realm configuration:"
-msgstr ""
-"以下は、組み込みレルムの設定を示すapplication.propertiesファイルのセクション"
-"の例です。"
+msgstr "以下は、組み込みレルムの設定を示すapplication.propertiesファイルのセクションの例です。"
 
 #. type: Block title
 #: upstream/_guides/security-properties.adoc:86
@@ -264,17 +249,15 @@ msgstr ""
 msgid ""
 "As with the first example this file has the usernames and passwords stored "
 "in plain text, which is not recommended. If plain-text is set to false (or "
-"omitted) in the config then passwords must be stored in the form `MD5 "
-"( username : realm : password )`. This can be generated for the first "
-"example above by running the command `echo -n scott:MyRealm:jb0ss | md5` "
-"from the command line."
+"omitted) in the config then passwords must be stored in the form `MD5 ( "
+"username : realm : password )`. This can be generated for the first example "
+"above by running the command `echo -n scott:MyRealm:jb0ss | md5` from the "
+"command line."
 msgstr ""
-"最初の例と同様に、このファイルにはユーザ名とパスワードがプレーンテキストで保"
-"存されていますが、これは推奨されません。設定でプレーンテキストが false に設定"
-"されている (または省略されている) 場合、パスワードは `MD5 ( username : "
-"realm : password )` の形式で保存されなければなりません。これは上記の最初の例"
-"では、コマンドラインから `echo -n scott:MyRealm:jb0ss | md5` コマンドを実行す"
-"ることで生成することができます。"
+"最初の例と同様に、このファイルにはユーザ名とパスワードがプレーンテキストで保存されていますが、これは推奨されません。設定でプレーンテキストが false "
+"に設定されている (または省略されている) 場合、パスワードは `MD5 ( username : realm : password )` "
+"の形式で保存されなければなりません。これは上記の最初の例では、コマンドラインから `echo -n scott:MyRealm:jb0ss | md5` "
+"コマンドを実行することで生成することができます。"
 
 #. type: Title ====
 #: upstream/_guides/security-properties.adoc:106
@@ -290,11 +273,10 @@ msgid ""
 "<user>=<password>`. The following <<password-example>> illustrates the "
 "syntax with 4 user to password mappings:"
 msgstr ""
-"ユーザーからパスワードへのマッピングは、 `application.properties` ファイル内"
-"で `quarkus.security.users.embedded.users.&amp;lt;user&amp;gt;=&amp;lt;"
-"password&amp;gt;` 形式のプロパティキーで指定します。以下の link:#password-"
-"example[[password-example] は]、4 つのユーザーからパスワードへのマッピングの"
-"構文を示しています。"
+"ユーザーからパスワードへのマッピングは、 `application.properties` ファイル内で `quarkus.security.users."
+"embedded.users.&amp;lt;user&amp;gt;=&amp;lt;password&amp;gt;` "
+"形式のプロパティキーで指定します。以下の link:#password-example[[password-example] は]、4 "
+"つのユーザーからパスワードへのマッピングの構文を示しています。"
 
 #. type: Block title
 #: upstream/_guides/security-properties.adoc:111
@@ -332,13 +314,13 @@ msgstr "組込ロール"
 #: upstream/_guides/security-properties.adoc:125
 msgid ""
 "The user to role mappings are specified in the `application.properties` file "
-"by properties keys of the form `quarkus.security.users.embedded.roles."
-"<user>=role1[,role2[,role3[,...]]]`. The following <<roles-example>> "
-"illustrates the syntax with 4 user to role mappings:"
+"by properties keys of the form `quarkus.security.users.embedded.roles.<user>="
+"role1[,role2[,role3[,...]]]`. The following <<roles-example>> illustrates "
+"the syntax with 4 user to role mappings:"
 msgstr ""
-"ユーザとロールのマッピングは、 `application.properties` ファイルで `quarkus."
-"security.users.embedded.roles.&amp;lt;user&amp;gt;=role1[,role2[,role3[,…​"
-"]]]` 形式のプロパティ・キーで指定されます。以下の link:#roles-example[[role-"
+"ユーザとロールのマッピングは、 `application.properties` ファイルで `quarkus.security.users."
+"embedded.roles.&amp;lt;user&amp;gt;=role1[,role2[,role3[,…​]]]` "
+"形式のプロパティ・キーで指定されます。以下の link:#roles-example[[role-"
 "example]]は、4つのユーザとロールをマッピングした構文を示しています。"
 
 #. type: Block title
