--- a/i18n/po/ja_JP/_guides/topic/continuum.adoc.po
+++ b/i18n/po/ja_JP/_guides/topic/continuum.adoc.po
@@ -18,27 +18,27 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/topic/continuum.adoc:1
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "---\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/topic/continuum.adoc:4
-#, no-wrap
-msgid ""
-"layout: vision\n"
+#, no-wrap, fuzzy
+msgid "layout: vision\n"
 "permalink: /vision/continuum\n"
 "---\n"
-msgstr ""
+msgstr "layout: vision パーマリンク。/vision/continuum ---."
 
 #. type: Title =
 #: upstream/_guides/topic/continuum.adoc:7
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "The Imperative and Reactive Continuum"
-msgstr ""
+msgstr "強迫的なものと反応的なものの連続体"
 
 #. type: Plain text
 #: upstream/_guides/topic/continuum.adoc:15
+#, fuzzy
 msgid ""
 "For years, the client-server architecture has been the de-facto standard to "
 "build applications.  But a major shift happened.  The _one model rules them "
@@ -47,37 +47,49 @@ msgid ""
 "and executed.  HTTP microservices, reactive applications, message-driven "
 "microservices and serverless are now central players in modern systems."
 msgstr ""
+"何年もの間、クライアント・サーバ・アーキテクチャは、アプリケーションを構築するための事実上の標準でした。しかし、大きな変化が起こりました。1 "
+"_つのモデルがすべての_時代を支配していた時代は終わりました。新しい範囲のアプリケーションとアーキテクチャのスタイルが登場し、コードの書き方やアプリケーションの展開と実行の仕方に影響を与えています。HTTP "
+"マイクロサービス、リアクティブアプリケーション、メッセージ駆動型マイクロサービス、サーバーレスは、現在のシステムの中心的な役割を果たしています。"
 
 #. type: Plain text
 #: upstream/_guides/topic/continuum.adoc:18
+#, fuzzy
 msgid ""
 "Quarkus has been designed with this new world in mind, and provides first-"
 "class support for these different paradigms.  Quarkus development model "
 "morphs to adapt itself to the type of application you are developing."
 msgstr ""
+"Quarkusは、この新しい世界を念頭に置いて設計されており、これらの異なるパラダイムに対してファーストクラスのサポートを提供しています。Quarkusの開発モデルは、開発中のアプリケーションの種類に合わせて変化します。"
 
 #. type: Title ==
 #: upstream/_guides/topic/continuum.adoc:19
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "HTTP microservices"
-msgstr ""
+msgstr "HTTPマイクロサービス"
 
 #. type: Plain text
 #: upstream/_guides/topic/continuum.adoc:24
+#, fuzzy
 msgid ""
 "Let’s start with the basic: HTTP microservices.  In this context, you need "
 "to develop an HTTP endpoint, often called REST or CRUD.  You process "
 "incoming HTTP requests, and to do so you often need to rely on others "
 "services, such as databases, or another HTTP service."
 msgstr ""
+"まずは基本中の基本、HTTPマイクロサービスから始めましょう。この文脈では、HTTP エンドポイントを開発する必要があり、しばしば REST や "
+"CRUD "
+"と呼ばれます。あなたは受信したHTTPリクエストを処理しますが、そのためにはデータベースなどの他のサービスや別のHTTPサービスに依存する必要があることが多いです。"
 
 #. type: Plain text
 #: upstream/_guides/topic/continuum.adoc:27
+#, fuzzy
 msgid ""
 "For this type of application, Quarkus relies on well-known standards such as "
 "JAX-RS, JPA and MicroProfile Rest Client.  Let's take a very simple "
 "application handling _fruits_. The code would be something like:"
 msgstr ""
+"このタイプのアプリケーションのために、QuarkusはJAX-RS、JPA、MicroProfile Rest "
+"Clientなどのよく知られた標準に依存しています。 _果物を_扱う非常にシンプルなアプリケーションを見てみましょう。コードは次のようになります。"
 
 #. type: delimited block -
 #: upstream/_guides/topic/continuum.adoc:34
@@ -92,8 +104,7 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_guides/topic/continuum.adoc:37
 #, no-wrap
-msgid ""
-"    @Inject\n"
+msgid "    @Inject\n"
 "    EntityManager entityManager;\n"
 msgstr ""
 
@@ -103,7 +114,8 @@ msgstr ""
 msgid ""
 "    @GET\n"
 "    public List<Fruit> get() {\n"
-"        return entityManager.createNamedQuery(\"Fruits.findAll\", Fruit.class)\n"
+"        return entityManager.createNamedQuery(\"Fruits.findAll\", Fruit."
+"class)\n"
 "              .getResultList();\n"
 "    }\n"
 msgstr ""
@@ -117,7 +129,8 @@ msgid ""
 "    public Fruit getSingle(@PathParam Integer id) {\n"
 "        Fruit entity = entityManager.find(Fruit.class, id);\n"
 "        if (entity == null) {\n"
-"            throw new WebApplicationException(\"Fruit with id of \" + id + \" does not exist.\", 404);\n"
+"            throw new WebApplicationException(\"Fruit with id of \" + id + "
+"\" does not exist.\", 404);\n"
 "        }\n"
 "        return entity;\n"
 "    }\n"
@@ -131,7 +144,8 @@ msgid ""
 "    @Transactional\n"
 "    public Response create(Fruit fruit) {\n"
 "        if (fruit.getId() != null) {\n"
-"            throw new WebApplicationException(\"Id was invalidly set on request.\", 422);\n"
+"            throw new WebApplicationException(\"Id was invalidly set on "
+"request.\", 422);\n"
 "        }\n"
 msgstr ""
 
@@ -147,47 +161,57 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_guides/topic/continuum.adoc:67
 #, no-wrap
-msgid ""
-"    // ...\n"
+msgid "    // ...\n"
 "}\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/topic/continuum.adoc:72
+#, fuzzy
 msgid ""
 "If you are a Java EE or Spring user, this development model should look "
 "familiar.  You expose a _resource_ containing methods annotated with `@GET`, "
 "`@POST`... to handle the different requests.  The _path_ is specified using "
 "the `@Path` annotation."
 msgstr ""
+"Java EEやSpringのユーザーであれば、この開発モデルは見覚えがあるはずです。さまざまなリクエストを処理するために `@GET`, "
+"`@POST`... でアノテーションされたメソッドを含む _リソース_を公開しています。 _パスは_ `@Path` "
+"アノテーションを使って指定します。"
 
 #. type: Plain text
 #: upstream/_guides/topic/continuum.adoc:75
+#, fuzzy
 msgid ""
 "JPA users will recognize the `EntityManager` used to access the database.  "
 "Finally, methods requiring a transaction are simply annotated with "
 "`@Transactional`."
 msgstr ""
+"JPAユーザーは、データベースへのアクセスに使用された `EntityManager` を認識します。最後に、トランザクションを必要とするメソッドには "
+"`@Transactional`."
 
 #. type: Plain text
 #: upstream/_guides/topic/continuum.adoc:79
+#, fuzzy
 msgid ""
 "Let's now imagine you need to access another HTTP endpoint.  You can use a "
 "HTTP client directly, this is nothing more than repeating boilerplate code.  "
 "Quarkus provides a way to call HTTP endpoint easily using the MicroProfile "
 "Rest Client API."
 msgstr ""
+"ここで、別の HTTP "
+"エンドポイントにアクセスする必要があることを想像してみましょう。HTTPクライアントを直接使用することができますが、これは定型文のコードを繰り返すだけです。Quarkusは、MicroProfile "
+"Rest Client APIを使用してHTTPエンドポイントを簡単に呼び出す方法を提供しています。"
 
 #. type: Plain text
 #: upstream/_guides/topic/continuum.adoc:81
+#, fuzzy
 msgid "First declare your service as follows:"
-msgstr ""
+msgstr "まずは以下のようにサービスを宣言しましょう。"
 
 #. type: delimited block -
 #: upstream/_guides/topic/continuum.adoc:87
 #, no-wrap
-msgid ""
-"@Path(\"/v2\")\n"
+msgid "@Path(\"/v2\")\n"
 "@RegisterRestClient\n"
 "public interface CountriesService {\n"
 msgstr ""
@@ -205,29 +229,29 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/topic/continuum.adoc:96
+#, fuzzy
 msgid ""
 "For each call you are intending to do, add a method and use annotations to "
 "describe the behavior."
-msgstr ""
+msgstr "意図している各呼び出しについて、メソッドを追加し、動作を記述するためにアノテーションを使用します。"
 
 #. type: Plain text
 #: upstream/_guides/topic/continuum.adoc:98
+#, fuzzy
 msgid "Then, in your resource, just use the `CountriesService`:"
-msgstr ""
+msgstr "そして、リソースの中で `CountriesService`."
 
 #. type: delimited block -
 #: upstream/_guides/topic/continuum.adoc:103
 #, no-wrap
-msgid ""
-"@Path(\"/country\")\n"
+msgid "@Path(\"/country\")\n"
 "public class CountriesResource {\n"
 msgstr ""
 
 #. type: delimited block -
 #: upstream/_guides/topic/continuum.adoc:107
 #, no-wrap
-msgid ""
-"    @Inject\n"
+msgid "    @Inject\n"
 "    @RestClient\n"
 "    CountriesService countriesService;\n"
 msgstr ""
@@ -247,44 +271,52 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/topic/continuum.adoc:120
+#, fuzzy
 msgid ""
-"But you may be wondering where the URL is configured as it's not in the "
-"code.  Remember, it must not be hard-coded because the url likely depends on "
-"the environment.  The URL is configured in the application configuration:"
+"But you may be wondering where the URL is configured as it's not in the code."
+"  Remember, it must not be hard-coded because the url likely depends on the "
+"environment.  The URL is configured in the application configuration:"
 msgstr ""
+"しかし、コードの中にはないので、URLがどこに設定されているのか気になるかもしれません。URLは環境に依存している可能性が高いので、ハードコード化してはいけないことを覚えておいてください。URLはアプリケーションの設定で設定されています。"
 
 #. type: delimited block -
 #: upstream/_guides/topic/continuum.adoc:125
 #, no-wrap
 msgid ""
 "# the format is interface-name/mp-rest/url=the-service-url\n"
-"org.acme.restclient.CountriesService/mp-rest/url=https://restcountries.eu/rest\n"
+"org.acme.restclient.CountriesService/mp-rest/url=https://restcountries.eu/"
+"rest\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/topic/continuum.adoc:128
+#, fuzzy
 msgid ""
 "The url can now be updated during the deployment or at launch time using "
 "system properties or environment variables."
-msgstr ""
+msgstr "システムのプロパティや環境変数を使用して、デプロイ時や起動時にURLを更新できるようになりました。"
 
 #. type: Title ==
 #: upstream/_guides/topic/continuum.adoc:129
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Being reactive"
-msgstr ""
+msgstr "反応すること"
 
 #. type: Plain text
 #: upstream/_guides/topic/continuum.adoc:133
+#, fuzzy
 msgid ""
 "Application requirements have changed drastically over the last few years.  "
 "For any application to succeed in the era of cloud computing, big data or "
 "IoT, going reactive is increasingly becoming the architecture style to "
 "follow."
 msgstr ""
+"アプリケーションの要件は、ここ数年で大きく変化しています。クラウド コンピューティング、ビッグ データ、IoT "
+"の時代に成功するためには、リアクティブなアーキテクチャを採用することがますます重要になってきています。"
 
 #. type: Plain text
 #: upstream/_guides/topic/continuum.adoc:137
+#, fuzzy
 msgid ""
 "Today’s users embrace applications that have milliseconds of response time, "
 "100% uptime, lower latency, push data instead of pull, higher throughput and "
@@ -294,13 +326,16 @@ msgid ""
 "of servers, long response time (> 500 ms), downtime due to maintenance or "
 "waterfalls of failures does not meet the expected user experience."
 msgstr ""
+"今日のユーザーは、ミリ秒単位の応答時間、100%のアップタイム、低いレイテンシー、プルではなくプッシュデータ、より高いスループットと弾力性を持つアプリケーションを採用しています。しかし、これらの機能は、リソース、インフラストラクチャ、ツールへの莫大な投資なしでは、 "
+"_昨日のソフトウェアアーキテクチャ_を使用して達成することはほぼ不可能です。世界は変わり、何十台ものサーバーを持ち、長い応答時間（＞500ms）、メンテナンスによるダウンタイム、障害の滝のような状況では、期待されるユーザー体験を満たすことはできません。"
 
 #. type: Plain text
 #: upstream/_guides/topic/continuum.adoc:140
+#, fuzzy
 msgid ""
 "Quarkus stands with you on your path to reactive.  First, you can implement "
 "asynchronous HTTP endpoint as follows:"
-msgstr ""
+msgstr "Quarkusは、お客様のリアクティブへの道筋をサポートします。まず、以下のように非同期HTTPエンドポイントを実装します。"
 
 #. type: delimited block -
 #: upstream/_guides/topic/continuum.adoc:148
@@ -315,19 +350,22 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/topic/continuum.adoc:152
+#, fuzzy
 msgid ""
 "Method actions can compose asynchronous operations and complete the result "
 "when everything is done without blocking threads.  This greatly improves "
 "resource consumption and elasticity."
 msgstr ""
+"メソッドアクションは、スレッドをブロックすることなく、すべてが行われたときに非同期操作を構成し、結果を完了させることができます。これにより、リソース消費と弾力性が大幅に向上します。"
 
 #.  TODO Async rest client, but does not seem to be working.
 #. type: Plain text
 #: upstream/_guides/topic/continuum.adoc:157
+#, fuzzy
 msgid ""
 "But, what about streams? Generating a _server-sent event_ response with "
 "Quarkus is just as simple:"
-msgstr ""
+msgstr "しかし、ストリームについてはどうでしょうか？Quarkusを使用して _サーバーから送信されたイベント_レスポンスを生成するのは簡単です。"
 
 #. type: delimited block -
 #: upstream/_guides/topic/continuum.adoc:166
@@ -343,12 +381,17 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/topic/continuum.adoc:170
+#, fuzzy
 msgid ""
 "This method returns a Reactive Streams `Publisher`.  To provide this stream, "
 "you can either use https://github.com/ReactiveX/RxJava[Rx Java 2] or https://"
 "www.smallrye.io/smallrye-reactive-streams-operators/[MicroProfile Reactive "
 "Streams Operators]:"
 msgstr ""
+"このメソッドは、Reactive Streams `Publisher` を返します。このストリームを提供するために、 link:https://"
+"github.com/ReactiveX/RxJava[Rx Java 2]または link:https://www.smallrye.io/"
+"smallrye-reactive-streams-operators/[MicroProfile Reactive Streams "
+"演算子を]使用することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/topic/continuum.adoc:181
@@ -366,31 +409,35 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/topic/continuum.adoc:183
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Message-driven microservices"
-msgstr ""
+msgstr "メッセージ駆動型マイクロサービス"
 
 #. type: Plain text
 #: upstream/_guides/topic/continuum.adoc:187
+#, fuzzy
 msgid ""
 "However, HTTP characteristics prohibit implementing https://www."
 "reactivemanifesto.org/[reactive systems], where all the components interact "
 "using asynchronous messages passing.  But no worries, Quarkus is perfectly "
 "suited to implement message-driven microservices and reactive systems."
 msgstr ""
+"しかし、HTTPの特性上、すべてのコンポーネントが非同期メッセージの通過を使用して相互作用する link:https://www."
+"reactivemanifesto.org/"
+"[リアクティブシステムを]実装することはできません。しかし心配はいりません。Quarkusは、メッセージ駆動型のマイクロサービスやリアクティブシステムの実装に完全に適しています。"
 
 #. type: Plain text
 #: upstream/_guides/topic/continuum.adoc:189
+#, fuzzy
 msgid ""
 "First, you can consume messages from various brokers such as AMQP or Kafka, "
 "and process these messages smoothly:"
-msgstr ""
+msgstr "まず、AMQPやKafkaなどの各種ブローカーからのメッセージを消費し、スムーズに処理することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/topic/continuum.adoc:194
 #, no-wrap
-msgid ""
-"@ApplicationScoped\n"
+msgid "@ApplicationScoped\n"
 "public class HealthDataProcessor {\n"
 msgstr ""
 
@@ -408,6 +455,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/topic/continuum.adoc:206
+#, fuzzy
 msgid ""
 "The `@Incoming` and `@Outgoing` annotations are part of https://www.smallrye."
 "io/smallrye-reactive-messaging[Reactive Messaging].  They are used to "
@@ -416,14 +464,21 @@ msgid ""
 "from and to different brokers and transports such as HTTP, Kafka, or http://"
 "camel.apache.org[Apache Camel]."
 msgstr ""
+"`@Incoming` および `@Outgoing` アノテーションは、 link:https://www.smallrye.io/smallrye-"
+"reactive-messaging[Reactive Messaging] の一部です。これは、どの "
+"_ストリーム_からどのストリームにメッセージを消費し、どのストリームにメッセージを送信しているかを表現するために使用されます。Reactive "
+"Messaging のおかげで、HTTP、Kafka、 link:http://camel.apache.org[Apache Camel] "
+"などの異なるブローカーやトランスポートとの間でメッセージを消費したり、送信したりすることができます。"
 
 #. type: Plain text
 #: upstream/_guides/topic/continuum.adoc:209
+#, fuzzy
 msgid ""
 "Sometimes you need more than just handling messages one by one.  You can "
 "also express your message processing logic using reactive programming as "
 "illustrated in the following snippet:"
 msgstr ""
+"メッセージを一つずつ処理するだけでは不十分な場合もあります。次のスニペットに示すように、リアクティブプログラミングを使ってメッセージ処理ロジックを表現することもできます。"
 
 #. type: delimited block -
 #: upstream/_guides/topic/continuum.adoc:222
@@ -431,48 +486,57 @@ msgstr ""
 msgid ""
 "@Incoming(\"health\")\n"
 "@Outgoing(\"output\")\n"
-"public Publisher<KafkaMessage<String, JsonObject>> filterState(Flowable<MqttMessage> input) {\n"
+"public Publisher<KafkaMessage<String, JsonObject>> "
+"filterState(Flowable<MqttMessage> input) {\n"
 "    return input\n"
 "      .map(message -> Buffer.buffer(message.getPayload()).toJsonObject())\n"
 "      .map(json -> json.getJsonObject(\"state\"))\n"
-"      .distinctUntilChanged(json -> json.getString(\"state\")) // Filter on the \"State\" key of the json object.\n"
-"      .doOnNext(json -> LOGGER.info(\"Forwarding new state '{}' to Kafka\", json.encode()))\n"
+"      .distinctUntilChanged(json -> json.getString(\"state\")) // Filter on "
+"the \"State\" key of the json object.\n"
+"      .doOnNext(json -> LOGGER.info(\"Forwarding new state '{}' to Kafka\", "
+"json.encode()))\n"
 "      .map(json -> KafkaMessage.of(\"state\", \"neo\", json));\n"
 "}\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/topic/continuum.adoc:225
+#, fuzzy
 msgid ""
 "Stream-based manipulation can either use Rx Java 2 (as in the previous "
 "snippet) or MicroProfile Reactive Streams Operators."
 msgstr ""
+"ストリームベースの操作には、Rx Java 2 (前のスニペットのように) または MicroProfile Reactive Streams "
+"Operators を使用することができます。"
 
 #. type: Title ==
 #: upstream/_guides/topic/continuum.adoc:226
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Functions as a Service and Serverless"
-msgstr ""
+msgstr "サービスとしての機能とサーバーレス"
 
 #. type: Plain text
 #: upstream/_guides/topic/continuum.adoc:230
+#, fuzzy
 msgid ""
 "Thanks to their stellar startup time and low memory usage, you can implement "
 "functions using Quarkus to be used in serverless environments.  If you are "
 "using AWS Lambda, your Quarkus function looks like:"
 msgstr ""
+"驚異的な起動時間と低いメモリ使用量のおかげで、Quarkusを使用してサーバーレス環境で使用する関数を実装することができます。AWS "
+"Lambdaを使用している場合、Quarkusの関数は次のようになります。"
 
 #. type: delimited block -
 #: upstream/_guides/topic/continuum.adoc:234
 #, no-wrap
-msgid "public class HelloLambda implements RequestHandler<HelloRequest, String> {\n"
+msgid ""
+"public class HelloLambda implements RequestHandler<HelloRequest, String> {\n"
 msgstr ""
 
 #. type: delimited block -
 #: upstream/_guides/topic/continuum.adoc:237
 #, no-wrap
-msgid ""
-"    @Inject\n"
+msgid "    @Inject\n"
 "    HelloGreeter greeter;\n"
 msgstr ""
 
@@ -489,8 +553,10 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/topic/continuum.adoc:245
+#, fuzzy
 msgid ""
 "You can use any of the Quarkus features in your function and benefit from "
 "the fast startup and low memory utilization. With Quarkus, you can embrace "
 "this new world without having to change your programming language."
 msgstr ""
+"Quarkusの機能のいずれかを関数で使用することができ、高速な起動と低メモリ使用率の恩恵を受けることができます。Quarkusを使用すると、プログラミング言語を変更することなく、この新しい世界を受け入れることができます。"
