--- a/i18n/po/ja_JP/_guides/topic/standards.adoc.po
+++ b/i18n/po/ja_JP/_guides/topic/standards.adoc.po
@@ -26,12 +26,10 @@ msgstr "---\n"
 #. type: Plain text
 #: upstream/_guides/topic/standards.adoc:4
 #, no-wrap
-msgid ""
-"layout: vision\n"
+msgid "layout: vision\n"
 "permalink: /vision/standards\n"
 "---\n"
-msgstr ""
-"layout: vision\n"
+msgstr "layout: vision\n"
 "permalink: /vision/standards\n"
 "---\n"
 
@@ -51,11 +49,9 @@ msgid ""
 "MicroProfile or leading frameworks in a specific domain such as Eclipse Vert."
 "x."
 msgstr ""
-"物質のクオークに行きましょう。私達は、あなたが新しい技術を習得するのに何時間"
-"も費やして欲しくありません。代わりに、 {project-name} プログラミングモデルは"
-"実証済の標準の上に構築されています。Eclipse MicroProfileのような公式の標準"
-"や、Eclipse Vert.xのような特定のドメインにおけるリーディングフレームワークを"
-"使用します。"
+"物質のクオークに行きましょう。私達は、あなたが新しい技術を習得するのに何時間も費やして欲しくありません。代わりに、 {project-name} "
+"プログラミングモデルは実証済の標準の上に構築されています。Eclipse MicroProfileのような公式の標準や、Eclipse Vert."
+"xのような特定のドメインにおけるリーディングフレームワークを使用します。"
 
 #. type: Plain text
 #: upstream/_guides/topic/standards.adoc:19
@@ -66,12 +62,10 @@ msgid ""
 "boundaries.  You can use Eclipse MicroProfile to configure and monitor your "
 "application.  You can use Vert.x, Apache Camel and we support much more."
 msgstr ""
-"我々の依存性注入ソリューションはCDIに基づいています。 JAX-RS アノテーションを"
-"使用して REST エンドポイントを定義できます。 JPA アノテーションを使用して、永"
-"続エンティティーをマップし、 JTA アノテーションを使用してトランザクション境界"
-"を宣言することができます。 Eclipse MicroProfileを使用して、アプリケーションを"
-"構成およびモニターできます。 Vert.x、Apache Camelを使用することが出来、そして"
-"更に多くをサポートしています。"
+"我々の依存性注入ソリューションはCDIに基づいています。 JAX-RS アノテーションを使用して REST エンドポイントを定義できます。 JPA "
+"アノテーションを使用して、永続エンティティーをマップし、 JTA アノテーションを使用してトランザクション境界を宣言することができます。 Eclipse "
+"MicroProfileを使用して、アプリケーションを構成およびモニターできます。 Vert.x、Apache "
+"Camelを使用することが出来、そして更に多くをサポートしています。"
 
 #. type: Plain text
 #: upstream/_guides/topic/standards.adoc:23
@@ -81,7 +75,5 @@ msgid ""
 "goal is to improve and innovate the technologies we use and contribute back "
 "to the open source projects and standards we rely on."
 msgstr ""
-"我々は標準に限定されない為、あなたの可能性を広げることが可能です。 もちろん、"
-"{project-name} は受動的な消費者ではありません。 私たちのゴールは、使用する技"
-"術を改善、革新し、私たちが頼りにしているオープンソースプロジェクトと標準に貢"
-"献することです。"
+"我々は標準に限定されない為、あなたの可能性を広げることが可能です。 もちろん、{project-name} は受動的な消費者ではありません。 "
+"私たちのゴールは、使用する技術を改善、革新し、私たちが頼りにしているオープンソースプロジェクトと標準に貢献することです。"
