--- a/i18n/po/ja_JP/_guides/0-glossary.adoc.po
+++ b/i18n/po/ja_JP/_guides/0-glossary.adoc.po
@@ -18,137 +18,149 @@ msgstr ""
 
 #. type: Title =
 #: upstream/_guides/0-glossary.adoc:1
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Glossary"
-msgstr ""
+msgstr "用語集"
 
 #. type: Plain text
 #: upstream/_guides/0-glossary.adoc:7
+#, fuzzy
 msgid ""
 "This is a collection of preferred term in the documentation and website.  "
 "Please stay within these terms for consistency."
-msgstr ""
+msgstr "ドキュメントやウェブサイトで好まれる用語を集めたものです。一貫性を保つために、これらの用語の範囲内にとどめてください。"
 
 #. type: Labeled list
 #: upstream/_guides/0-glossary.adoc:8
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "* Live coding"
-msgstr ""
+msgstr "<li> <p>ライブコーディング</p> </li>"
 
 #. type: Plain text
 #: upstream/_guides/0-glossary.adoc:9
+#, fuzzy
 msgid "for our `quarkus:dev` capability"
-msgstr ""
+msgstr "`quarkus:dev` の機能について"
 
 #. type: Labeled list
 #: upstream/_guides/0-glossary.adoc:9
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "* GraalVM native image"
-msgstr ""
+msgstr "<li> <p>GraalVMネイティブイメージ</p> </li>"
 
 #. type: Plain text
 #: upstream/_guides/0-glossary.adoc:10
+#, fuzzy
 msgid "preferred term for the VM creating native executable. No space."
-msgstr ""
+msgstr "ネイティブ実行ファイルを作成するVMの好ましい用語。スペースはありません。"
 
 #. type: Labeled list
 #: upstream/_guides/0-glossary.adoc:10
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "* Substrate VM"
-msgstr ""
+msgstr "<li> <p>基板 VM</p> </li>"
 
 #. type: Plain text
 #: upstream/_guides/0-glossary.adoc:11
+#, fuzzy
 msgid "non-preferred. Exclude."
-msgstr ""
+msgstr "非優先。除外します。"
 
 #. type: Labeled list
 #: upstream/_guides/0-glossary.adoc:11
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "* Native Executable"
-msgstr ""
+msgstr "<li> <p>ネイティブ実行可能</p> </li>"
 
 #. type: Plain text
 #: upstream/_guides/0-glossary.adoc:12
+#, fuzzy
 msgid "the executable that is compiled to native 1s and 0s"
-msgstr ""
+msgstr "ネイティブの1と0にコンパイルされた実行ファイル"
 
 #. type: Labeled list
 #: upstream/_guides/0-glossary.adoc:12
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "* Docker image"
-msgstr ""
+msgstr "<li> <p>ドッカーイメージ</p> </li>"
 
 #. type: Plain text
 #: upstream/_guides/0-glossary.adoc:13
+#, fuzzy
 msgid ""
 "for the actual `Dockerfile` definition and when the tool chain is involved"
-msgstr ""
+msgstr "実際の `Dockerfile` の定義と、ツールチェーンが関与している場合は"
 
 #. type: Labeled list
 #: upstream/_guides/0-glossary.adoc:13
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "* Container"
-msgstr ""
+msgstr "<li> <p>コンテナ</p> </li>"
 
 #. type: Plain text
 #: upstream/_guides/0-glossary.adoc:14
+#, fuzzy
 msgid "when we discuss Quarkus running in... containers"
-msgstr ""
+msgstr "コンテナ内でのQuarkusの実行について議論するとき"
 
 #. type: Labeled list
 #: upstream/_guides/0-glossary.adoc:14
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "* Supersonic Subatomic Java"
-msgstr ""
+msgstr "<li> <p>超音速素粒子Java</p> </li>"
 
 #. type: Plain text
 #: upstream/_guides/0-glossary.adoc:15
+#, fuzzy
 msgid "our tagline"
-msgstr ""
+msgstr "当社のキャッチフレーズ"
 
 #. type: Labeled list
 #: upstream/_guides/0-glossary.adoc:15
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "* Kubernetes Native Java"
-msgstr ""
+msgstr "<li> <p>Kubernetes ネイティブJava</p> </li>"
 
 #. type: Plain text
 #: upstream/_guides/0-glossary.adoc:16
+#, fuzzy
 msgid "our preferred tagline to say that we rock for containers"
-msgstr ""
+msgstr "私たちはコンテナのためにロックしていることを言うために私たちの好ましいキャッチフレーズ"
 
 #. type: Labeled list
 #: upstream/_guides/0-glossary.adoc:16
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "* Developer Joy"
-msgstr ""
+msgstr "<li> <p>開発者の喜び</p> </li>"
 
 #. type: Plain text
 #: upstream/_guides/0-glossary.adoc:17
+#, fuzzy
 msgid ""
 "for everything going from live reload to the opinionated layer to a single "
 "config file"
-msgstr ""
+msgstr "ライブリロードからオピニオン層へのリロードから単一のコンフィグファイルへの移行まで、すべてのことに対応しています。"
 
 #. type: Labeled list
 #: upstream/_guides/0-glossary.adoc:17
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "* Unify Imperative and Reactive"
-msgstr ""
+msgstr "<li> <p>インペラティブとリアクティブの統一</p> </li>"
 
 #. type: Plain text
 #: upstream/_guides/0-glossary.adoc:18
+#, fuzzy
 msgid "imperative and reactive. 'Nuff said."
-msgstr ""
+msgstr "命令的で反応的な言うまでもありません"
 
 #. type: Labeled list
 #: upstream/_guides/0-glossary.adoc:18
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "* Best of breed frameworks and standards"
-msgstr ""
+msgstr "<li> <p>ベスト・オブ・ブリードのフレームワークとスタンダード</p> </li>"
 
 #. type: Plain text
 #: upstream/_guides/0-glossary.adoc:18
+#, fuzzy
 msgid "when we explain our stack"
-msgstr ""
+msgstr "スタックを説明するときに"
