--- a/i18n/po/ja_JP/_guides/amazon-iam.adoc.po
+++ b/i18n/po/ja_JP/_guides/amazon-iam.adoc.po
@@ -21,48 +21,64 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/amazon-iam.adoc:6
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Quarkus - Amazon IAM Client"
-msgstr ""
+msgstr "Quarkus - Amazon IAMクライアント"
 
 #. type: Plain text
 #: upstream/_guides/amazon-iam.adoc:12
+#, fuzzy
 msgid ""
 "Amazon Identity and Access Management (IAM) enables users to manage access "
 "to AWS services and resources securely."
 msgstr ""
+"Amazon Identity and Access "
+"Management（IAM）は、ユーザーがAWSのサービスやリソースへのアクセスを安全に管理できるようにします。"
 
 #. type: Plain text
 #: upstream/_guides/amazon-iam.adoc:14
+#, fuzzy
 msgid ""
 "You can find more information about IAM at https://aws.amazon.com/iam/[the "
 "Amazon IAM website]."
 msgstr ""
+"link:https://aws.amazon.com/iam/[アマゾンのIAMのサイト]を見てみると、IAMについての詳しい情報が掲載されています。"
 
 #. type: Plain text
 #: upstream/_guides/amazon-iam.adoc:17
+#, fuzzy
 msgid ""
 "The IAM extension is based on https://docs.aws.amazon.com/sdk-for-java/v2/"
 "developer-guide/welcome.html[AWS Java SDK 2.x].  It's a major rewrite of the "
 "1.x code base that offers two programming models (Blocking & Async)."
 msgstr ""
+"IAM拡張は link:https://docs.aws.amazon.com/sdk-for-java/v2/developer-guide/"
+"welcome.html[AWS Java SDK 2.x]をベースにしており、2つのプログラミングモデル(Blocking &amp; "
+"Async)を提供する1.xのコードベースを大幅に書き換えています。"
 
 #. type: Plain text
 #: upstream/_guides/amazon-iam.adoc:21
+#, fuzzy
 msgid "The Quarkus extension supports two programming models:"
-msgstr ""
+msgstr "Quarkus拡張機能は、2つのプログラミングモデルをサポートしています。"
 
 #. type: Plain text
 #: upstream/_guides/amazon-iam.adoc:23
+#, fuzzy
 msgid ""
 "Blocking access using URL Connection HTTP client (by default) or the Apache "
 "HTTP Client"
 msgstr ""
+"URL Connection HTTP クライアント (デフォルト) または Apache HTTP クライアントを使ってアクセスをブロックする"
 
 #. type: Plain text
 #: upstream/_guides/amazon-iam.adoc:24
+#, fuzzy
 msgid ""
 "https://docs.aws.amazon.com/sdk-for-java/v2/developer-guide/basics-async."
 "html[Asynchronous programming] based on JDK's `CompletableFuture` objects "
 "and the Netty HTTP client."
 msgstr ""
+"JDK の `CompletableFuture` オブジェクトと Netty HTTP クライアントをベースにした link:https://docs."
+"aws.amazon.com/sdk-for-java/v2/developer-guide/basics-async."
+"html[非同期プログラミング]。"
