--- a/i18n/po/ja_JP/_guides/centralized-log-management.adoc.po
+++ b/i18n/po/ja_JP/_guides/centralized-log-management.adoc.po
@@ -21,21 +21,26 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/centralized-log-management.adoc:6
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Quarkus - Centralized log management (Graylog, Logstash, Fluentd)"
-msgstr ""
+msgstr "Quarkus - ログの集中管理（Graylog、Logstash、Fluentd"
 
 #. type: Plain text
 #: upstream/_guides/centralized-log-management.adoc:13
+#, fuzzy
 msgid ""
 "This guide explains how you can send your logs to a centralized log "
 "management system like Graylog, Logstash (inside the Elastic Stack or ELK - "
 "Elasticsearch, Logstash, Kibana) or Fluentd (inside EFK - Elasticsearch, "
 "Fluentd, Kibana)."
 msgstr ""
+"このガイドでは、Graylog、Logstash（Elastic StackやELK - "
+"Elasticsearch、Logstash、Kibanaの内部）、Fluentd（EFK - "
+"Elasticsearch、Fluentd、Kibanaの内部）のような集中型ログ管理システムにログを送信する方法を説明します。"
 
 #. type: Plain text
 #: upstream/_guides/centralized-log-management.adoc:16
+#, fuzzy
 msgid ""
 "There are a lot of different ways to centralize your logs (if you are using "
 "Kubernetes, the simplest way is to log to the console and ask you cluster "
@@ -44,9 +49,13 @@ msgid ""
 "`quarkus-logging-gelf` extension that can use TCP or UDP to send logs in the "
 "Graylog Extended Log Format (GELF)."
 msgstr ""
+"ログを一元化する方法はたくさんあります(Kubernetesを使用している場合、最も簡単な方法はコンソールにログインして、クラスタ管理者にクラスタ内に一元化されたログマネージャを統合するように依頼することです)。このガイドでは、TCPまたはUDPを使用してGraylog "
+"Extended Log Format (GELF)でログを送信できる `quarkus-logging-gelf` "
+"拡張機能を使用して外部ツールに送信する方法を公開します。"
 
 #. type: Plain text
 #: upstream/_guides/centralized-log-management.adoc:19
+#, fuzzy
 msgid ""
 "The `quarkus-logging-gelf` extension will add a GELF log handler to the "
 "underlying logging backend that Quarkus uses (jboss-logmanager).  By "
@@ -54,26 +63,30 @@ msgid ""
 "default the console handler is enabled), your logs will be sent to both "
 "handlers."
 msgstr ""
+"`quarkus-logging-gelf` 拡張機能は、Quarkusが使用する基礎となるロギングバックエンド（jboss-"
+"logmanager）にGELFログハンドラを追加します。デフォルトでは無効になっていますが、有効にしても別のハンドラを使用している場合（デフォルトではコンソールハンドラが有効になっています）、ログは両方のハンドラに送信されます。"
 
 #. type: Title ==
 #: upstream/_guides/centralized-log-management.adoc:20
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Example application"
-msgstr ""
+msgstr "アプリケーション例"
 
 #. type: Plain text
 #: upstream/_guides/centralized-log-management.adoc:23
+#, fuzzy
 msgid ""
 "The following examples will all be based on the same example application "
 "that you can create with the following steps."
-msgstr ""
+msgstr "以下の例はすべて、以下の手順で作成できる同じアプリケーションの例を基にしています。"
 
 #. type: Plain text
 #: upstream/_guides/centralized-log-management.adoc:25
+#, fuzzy
 msgid ""
 "Create an application with the `quarkus-logging-gelf` extension. You can use "
 "the following Maven command to create it:"
-msgstr ""
+msgstr "`quarkus-logging-gelf` の拡張子を持つアプリケーションを作成します。以下のMavenコマンドを使って作成します。"
 
 #. type: delimited block -
 #: upstream/_guides/centralized-log-management.adoc:34
@@ -89,11 +102,14 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/centralized-log-management.adoc:38
+#, fuzzy
 msgid ""
 "If you already have your Quarkus project configured, you can add the "
 "`logging-gelf` extension to your project by running the following command in "
 "your project base directory:"
 msgstr ""
+"すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリで以下のコマンドを実行することで、プロジェクトに "
+"`logging-gelf` 拡張機能を追加することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/centralized-log-management.adoc:42
@@ -103,8 +119,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/centralized-log-management.adoc:45
+#, fuzzy
 msgid "This will add the following to your `pom.xml`:"
-msgstr ""
+msgstr "これにより、 `pom.xml`."
 
 #. type: delimited block -
 #: upstream/_guides/centralized-log-management.adoc:52
@@ -118,10 +135,11 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/centralized-log-management.adoc:55
+#, fuzzy
 msgid ""
 "For demonstration purposes, we create an endpoint that does nothing but log "
 "a sentence. You don't need to do this inside your application."
-msgstr ""
+msgstr "デモのために、文章をログに記録するだけのエンドポイントを作成します。これをアプリケーション内で行う必要はありません。"
 
 #. type: delimited block -
 #: upstream/_guides/centralized-log-management.adoc:61
@@ -145,7 +163,8 @@ msgid ""
 "@Path(\"/gelf-logging\")\n"
 "@ApplicationScoped\n"
 "public class GelfLoggingResource {\n"
-"    private static final Logger LOG = Logger.getLogger(GelfLoggingResource.class);\n"
+"    private static final Logger LOG = Logger.getLogger(GelfLoggingResource."
+"class);\n"
 msgstr ""
 
 #. type: delimited block -
@@ -166,10 +185,11 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/centralized-log-management.adoc:78
+#, fuzzy
 msgid ""
 "Configure the GELF log handler to send logs to an external UDP endpoint on "
 "the port 12201:"
-msgstr ""
+msgstr "GELF ログハンドラを構成して、ポート 12201 の外部 UDP エンドポイントにログを送信します。"
 
 #. type: delimited block -
 #: upstream/_guides/centralized-log-management.adoc:84
@@ -182,44 +202,50 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/centralized-log-management.adoc:86
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Send logs to Graylog"
-msgstr ""
+msgstr "ログをGraylogに送信"
 
 #. type: Plain text
 #: upstream/_guides/centralized-log-management.adoc:89
+#, fuzzy
 msgid ""
 "To send logs to Graylog, you first need to launch the components that "
 "compose the Graylog stack:"
-msgstr ""
+msgstr "ログをGraylogに送信するには、まずGraylogスタックを構成するコンポーネントを起動する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/centralized-log-management.adoc:91
+#, fuzzy
 msgid "MongoDB"
-msgstr ""
+msgstr "MongoDB"
 
 #. type: Plain text
 #: upstream/_guides/centralized-log-management.adoc:92
 #: upstream/_guides/centralized-log-management.adoc:172
 #: upstream/_guides/centralized-log-management.adoc:261
 #: upstream/_guides/centralized-log-management.adoc:347
+#, fuzzy
 msgid "Elasticsearch"
-msgstr ""
+msgstr "エラスティックサーチ"
 
 #. type: Plain text
 #: upstream/_guides/centralized-log-management.adoc:93
+#, fuzzy
 msgid "Graylog"
-msgstr ""
+msgstr "グレイログ"
 
 #. type: Plain text
 #: upstream/_guides/centralized-log-management.adoc:95
 #: upstream/_guides/centralized-log-management.adoc:176
 #: upstream/_guides/centralized-log-management.adoc:265
 #: upstream/_guides/centralized-log-management.adoc:351
+#, fuzzy
 msgid ""
 "You can do this via the following docker-compose file that you can launch "
 "via `docker-compose run -d`:"
 msgstr ""
+"これは、 `docker-compose run -d` から起動できる以下の docker-compose ファイルを使って行うことができます。"
 
 #. type: delimited block -
 #: upstream/_guides/centralized-log-management.adoc:99
@@ -247,8 +273,7 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_guides/centralized-log-management.adoc:114
 #, no-wrap
-msgid ""
-"  mongo:\n"
+msgid "  mongo:\n"
 "    image: mongo:4.0\n"
 "    networks:\n"
 "      - graylog\n"
@@ -276,59 +301,72 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_guides/centralized-log-management.adoc:132
 #, no-wrap
-msgid ""
-"networks:\n"
+msgid "networks:\n"
 "  graylog:\n"
 "    driver: bridge\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/centralized-log-management.adoc:136
+#, fuzzy
 msgid ""
 "Then, you need to create a UDP input in Graylog.  You can do it from the "
 "Graylog web console (System -> Input -> Select GELF UDP) available at http://"
 "localhost:9000 or via the API."
 msgstr ""
+"次に、GraylogでUDP入力を作成する必要があります。これは、GraylogのWebコンソール(System → Input → Select "
+"GELF UDP)から、 http://localhost:9000 、またはAPI経由で行うことができます。"
 
 #. type: Plain text
 #: upstream/_guides/centralized-log-management.adoc:138
+#, fuzzy
 msgid ""
 "This curl example will create a new Input of type GELF UDP, it uses the "
 "default login from Graylog (admin/admin)."
 msgstr ""
+"この curl の例では、GELF UDP タイプの新しい入力を作成し、Graylog (admin/admin) "
+"からのデフォルトのログインを使用します。"
 
 #. type: delimited block -
 #: upstream/_guides/centralized-log-management.adoc:144
 #, no-wrap
 msgid ""
-"curl -H \"Content-Type: application/json\" -H \"Authorization: Basic YWRtaW46YWRtaW4=\" -H \"X-Requested-By: curl\" -X POST -v -d \\\n"
-"'{\"title\":\"udp input\",\"configuration\":{\"recv_buffer_size\":262144,\"bind_address\":\"0.0.0.0\",\"port\":12201,\"decompress_size_limit\":8388608},\"type\":\"org.graylog2.inputs.gelf.udp.GELFUDPInput\",\"global\":true}' \\\n"
+"curl -H \"Content-Type: application/json\" -H \"Authorization: Basic "
+"YWRtaW46YWRtaW4=\" -H \"X-Requested-By: curl\" -X POST -v -d \\\n"
+"'{\"title\":\"udp input\",\"configuration\":{\"recv_buffer_size\":"
+"262144,\"bind_address\":\"0.0.0.0\",\"port\":12201,\"decompress_size_limit\":"
+"8388608},\"type\":\"org.graylog2.inputs.gelf.udp.GELFUDPInput\",\"global\":"
+"true}' \\\n"
 "http://localhost:9000/api/system/inputs\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/centralized-log-management.adoc:147
+#, fuzzy
 msgid ""
 "Launch your application, you should see your logs arriving inside Graylog."
-msgstr ""
+msgstr "アプリケーションを起動すると、Graylog内にログが届くのがわかるはずです。"
 
 #. type: Title ==
 #: upstream/_guides/centralized-log-management.adoc:148
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Send logs to Logstash / the Elastic Stack (ELK)"
-msgstr ""
+msgstr "Logstash / Elastic Stack (ELK)にログを送信する"
 
 #. type: Plain text
 #: upstream/_guides/centralized-log-management.adoc:151
+#, fuzzy
 msgid ""
 "Logstash comes by default with an Input plugin that can understand the GELF "
 "format, we will first create a pipeline that enables this plugin."
 msgstr ""
+"LogstashにはGELF形式を理解できるInputプラグインがデフォルトで付属しているので、まずこのプラグインを有効にするパイプラインを作成します。"
 
 #. type: Plain text
 #: upstream/_guides/centralized-log-management.adoc:153
+#, fuzzy
 msgid "Create the following file in `$HOME/pipelines/gelf.conf`:"
-msgstr ""
+msgstr "`$HOME/pipelines/gelf.conf` に以下のファイルを作成します。"
 
 #. type: delimited block -
 #: upstream/_guides/centralized-log-management.adoc:167
@@ -349,26 +387,28 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/centralized-log-management.adoc:170
+#, fuzzy
 msgid "Finally, launch the components that compose the Elastic Stack:"
-msgstr ""
+msgstr "最後に、Elastic Stackを構成するコンポーネントを起動します。"
 
 #. type: Plain text
 #: upstream/_guides/centralized-log-management.adoc:173
+#, fuzzy
 msgid "Logstash"
-msgstr ""
+msgstr "ログスタッシュ"
 
 #. type: Plain text
 #: upstream/_guides/centralized-log-management.adoc:174
 #: upstream/_guides/centralized-log-management.adoc:263
 #: upstream/_guides/centralized-log-management.adoc:349
+#, fuzzy
 msgid "Kibana"
-msgstr ""
+msgstr "きばな"
 
 #. type: delimited block -
 #: upstream/_guides/centralized-log-management.adoc:181
 #, no-wrap
-msgid ""
-"# Launch Elasticsearch\n"
+msgid "# Launch Elasticsearch\n"
 "version: '3.2'\n"
 msgstr ""
 
@@ -425,54 +465,63 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_guides/centralized-log-management.adoc:220
 #, no-wrap
-msgid ""
-"networks:\n"
+msgid "networks:\n"
 "  elk:\n"
 "    driver: bridge\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/centralized-log-management.adoc:224
+#, fuzzy
 msgid ""
 "Launch your application, you should see your logs arriving inside the "
 "Elastic Stack; you can use Kibana available at http://localhost:5601/ to "
 "access them."
 msgstr ""
+"アプリケーションを起動すると、Elastic Stack内にログが到着しているのが確認できるはずです。 http://localhost:5601/ "
+"で入手できるKibanaを使ってアクセスできます。"
 
 #. type: Title ==
 #: upstream/_guides/centralized-log-management.adoc:225
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Send logs to Fluentd (EFK)"
-msgstr ""
+msgstr "Fluentd（EFK）へのログ送信"
 
 #. type: Plain text
 #: upstream/_guides/centralized-log-management.adoc:229
+#, fuzzy
 msgid ""
 "First, you need to create a Fluentd image with the needed plugins: "
 "elasticsearch and input-gelf.  You can use the following Dockerfile that "
 "should be created inside a `fluentd` directory."
 msgstr ""
+"まず、必要なプラグインである elasticsearch と input-elf を使って Fluentd イメージを作成します。 `fluentd` "
+"ディレクトリ内に作成する必要がある以下の Dockerfile を使用することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/centralized-log-management.adoc:235
 #, no-wrap
 msgid ""
 "FROM fluent/fluentd:v1.3-debian\n"
-"RUN [\"gem\", \"install\", \"fluent-plugin-elasticsearch\", \"--version\", \"3.7.0\"]\n"
-"RUN [\"gem\", \"install\", \"fluent-plugin-input-gelf\", \"--version\", \"0.3.1\"]\n"
+"RUN [\"gem\", \"install\", \"fluent-plugin-elasticsearch\", \"--version\", "
+"\"3.7.0\"]\n"
+"RUN [\"gem\", \"install\", \"fluent-plugin-input-gelf\", \"--version\", \"0."
+"3.1\"]\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/centralized-log-management.adoc:238
+#, fuzzy
 msgid "You can build the image or let docker-compose build it for you."
-msgstr ""
+msgstr "イメージをビルドするか、docker-composeにビルドを任せることができます。"
 
 #. type: Plain text
 #: upstream/_guides/centralized-log-management.adoc:240
+#, fuzzy
 msgid ""
 "Then you need to create a fluentd configuration file inside `$HOME/fluentd/"
 "fluent.conf`"
-msgstr ""
+msgstr "それから、fluentd 設定ファイルを `$HOME/fluentd/fluent.conf`"
 
 #. type: delimited block -
 #: upstream/_guides/centralized-log-management.adoc:249
@@ -500,14 +549,16 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/centralized-log-management.adoc:259
+#, fuzzy
 msgid "Finally, launch the components that compose the EFK Stack:"
-msgstr ""
+msgstr "最後に、EFKスタックを構成するコンポーネントを起動します。"
 
 #. type: Plain text
 #: upstream/_guides/centralized-log-management.adoc:262
 #: upstream/_guides/centralized-log-management.adoc:348
+#, fuzzy
 msgid "Fluentd"
-msgstr ""
+msgstr "流れるような"
 
 #. type: delimited block -
 #: upstream/_guides/centralized-log-management.adoc:280
@@ -563,8 +614,7 @@ msgstr ""
 #: upstream/_guides/centralized-log-management.adoc:306
 #: upstream/_guides/centralized-log-management.adoc:392
 #, no-wrap
-msgid ""
-"networks:\n"
+msgid "networks:\n"
 "  efk:\n"
 "    driver: bridge\n"
 msgstr ""
@@ -572,48 +622,58 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/centralized-log-management.adoc:309
 #: upstream/_guides/centralized-log-management.adoc:406
+#, fuzzy
 msgid ""
 "Launch your application, you should see your logs arriving inside EFK: you "
 "can use Kibana available at http://localhost:5601/ to access them."
 msgstr ""
+"アプリケーションを起動すると、EFK内にログが到着しているのが確認できるはずです: それらにアクセスするには、 http://localhost:"
+"5601/ で利用可能な Kibana を使用することができます。"
 
 #. type: Title ==
 #: upstream/_guides/centralized-log-management.adoc:310
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Fluentd alternative: use Syslog"
-msgstr ""
+msgstr "Fluentdの代替：Syslogを使用"
 
 #. type: Plain text
 #: upstream/_guides/centralized-log-management.adoc:314
+#, fuzzy
 msgid ""
 "You can also send your logs to Fluentd using a Syslog input.  As opposed to "
 "the GELF input, the Syslog input will not render multiline logs in one "
 "event, that's why we advise to use the GELF input that we implement in "
 "Quarkus."
 msgstr ""
+"Syslog入力を使ってFluentdにログを送ることもできます。GELF入力とは対照的に、Syslog入力は1つのイベントで複数行のログをレンダリングすることができないため、Quarkusで実装されているGELF入力を使用することをお勧めします。"
 
 #. type: Plain text
 #: upstream/_guides/centralized-log-management.adoc:317
+#, fuzzy
 msgid ""
 "First, you need to create a Fluentd image with the elasticsearch plugin.  "
 "You can use the following Dockerfile that should be created inside a "
 "`fluentd` directory."
 msgstr ""
+"まず、elasticsearchプラグインでFluentdイメージを作成する必要があります。 `fluentd` "
+"ディレクトリ内に作成する必要がある以下の Dockerfile を使用します。"
 
 #. type: delimited block -
 #: upstream/_guides/centralized-log-management.adoc:322
 #, no-wrap
 msgid ""
 "FROM fluent/fluentd:v1.3-debian\n"
-"RUN [\"gem\", \"install\", \"fluent-plugin-elasticsearch\", \"--version\", \"3.7.0\"]\n"
+"RUN [\"gem\", \"install\", \"fluent-plugin-elasticsearch\", \"--version\", "
+"\"3.7.0\"]\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/centralized-log-management.adoc:325
+#, fuzzy
 msgid ""
 "Then, you need to create a fluentd configuration file inside `$HOME/fluentd/"
 "fluent.conf`"
-msgstr ""
+msgstr "次に、fluentd設定ファイルを `$HOME/fluentd/fluent.conf`"
 
 #. type: delimited block -
 #: upstream/_guides/centralized-log-management.adoc:335
@@ -642,8 +702,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/centralized-log-management.adoc:345
+#, fuzzy
 msgid "Then, launch the components that compose the EFK Stack:"
-msgstr ""
+msgstr "そして、EFKスタックを構成するコンポーネントを起動します。"
 
 #. type: delimited block -
 #: upstream/_guides/centralized-log-management.adoc:379
@@ -665,8 +726,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/centralized-log-management.adoc:395
+#, fuzzy
 msgid "Finally, configure your application to send logs to EFK using Syslog:"
-msgstr ""
+msgstr "最後に、Syslogを使用してEFKにログを送信するようにアプリケーションを設定します。"
 
 #. type: delimited block -
 #: upstream/_guides/centralized-log-management.adoc:403
@@ -681,19 +743,22 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/centralized-log-management.adoc:409
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Configuration Reference"
-msgstr ""
+msgstr "設定リファレンス"
 
 #. type: Plain text
 #: upstream/_guides/centralized-log-management.adoc:412
+#, fuzzy
 msgid "Configuration is done through the usual `application.properties` file."
-msgstr ""
+msgstr "設定は通常の `application.properties` ファイルから行います。"
 
 #. type: Plain text
 #: upstream/_guides/centralized-log-management.adoc:416
+#, fuzzy
 msgid ""
 "This extension uses the `logstash-gelf` library that allow more "
 "configuration options via system properties, you can access its "
 "documentation here: https://logging.paluch.biz/ ."
 msgstr ""
+"この拡張機能は、システムのプロパティを介してより多くの設定オプションを許可する `logstash-gelf` ライブラリを使用しています。"
