--- a/i18n/po/ja_JP/_guides/consul-config.adoc.po
+++ b/i18n/po/ja_JP/_guides/consul-config.adoc.po
@@ -21,69 +21,79 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/consul-config.adoc:6
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Quarkus - Reading properties from Consul"
-msgstr ""
+msgstr "Quarkus - 領事からプロパティを読み取る"
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:12
+#, fuzzy
 msgid ""
 "This guide explains how your Quarkus application can read configuration "
 "properties at runtime from https://www.consul.io[Consul]."
 msgstr ""
+"このガイドでは、Quarkusアプリケーションが実行時に link:https://www.consul."
+"io[Consul]から設定プロパティを読み取る方法について説明します。"
 
 #. type: Title ==
 #: upstream/_guides/consul-config.adoc:15
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Prerequisites"
-msgstr ""
+msgstr "前提条件"
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:18
+#, fuzzy
 msgid "To complete this guide, you need:"
-msgstr ""
+msgstr "このガイドを完成させるには、以下のものが必要です。"
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:20
+#, fuzzy
 msgid "less than 15 minutes"
-msgstr ""
+msgstr "15分以内"
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:21
+#, fuzzy
 msgid "an IDE"
-msgstr ""
+msgstr "アイディーイーイー"
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:22
+#, fuzzy
 msgid "JDK 1.8+ installed with `JAVA_HOME` configured appropriately"
-msgstr ""
+msgstr "JDK 1.8+ がインストールされ、 `JAVA_HOME` が適切に設定されています。"
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:23
+#, fuzzy
 msgid "Apache Maven {maven-version}"
-msgstr ""
+msgstr "Apache Maven {maven-version} の場合"
 
 #. type: Title ==
 #: upstream/_guides/consul-config.adoc:25
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Solution"
-msgstr ""
+msgstr "解決策"
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:28
+#, fuzzy
 msgid ""
 "We recommend that you follow the instructions in the next sections and "
 "create the application step by step."
-msgstr ""
+msgstr "次項の説明に従って、一歩一歩アプリを作成していくことをお勧めします。"
 
 #. type: Title ==
 #: upstream/_guides/consul-config.adoc:29
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Introduction"
-msgstr ""
+msgstr "序章"
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:33
+#, fuzzy
 msgid ""
 "Consul is a versatile system which among other things, provides a "
 "distributed Key-Value store that is used in many architectures as a source "
@@ -91,46 +101,58 @@ msgid ""
 "consul-config` extension interacts with in order to allow Quarkus "
 "applications to read runtime configuration properties from Consul."
 msgstr ""
+"Consulは、サービスの設定のソースとして多くのアーキテクチャで使用されている分散型のキーバリューストアを提供する多目的システムです。このキーバリューストアは、Quarkus "
+"アプリケーションが Consul から実行時の設定プロパティを読み込めるようにするために、 `quarkus-consul-config` "
+"拡張機能が相互に作用するものです。"
 
 #. type: Title ==
 #: upstream/_guides/consul-config.adoc:34
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Starting Consul"
-msgstr ""
+msgstr "領事を開始する"
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:37
+#, fuzzy
 msgid ""
 "There are various ways to start Consul that vary in complexity, but for the "
 "purposes of this guide, we elect to start a single Consul server with no "
 "persistence via Docker, like so:"
 msgstr ""
+"Consul を起動する方法は複雑さによって様々ですが、このガイドの目的のために、Docker を介して永続性のない単一の Consul "
+"サーバを起動することを選択します。"
 
 #. type: delimited block -
 #: upstream/_guides/consul-config.adoc:41
 #, no-wrap
-msgid "docker run --rm --name consul -p 8500:8500 -p 8501:8501 consul:1.7 agent -dev -ui -client=0.0.0.0 -bind=0.0.0.0 --https-port=8501\n"
+msgid ""
+"docker run --rm --name consul -p 8500:8500 -p 8501:8501 consul:1.7 agent -"
+"dev -ui -client=0.0.0.0 -bind=0.0.0.0 --https-port=8501\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:44
+#, fuzzy
 msgid ""
 "Please consult the https://www.consul.io/docs/install[documentation] to "
 "learn more about the various Consul installation options."
 msgstr ""
+"様々なConsulのインストールオプションについては、 link:https://www.consul.io/docs/"
+"install[ドキュメントを]参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/consul-config.adoc:45
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Creating the Maven project"
-msgstr ""
+msgstr "Mavenプロジェクトの作成"
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:48
+#, fuzzy
 msgid ""
 "First, we need a new project. Create a new project with the following "
 "command:"
-msgstr ""
+msgstr "まず、新しいプロジェクトが必要です。以下のコマンドで新規プロジェクトを作成します。"
 
 #. type: delimited block -
 #: upstream/_guides/consul-config.adoc:58
@@ -147,18 +169,22 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:61
+#, fuzzy
 msgid ""
 "This command generates a Maven project with a REST endpoint and imports the "
 "`consul-config` extension."
-msgstr ""
+msgstr "このコマンドは、RESTエンドポイントを持つMavenプロジェクトを生成し、 `consul-config` 拡張子をインポートします。"
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:64
+#, fuzzy
 msgid ""
 "If you already have your Quarkus project configured, you can add the `consul-"
 "config` extension to your project by running the following command in your "
 "project base directory:"
 msgstr ""
+"すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリで以下のコマンドを実行することで、プロジェクトに `consul-"
+"config` 拡張機能を追加することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/consul-config.adoc:68
@@ -168,8 +194,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:71
+#, fuzzy
 msgid "This will add the following to your `pom.xml`:"
-msgstr ""
+msgstr "これにより、 `pom.xml`."
 
 #. type: delimited block -
 #: upstream/_guides/consul-config.adoc:78
@@ -183,17 +210,21 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/consul-config.adoc:80
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "GreetingController"
-msgstr ""
+msgstr "グリーティングコントローラ"
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:84
+#, fuzzy
 msgid ""
 "The Quarkus Maven plugin automatically generated a `GreetingResource` JAX-RS "
 "resource in the `src/main/java/org/acme/consul/config/client/"
 "GreetingResource.java` file that looks like:"
 msgstr ""
+"Quarkus Mavenプラグインは、 `src/main/java/org/acme/consul/config/client/"
+"GreetingResource.java` ファイル内の `GreetingResource` JAX-"
+"RSリソースを自動的に生成して、次のように表示します。"
 
 #. type: delimited block -
 #: upstream/_guides/consul-config.adoc:88
@@ -217,8 +248,7 @@ msgstr ""
 #: upstream/_guides/consul-config.adoc:96
 #: upstream/_guides/consul-config.adoc:120
 #, no-wrap
-msgid ""
-"@Path(\"/hello\")\n"
+msgid "@Path(\"/hello\")\n"
 "public class GreetingResource {\n"
 msgstr ""
 
@@ -236,11 +266,14 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:106
+#, fuzzy
 msgid ""
 "As we want to use configuration properties obtained from the Config Server, "
 "we will update the `GreetingResource` to inject the `message` property. The "
 "updated code will look like this:"
 msgstr ""
+"Config Serverから取得した設定プロパティを使用したいので、 `GreetingResource` を更新して `message` "
+"プロパティを注入します。更新したコードは以下のようになります。"
 
 #. type: delimited block -
 #: upstream/_guides/consul-config.adoc:117
@@ -270,38 +303,46 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/consul-config.adoc:132
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Configuring the application"
-msgstr ""
+msgstr "アプリケーションの設定"
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:135
+#, fuzzy
 msgid ""
 "Quarkus provides various configuration knobs under the `quarkus.consul-"
 "config` root. For the purposes of this guide, our Quarkus application is "
 "going to be configured in `application.properties` as follows:"
 msgstr ""
+"Quarkusは、 `quarkus.consul-config` "
+"ルートの下に様々な設定ノブを提供しています。このガイドの目的のために、私たちのQuarkusアプリケーションは以下のように `application."
+"properties` で設定されることになっています。"
 
 #. type: delimited block -
 #: upstream/_guides/consul-config.adoc:144
 #, no-wrap
 msgid ""
-"# use the same name as the application name that was configured when standing up the Config Server\n"
+"# use the same name as the application name that was configured when "
+"standing up the Config Server\n"
 "quarkus.application.name=consul-test\n"
 "# enable retrieval of configuration from Consul - this is off by default\n"
 "quarkus.consul-config.enabled=true\n"
-"# this is a key in Consul's KV store that the Quarkus application will read and try to extract properties from\n"
-"quarkus.consul-config.properties-value-keys=config/${quarkus.application.name}\n"
+"# this is a key in Consul's KV store that the Quarkus application will read "
+"and try to extract properties from\n"
+"quarkus.consul-config.properties-value-keys=config/${quarkus.application."
+"name}\n"
 msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/consul-config.adoc:146
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Add Configuration to Consul"
-msgstr ""
+msgstr "コンスルに設定を追加"
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:150
+#, fuzzy
 msgid ""
 "For the previous application configuration to work, we need to add a `config/"
 "consul-test` key under Consul's Key Value store. The value of this key will "
@@ -309,6 +350,9 @@ msgid ""
 "configuration.  In this case we want to add the following data to the "
 "`config/consul-test` key:"
 msgstr ""
+"以前のアプリケーション設定を動作させるためには、Consulのキーバリューストアの下に `config/consul-test` "
+"キーを追加する必要があります。このキーの値は、基本的にはアプリケーションの設定を含むプロパティ「ファイル」になります。この場合、 `config/"
+"consul-test` キーに以下のデータを追加したいと思います。"
 
 #. type: delimited block -
 #: upstream/_guides/consul-config.adoc:154
@@ -318,6 +362,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:158
+#, fuzzy
 msgid ""
 "When adding this configuration from the UI, Consul will automatically "
 "convert the data into the necessary base64 encoding. If you instead add the "
@@ -325,9 +370,13 @@ msgid ""
 "update-key[REST API], make sure to first encode the previous data into "
 "base64."
 msgstr ""
+"UI からこの設定を追加すると、Consul は自動的に必要な base64 エンコーディングにデータを変換します。代わりに Consul の link:"
+"https://www.consul.io/api/kv.html#create-update-key[REST API "
+"を]介して設定を追加する場合は、まず前のデータを base64 にエンコードするようにしてください。"
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:162
+#, fuzzy
 msgid ""
 "In this use case we made the value of the key as a properties \"file\", "
 "because we used `quarkus.consul-config.properties-value-keys` in the "
@@ -336,42 +385,53 @@ msgid ""
 "these two properties can be used simultaneously, while each one also "
 "supports setting multiple keys."
 msgstr ""
+"このユースケースでは、アプリケーションで `quarkus.consul-config.properties-value-keys` "
+"を使用しているため、キーの値をプロパティ「ファイル」にしました。また、この拡張機能では、 `quarkus.consul-config.raw-"
+"value-keys` "
+"を使用した場合に、キーの生の値を使用する機能を提供しています。さらに、この2つのプロパティは同時に使用することができ、それぞれが複数のキーの設定にも対応しています。"
 
 #. type: Title ==
 #: upstream/_guides/consul-config.adoc:163
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Package and run the application"
-msgstr ""
+msgstr "アプリケーションをパッケージ化して実行する"
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:167
+#, fuzzy
 msgid ""
 "Run the application with: `./mvnw compile quarkus:dev`.  Open your browser "
 "to http://localhost:8080/greeting."
 msgstr ""
+"アプリケーションを実行するには、次の手順を実行します: `./mvnw compile quarkus:dev`.ブラウザを http://"
+"localhost:8080/greeting  に開きます。"
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:169
+#, fuzzy
 msgid ""
 "The result should be: `Hello from Consul` as it is the value obtained from "
 "the Consul Key Value store."
-msgstr ""
+msgstr "結果は、Consulキーバリューストアから取得した値なので、 `Hello from Consul` となるはずです。"
 
 #. type: Title ==
 #: upstream/_guides/consul-config.adoc:170
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Run the application as a native executable"
-msgstr ""
+msgstr "アプリケーションをネイティブ実行ファイルとして実行する"
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:173
+#, fuzzy
 msgid ""
 "You can of course create a native image using the instructions of the link:"
 "building-native-image[Building a native executable guide]."
 msgstr ""
+"もちろん、 link:building-native-"
+"image[ネイティブ実行ファイルの構築ガイド]の指示を使ってネイティブイメージを作成することもできます。"
 
 #. type: Title ==
 #: upstream/_guides/consul-config.adoc:174
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Configuration Reference"
-msgstr ""
+msgstr "設定リファレンス"
