--- a/i18n/po/ja_JP/_guides/context-propagation.adoc.po
+++ b/i18n/po/ja_JP/_guides/context-propagation.adoc.po
@@ -21,23 +21,32 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/context-propagation.adoc:6
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Context Propagation in Quarkus"
-msgstr ""
+msgstr "Quarkusでのコンテキスト伝搬"
 
 #. type: Plain text
 #: upstream/_guides/context-propagation.adoc:15
-#, no-wrap
+#, no-wrap, fuzzy
 msgid ""
-"Traditional blocking code uses link:https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/lang/ThreadLocal.html[`ThreadLocal`]\n"
+"Traditional blocking code uses link:https://docs.oracle.com/en/java/javase/"
+"11/docs/api/java.base/java/lang/ThreadLocal.html[`ThreadLocal`]\n"
 " variables to store contextual objects in order to avoid\n"
-"passing them as parameters everywhere. Many Quarkus extensions require those contextual objects to operate\n"
-"properly: link:rest-json[RESTEasy], link:cdi-reference[ArC] and link:transaction[Transaction]\n"
+"passing them as parameters everywhere. Many Quarkus extensions require those "
+"contextual objects to operate\n"
+"properly: link:rest-json[RESTEasy], link:cdi-reference[ArC] and link:"
+"transaction[Transaction]\n"
 "for example.\n"
 msgstr ""
+"従来のブロッキングコードでは  link:https://docs.oracle.com/en/java/javase/11/docs/api/java."
+"base/java/lang/ThreadLocal."
+"html[`ThreadLocal`]変数を使用してコンテキストオブジェクトを格納します。多くのQuarkus拡張機能は、適切に動作するためにこれらのコンテキストオブジェクトを必要とします。例えば、 "
+"link:rest-json[RESTEasy]、 link:cdi-reference[ArC]、 link:"
+"transaction[Transaction]などです。"
 
 #. type: Plain text
 #: upstream/_guides/context-propagation.adoc:20
+#, fuzzy
 msgid ""
 "If you write reactive/async code, you have to cut your work into a pipeline "
 "of code blocks that get executed \"later\", and in practice after the method "
@@ -45,9 +54,13 @@ msgid ""
 "`ThreadLocal` variables stop working, because your reactive code gets "
 "executed in another thread, after the caller ran its `finally` block."
 msgstr ""
+"リアクティブ/非同期コードを書く場合、「後で」実行されるコードブロックのパイプラインに作業を切り "
+"込まなければならず、実際には、定義したメソッドが返された後に実行されます。そのため、 `try/finally` ブロックや `ThreadLocal` "
+"変数は動作しなくなります。なぜならば、呼び出し元が `finally` ブロックを実行した後に、 リアクティブコードは別のスレッドで実行されるからです。"
 
 #. type: Plain text
 #: upstream/_guides/context-propagation.adoc:24
+#, fuzzy
 msgid ""
 "link:https://github.com/eclipse/microprofile-context-"
 "propagation[MicroProfile Context Propagation] was made to make those Quarkus "
@@ -55,25 +68,33 @@ msgid ""
 "those contextual values that used to be in thread-locals, and restoring them "
 "when your code is called."
 msgstr ""
+"link:https://github.com/eclipse/microprofile-context-"
+"propagation[MicroProfile Context Propagation]は、リアクティブ/"
+"非同期設定でQuarkus拡張機能が正しく動作するようにするために作られました。これは、スレッドローカルにあったコンテキスト値を取得し、コードが呼び出されたときにそれらを復元することで動作します。"
 
 #. type: Title ==
 #: upstream/_guides/context-propagation.adoc:25
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Setting it up"
-msgstr ""
+msgstr "設定する"
 
 #. type: Plain text
 #: upstream/_guides/context-propagation.adoc:29
+#, fuzzy
 msgid ""
 "If you are using link:http://smallrye.io/smallrye-mutiny[Mutiny] (the "
 "`quarkus-mutiny` extension), you just need to add the the `quarkus-smallrye-"
 "context-propagation` extension to enable context propagation."
 msgstr ""
+"link:http://smallrye.io/smallrye-mutiny[Mutiny]( `quarkus-mutiny` の拡張子) "
+"を使用している場合は、コンテキストの伝播を有効にするために `quarkus-smallrye-context-propagation` "
+"の拡張子を追加するだけです。"
 
 #. type: Plain text
 #: upstream/_guides/context-propagation.adoc:31
+#, fuzzy
 msgid "In other words, add the following dependencies to your `pom.xml`:"
-msgstr ""
+msgstr "つまり、以下の依存関係を `pom.xml` に追加します。"
 
 #. type: delimited block -
 #: upstream/_guides/context-propagation.adoc:50
@@ -99,39 +120,45 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/context-propagation.adoc:53
+#, fuzzy
 msgid ""
 "With this, you will get context propagation for ArC, RESTEasy and "
 "transactions, if you are using them."
-msgstr ""
+msgstr "これにより、ArC、RESTEasy、トランザクションを使用している場合は、コンテキストの伝播を得ることができます。"
 
 #. type: Title ==
 #: upstream/_guides/context-propagation.adoc:54
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Usage example with Mutiny"
-msgstr ""
+msgstr "反乱との使用例"
 
 #. type: Block title
 #: upstream/_guides/context-propagation.adoc:57
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Mutiny"
-msgstr ""
+msgstr "反乱"
 
 #. type: delimited block =
 #: upstream/_guides/context-propagation.adoc:60
+#, fuzzy
 msgid ""
 "This section uses Mutiny reactive types, if you're not familiar with them, "
 "read the link:getting-started-reactive#mutiny[Getting Started with Reactive "
 "guide] first."
 msgstr ""
+"このセクションでは、Mutinyの link:getting-started-reactive#mutiny[リアクティブタイプ]を使用しています。"
 
 #. type: Plain text
 #: upstream/_guides/context-propagation.adoc:65
+#, fuzzy
 msgid ""
 "Let's write a REST endpoint that reads the next 3 items from a link:"
 "kafka[Kafka topic], stores them in a database using link:hibernate-orm-"
 "panache[Hibernate ORM with Panache] (all in the same transaction) before "
 "returning them to the client, you can do it like this:"
 msgstr ""
+"link:kafka[Kafkaトピック]から次の3つのアイテムを読み込んで、 link:hibernate-orm-panache[Hibernate "
+"ORM with Panacheを使っ]てデータベースに保存してからクライアントに返すRESTエンドポイントを書いてみましょう。"
 
 #. type: delimited block -
 #: upstream/_guides/context-propagation.adoc:71
@@ -163,27 +190,32 @@ msgid ""
 "                    // thanks to context propagation\n"
 "                    priceEntity.persist();\n"
 "                    return price;\n"
-"                    // the transaction is committed once the stream completes\n"
+"                    // the transaction is committed once the stream "
+"completes\n"
 "                });\n"
 "    }\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/context-propagation.adoc:96
+#, fuzzy
 msgid ""
 "Notice that thanks to Mutiny support for context propagation, this works out "
 "of the box.  The 3 items are persisted using the same transaction and this "
 "transaction is committed when the stream completes."
 msgstr ""
+"コンテキストの伝播のための Mutiny "
+"サポートのおかげで、これは箱から出してすぐに動作することに注目してください。3つのアイテムは同じトランザクションを使用して保持され、このトランザクションはストリームが完了するとコミットされます。"
 
 #. type: Title ==
 #: upstream/_guides/context-propagation.adoc:97
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Usage example for `CompletionStage`"
-msgstr ""
+msgstr "使用例 `CompletionStage`"
 
 #. type: Plain text
 #: upstream/_guides/context-propagation.adoc:105
+#, fuzzy
 msgid ""
 "If you are using link:https://docs.oracle.com/en/java/javase/11/docs/api/"
 "java.base/java/util/concurrent/CompletionStage.html[`CompletionStage`] you "
@@ -193,7 +225,15 @@ msgid ""
 "Star Wars people, then store them in the database using link:hibernate-orm-"
 "panache[Hibernate ORM with Panache] (all in the same transaction) before "
 "returning them to the client as JSON using link:rest-json[Jackson or JSON-B]:"
+""
 msgstr ""
+"を使用している場合は  link:https://docs.oracle.com/en/java/javase/11/docs/api/java."
+"base/java/util/concurrent/CompletionStage."
+"html[`CompletionStage`]を使用するには、手動でコンテキストを伝播させる必要があります。 `ThreadContext` や "
+"`ManagedExecutor` を注入することで、すべてのコンテキストを伝播させることができます。例えば、ここでは link:vertx[Vert."
+"x Web Client]を使用してスターウォーズの人々のリストを取得し、 link:hibernate-orm-panache[Hibernate "
+"ORM with Panache を]使用してデータベースに保存します (全て同じトランザクション内で) その後、 link:rest-"
+"json[Jackson または JSON-B] を使用して JSON としてクライアントに返します。"
 
 #. type: delimited block -
 #: upstream/_guides/context-propagation.adoc:111
@@ -219,15 +259,19 @@ msgid ""
 "                          .setDefaultPort(443)\n"
 "                          .setSsl(true));\n"
 "        // get the list of Star Wars people, with context capture\n"
-"        return threadContext.withContextCapture(client.get(\"/api/people/\").send())\n"
+"        return threadContext.withContextCapture(client.get(\"/api/people/\")."
+"send())\n"
 "                .thenApplyAsync(response -> {\n"
 "                    JsonObject json = response.bodyAsJsonObject();\n"
-"                    List<Person> persons = new ArrayList<>(json.getInteger(\"count\"));\n"
+"                    List<Person> persons = new ArrayList<>(json."
+"getInteger(\"count\"));\n"
 "                    // Store them in the DB\n"
-"                    // Note that we're still in the same transaction as the outer method\n"
+"                    // Note that we're still in the same transaction as the "
+"outer method\n"
 "                    for (Object element : json.getJsonArray(\"results\")) {\n"
 "                        Person person = new Person();\n"
-"                        person.name = ((JsonObject) element).getString(\"name\");\n"
+"                        person.name = ((JsonObject) element)."
+"getString(\"name\");\n"
 "                        person.persist();\n"
 "                        persons.add(person);\n"
 "                    }\n"
@@ -238,26 +282,31 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/context-propagation.adoc:142
+#, fuzzy
 msgid ""
 "Using `ThreadContext` or `ManagedExecutor` you can wrap most useful "
 "functional types and `CompletionStage` in order to get context propagated."
 msgstr ""
+"`ThreadContext` または `ManagedExecutor` を使用すると、ほとんどの有用な関数型と `CompletionStage` "
+"をラップしてコンテキストを伝播させることができます。"
 
 #. type: delimited block =
 #: upstream/_guides/context-propagation.adoc:146
+#, fuzzy
 msgid "The injected `ManagedExecutor` uses the Quarkus thread pool."
-msgstr ""
+msgstr "注入された `ManagedExecutor` は、Quarkus のスレッドプールを使用しています。"
 
 #. type: Title ==
 #: upstream/_guides/context-propagation.adoc:148
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Adding support for RxJava2"
-msgstr ""
+msgstr "RxJava2のサポートを追加"
 
 #. type: Plain text
 #: upstream/_guides/context-propagation.adoc:151
+#, fuzzy
 msgid "You need to include the following modules to get RxJava2 support:"
-msgstr ""
+msgstr "RxJava2のサポートを受けるためには、以下のモジュールを含める必要があります。"
 
 #. type: delimited block -
 #: upstream/_guides/context-propagation.adoc:174
@@ -267,10 +316,12 @@ msgid ""
 "    <!-- Automatic context propagation for RxJava2 -->\n"
 "    <dependency>\n"
 "        <groupId>io.smallrye</groupId>\n"
-"        <artifactId>smallrye-context-propagation-propagators-rxjava2</artifactId>\n"
+"        <artifactId>smallrye-context-propagation-propagators-rxjava2</"
+"artifactId>\n"
 "    </dependency>\n"
 "    <!-- \n"
-"    Required if you want transactions extended to the end of methods returning\n"
+"    Required if you want transactions extended to the end of methods "
+"returning\n"
 "    an RxJava2 type.\n"
 "     -->\n"
 "    <dependency>\n"
@@ -287,21 +338,26 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/context-propagation.adoc:176
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Context Propagation for CDI"
-msgstr ""
+msgstr "CDIのためのコンテキスト伝搬"
 
 #. type: Plain text
 #: upstream/_guides/context-propagation.adoc:180
+#, fuzzy
 msgid ""
 "In terms of CDI, `@RequestScoped`, `@ApplicationScoped` and `@Singleton` "
 "beans get propagated and are available in other threads.  `@Dependent` beans "
 "as well as any custom scoped beans cannot be automatically propagated via "
 "CDI Context Propagation."
 msgstr ""
+"CDI の観点からは、 `@RequestScoped`, `@ApplicationScoped`, `@Singleton`, "
+"ビーンは伝播され、他のスレッドで利用可能です。 `@Dependent` ビーンやカスタムスコープされたビーンは、CDI "
+"コンテキスト伝播を介して自動的に伝播されることはありません。"
 
 #. type: Plain text
 #: upstream/_guides/context-propagation.adoc:187
+#, fuzzy
 msgid ""
 "`@ApplicationScoped` and `@Singleton` beans are always active scopes and as "
 "such are easy to deal with - context propagation tasks can work with those "
@@ -317,11 +373,19 @@ msgid ""
 "performed in such a manner that they don't outlive the original request "
 "duration."
 msgstr ""
+"`@ApplicationScoped` と `@Singleton` のビーンズは常にアクティブなスコープであり、そのため対処が簡単です - "
+"コンテキスト伝播タスクは、CDI コンテナが動作している限り、これらのビーンズで動作します。しかし、 `@RequestScoped` "
+"ビーンズは話が違います。手動で有効化/無効化すると、HTTP リクエストや他のリクエスト/"
+"タスクにバインドされます。この場合、元のスレッドがリクエストの終了に到達すると、コンテキストを終了し、それらのビーンズで `@PreDestroy` "
+"を呼び出し、コンテキストからクリアされることに注意しなければなりません。その後、他のスレッドからこれらのビーンズにアクセスしようとすると、予期せぬ動作をすることがあります。したがって、コンテキストの伝播を介してリクエストスコープされたビーンズを使用するすべてのタスクは、元のリクエストの持続時間を超えないような方法で実行されることを確認することが推奨されます。"
 
 #. type: delimited block =
 #: upstream/_guides/context-propagation.adoc:192
+#, fuzzy
 msgid ""
 "Due to the above described behavior, it is recommended to avoid using "
 "`@PreDestroy` on `@RequestScoped` beans when working with Context "
 "Propagation in CDI."
 msgstr ""
+"上記で説明した動作のため、CDI で Context Propagation を使用する際には `@PreDestroy` を "
+"`@RequestScoped` ビーンズで使用しないことをお勧めします。"
