--- a/i18n/po/ja_JP/_guides/jgit.adoc.po
+++ b/i18n/po/ja_JP/_guides/jgit.adoc.po
@@ -21,30 +21,35 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/jgit.adoc:6
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Quarkus - JGit"
-msgstr ""
+msgstr "Quarkus - JGit"
 
 #. type: Plain text
 #: upstream/_guides/jgit.adoc:13
+#, fuzzy
 msgid ""
 "Quarkus includes the `jgit` extension which enables the use of https://www."
 "eclipse.org/jgit/[Eclipse JGit] in native mode."
 msgstr ""
+"Quarkusには、ネイティブモードでの link:https://www.eclipse.org/jgit/[Eclipse "
+"JGit]の使用を可能にする `jgit` 拡張機能が含まれています。"
 
 #. type: Title ==
 #: upstream/_guides/jgit.adoc:14
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Configuration"
-msgstr ""
+msgstr "構成"
 
 #. type: Plain text
 #: upstream/_guides/jgit.adoc:18
+#, fuzzy
 msgid ""
 "Once you have your Quarkus project configured you can add the `jgit` "
 "extension to your project by running the following command in your project "
 "base directory."
 msgstr ""
+"Quarkusプロジェクトを設定したら、プロジェクトのベースディレクトリで次のコマンドを実行して、 `jgit` 拡張機能をプロジェクトに追加できます。"
 
 #. type: delimited block -
 #: upstream/_guides/jgit.adoc:22
@@ -54,8 +59,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/jgit.adoc:25
+#, fuzzy
 msgid "This will add the following to your `pom.xml`:"
-msgstr ""
+msgstr "これにより、 `pom.xml`."
 
 #. type: delimited block -
 #: upstream/_guides/jgit.adoc:32
@@ -69,17 +75,21 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/jgit.adoc:34
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Usage"
-msgstr ""
+msgstr "使用方法"
 
 #. type: Plain text
 #: upstream/_guides/jgit.adoc:38
+#, fuzzy
 msgid ""
 "The https://wiki.eclipse.org/JGit/User_Guide#API[JGit] dependency is "
 "resolved transitively when the extension is added to your project.  Here is "
 "an example using it in a JAX-RS endpoint:"
 msgstr ""
+"link:https://wiki.eclipse.org/JGit/"
+"User_Guide#API[JGit]依存関係は、拡張機能がプロジェクトに追加されたときにトランジット的に解決されます。ここでは、JAX-RS "
+"エンドポイントでの使用例を示します。"
 
 #. type: delimited block -
 #: upstream/_guides/jgit.adoc:50
@@ -88,9 +98,11 @@ msgid ""
 "    @GET\n"
 "    @Path(\"/clone\")\n"
 "    @Produces(MediaType.TEXT_PLAIN)\n"
-"    public String cloneRepository(@QueryParam(\"url\") String url) throws Exception {\n"
+"    public String cloneRepository(@QueryParam(\"url\") String url) throws "
+"Exception {\n"
 "        File tmpDir = Files.createTempDirectory(\"tmpgit\").toFile();\n"
-"        try (Git git = Git.cloneRepository().setDirectory(tmpDir).setURI(url).call()) {\n"
+"        try (Git git = Git.cloneRepository().setDirectory(tmpDir)."
+"setURI(url).call()) {\n"
 "            return tmpDir.toString();\n"
 "        }\n"
 "    }\n"
@@ -98,7 +110,10 @@ msgstr ""
 
 #. type: delimited block =
 #: upstream/_guides/jgit.adoc:56
+#, fuzzy
 msgid ""
 "When running in native mode, make sure that the link:native-and-ssl#the-"
 "truststore-path[SSL access is configured correctly]."
 msgstr ""
+"ネイティブモードで実行する場合は、 link:native-and-ssl#the-truststore-"
+"path[SSLアクセスが正しく設定され]ていることを確認してください。"
