--- a/i18n/po/ja_JP/_guides/quarkus-blaze-persistence.adoc.po
+++ b/i18n/po/ja_JP/_guides/quarkus-blaze-persistence.adoc.po
@@ -18,27 +18,37 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/quarkus-blaze-persistence.adoc:3
+#, fuzzy
 msgid ""
 "icon:lock[title=Fixed at build time] Configuration property fixed at build "
 "time - All other configuration properties are overridable at runtime"
 msgstr ""
+"<span class=\"icon\">lock]</span>ビルド時に設定プロパティを固定 - "
+"その他の設定プロパティはすべて実行時にオーバーライド可能"
 
 #. type: Table
 #: upstream/_guides/quarkus-blaze-persistence.adoc:13
-#, no-wrap
+#, no-wrap, fuzzy
 msgid ""
 "\n"
-"h|[[quarkus-blaze-persistence_configuration]]link:#quarkus-blaze-persistence_configuration[Configuration property]\n"
+"h|[[quarkus-blaze-persistence_configuration]]link:#quarkus-blaze-"
+"persistence_configuration[Configuration property]\n"
 "\n"
 "h|Type\n"
 "h|Default\n"
 "\n"
-"a|icon:lock[title=Fixed at build time] [[quarkus-blaze-persistence_quarkus.blaze-persistence.template-eager-loading]]`link:#quarkus-blaze-persistence_quarkus.blaze-persistence.template-eager-loading[quarkus.blaze-persistence.template-eager-loading]`\n"
+"a|icon:lock[title=Fixed at build time] [[quarkus-blaze-persistence_quarkus."
+"blaze-persistence.template-eager-loading]]`link:#quarkus-blaze-"
+"persistence_quarkus.blaze-persistence.template-eager-loading[quarkus.blaze-"
+"persistence.template-eager-loading]`\n"
 "\n"
 msgstr ""
+"h| link:[, id=quarkus-blaze-persistence_configuration] link:#quarkus-blaze-"
+"persistence_configuration[設定プロパティ]"
 
 #. type: Table
 #: upstream/_guides/quarkus-blaze-persistence.adoc:22
+#, fuzzy
 msgid ""
 "A boolean flag to make it possible to prepare all view template caches on "
 "startup. By default the eager loading of the view templates is disabled to "
@@ -48,50 +58,77 @@ msgid ""
 "#quarkus-blaze-persistence_quarkus.blaze-persistence.default-batch-"
 "size[quarkus.blaze-persistence.default-batch-size]`"
 msgstr ""
+"起動時にすべてのビューテンプレートキャッシュを準備することを可能にするブーリアンフラグです。デフォルトでは、起動時のパフォーマンスを向上させるために、ビューテンプレートの熱心な読み込みは無効になっています。このプロパティの有効な値は "
+"`true` または `false` です。--|boolean | a<span class=\"icon\">|[lock]</span>  "
+"link:[, id=quarkus-blaze-persistence_quarkus.blaze-persistence.default-batch-"
+"size] `&lt;a href=\"#quarkus-blaze-persistence_quarkus.blaze-persistence."
+"default-batch-size\"&gt;quarkus.blaze-persistence.default-batch-size&lt;/"
+"a&gt;`"
 
 #. type: Table
 #: upstream/_guides/quarkus-blaze-persistence.adoc:31
+#, fuzzy
 msgid ""
 "An integer value that defines the default batch size for entity view "
 "attributes. By default the value is 1 and can be overridden either via `com."
 "blazebit.persistence.view.BatchFetch#size()` or by setting this property via "
-"`com.blazebit.persistence.view.EntityViewSetting#setProperty`.  --|int | a|"
-"icon:lock[title=Fixed at build time] [[quarkus-blaze-persistence_quarkus."
+"`com.blazebit.persistence.view.EntityViewSetting#setProperty`.  --|int | "
+"a|icon:lock[title=Fixed at build time] [[quarkus-blaze-persistence_quarkus."
 "blaze-persistence.expect-batch-mode]]`link:#quarkus-blaze-"
 "persistence_quarkus.blaze-persistence.expect-batch-mode[quarkus.blaze-"
 "persistence.expect-batch-mode]`"
 msgstr ""
+"エンティティ ビュー属性のデフォルトのバッチ サイズを定義する整数値。デフォルトでは値は1で、 `com.blazebit.persistence."
+"view.BatchFetch#size()` を通して、または `com.blazebit.persistence.view."
+"EntityViewSetting#setProperty` を通してこのプロパティを設定することで上書きすることができます。--|int | "
+"a<span class=\"icon\">|[lock]</span>  link:[, id=quarkus-blaze-"
+"persistence_quarkus.blaze-persistence.expect-batch-mode] `&lt;a href="
+"\"#quarkus-blaze-persistence_quarkus.blaze-persistence.expect-batch-"
+"mode\"&gt;quarkus.blaze-persistence.expect-batch-mode&lt;/a&gt;`"
 
 #. type: Table
 #: upstream/_guides/quarkus-blaze-persistence.adoc:34
+#, fuzzy
 msgid ""
 "A mode specifying if correlation value, view root or embedded view batching "
 "is expected. By default the value is `values` and can be overridden by "
 "setting this property via `com.blazebit.persistence.view."
 "EntityViewSetting#setProperty`. Valid values are"
 msgstr ""
+"相関値、ビュールート、埋め込みビューのいずれかのバッチングが期待されるかどうかを指定するモードです。デフォルトでは、値は `values` であり、 "
+"`com.blazebit.persistence.view.EntityViewSetting#setProperty` "
+"でこのプロパティを設定することで上書きすることができます。有効な値は"
 
 #. type: Table
 #: upstream/_guides/quarkus-blaze-persistence.adoc:35
+#, fuzzy
 msgid "`values`"
-msgstr ""
+msgstr "`values`"
 
 #. type: Table
 #: upstream/_guides/quarkus-blaze-persistence.adoc:36
+#, fuzzy
 msgid "`view_roots`"
-msgstr ""
+msgstr "`view_roots`"
 
 #. type: Table
 #: upstream/_guides/quarkus-blaze-persistence.adoc:43
+#, fuzzy
 msgid ""
 "`embedding_views` --|string | a|icon:lock[title=Fixed at build time] "
 "[[quarkus-blaze-persistence_quarkus.blaze-persistence.updater.eager-"
 "loading]]`link:#quarkus-blaze-persistence_quarkus.blaze-persistence.updater."
 "eager-loading[quarkus.blaze-persistence.updater.eager-loading]`"
 msgstr ""
+"`embedding_views` --|string | a<span class=\"icon\">|[lock]</span>  link:[, "
+"id=quarkus-blaze-persistence_quarkus.blaze-persistence.updater.eager-"
+"loading] `&lt;a href=\"#quarkus-blaze-persistence_quarkus.blaze-persistence."
+"updater.eager-loading\"&gt;quarkus.blaze-persistence.updater.eager-"
+"loading&lt;/a&gt;`"
 
 #. type: Table
 #: upstream/_guides/quarkus-blaze-persistence.adoc:52
+#, fuzzy
 msgid ""
 "A boolean flag to make it possible to prepare the entity view updater cache "
 "on startup. By default the eager loading of entity view updates is disabled "
@@ -102,9 +139,17 @@ msgid ""
 "persistence.updater.disallow-owned-updatable-subview[quarkus.blaze-"
 "persistence.updater.disallow-owned-updatable-subview]`"
 msgstr ""
+"起動時にエンティティ ビューの更新キャッシュを準備することを可能にするブーリアン "
+"フラグです。デフォルトでは、起動時のパフォーマンスを向上させるために、エンティティビュー更新の熱心な読み込みは無効になっています。このプロパティの有効な値は、 "
+"`true` または `false`.--|boolean | a<span class=\"icon\">|[lock]</span>  link:"
+"[, id=quarkus-blaze-persistence_quarkus.blaze-persistence.updater.disallow-"
+"owned-updatable-subview] `&lt;a href=\"#quarkus-blaze-persistence_quarkus."
+"blaze-persistence.updater.disallow-owned-updatable-subview\"&gt;quarkus."
+"blaze-persistence.updater.disallow-owned-updatable-subview&lt;/a&gt;`"
 
 #. type: Table
 #: upstream/_guides/quarkus-blaze-persistence.adoc:61
+#, fuzzy
 msgid ""
 "A boolean flag to make it possible to disable the strict validation that "
 "disallows the use of an updatable entity view type for owned relationships. "
@@ -116,9 +161,17 @@ msgid ""
 "persistence_quarkus.blaze-persistence.updater.strict-cascading-check[quarkus."
 "blaze-persistence.updater.strict-cascading-check]`"
 msgstr ""
+"所有するリレーションシップに対して更新可能なエンティティ・ビュー・タイプの使用を禁止する厳密な検証を無効にするためのブール値フラグ。デフォルトでは、デフォルト値は "
+"`true` となっていますが、奇妙なモデルがあるかもしれないので、これを許可することも可能です。このプロパティの有効な値は `true` または "
+"`false` です。--|boolean | a<span class=\"icon\">|[lock]</span>  link:[, id="
+"quarkus-blaze-persistence_quarkus.blaze-persistence.updater.strict-cascading-"
+"check] `&lt;a href=\"#quarkus-blaze-persistence_quarkus.blaze-persistence."
+"updater.strict-cascading-check\"&gt;quarkus.blaze-persistence.updater.strict-"
+"cascading-check&lt;/a&gt;`"
 
 #. type: Table
 #: upstream/_guides/quarkus-blaze-persistence.adoc:70
+#, fuzzy
 msgid ""
 "A boolean flag to make it possible to disable the strict cascading check "
 "that disallows setting updatable or creatable entity views on non-cascading "
@@ -132,25 +185,42 @@ msgid ""
 "blaze-persistence_quarkus.blaze-persistence.updater.error-on-invalid-plural-"
 "setter[quarkus.blaze-persistence.updater.error-on-invalid-plural-setter]`"
 msgstr ""
+"カスケード属性に関連付けられる前に、カスケード属性に関連付けられていない属性上で更新可能なエンティティ・ビューや作成可能なエンティティ・ビューを設定できないようにする厳密なカスケード・チェックを無効にすることができるようにするためのブール値フラグです。無効にすると、JPAのように、更新可能なエンティティビューがカスケード更新属性に関連付けられていない場合に、更新可能なエンティティビューに行われた変更がフラッシュされないようにすることができます。 "
+"`true`デフォルトでは、この使用は有効になっています。このプロパティの有効な値は `true` または `false` です。--|boolean "
+"| a<span class=\"icon\">|[lock]</span>  link:[, id=quarkus-blaze-"
+"persistence_quarkus.blaze-persistence.updater.error-on-invalid-plural-"
+"setter] `&lt;a href=\"#quarkus-blaze-persistence_quarkus.blaze-persistence."
+"updater.error-on-invalid-plural-setter\"&gt;quarkus.blaze-persistence."
+"updater.error-on-invalid-plural-setter&lt;/a&gt;`"
 
 #. type: Table
 #: upstream/_guides/quarkus-blaze-persistence.adoc:79
+#, fuzzy
 msgid ""
 "A boolean flag that allows to switch from warnings to boot time validation "
 "errors when invalid plural attribute setters are encountered while the "
 "strict cascading check is enabled. When `true`, a boot time validation error "
 "is thrown when encountering an invalid setter, otherwise just a warning. "
-"This configuration has no effect when the strict cascading check is "
-"disabled. By default the use is disabled i.e. the default value is `false`. "
-"Valid values for this property are `true` or `false`.  --|boolean | a|icon:"
+"This configuration has no effect when the strict cascading check is disabled."
+" By default the use is disabled i.e. the default value is `false`. Valid "
+"values for this property are `true` or `false`.  --|boolean | a|icon:"
 "lock[title=Fixed at build time] [[quarkus-blaze-persistence_quarkus.blaze-"
 "persistence.create-empty-flat-views]]`link:#quarkus-blaze-"
 "persistence_quarkus.blaze-persistence.create-empty-flat-views[quarkus.blaze-"
 "persistence.create-empty-flat-views]`"
 msgstr ""
+"厳格なカスケードチェックが有効になっている間に、無効な複数の属性セッターに遭遇した場合に、警告から起動時の検証エラーに切り替えることができるブール値フラグです。 "
+"`true` "
+"に設定すると、無効なセッターに遭遇した場合にはブート時の検証エラーが発生し、そうでない場合には警告のみが発生します。この設定は、厳密なカスケードチェックが無効になっている場合には何の効果もありません。デフォルトでは、使用は無効になっています。つまり、デフォルト値は "
+"`false` です。このプロパティの有効な値は `true` または `false` です。--|boolean | a<span class="
+"\"icon\">|[lock]</span>  link:[, id=quarkus-blaze-persistence_quarkus.blaze-"
+"persistence.create-empty-flat-views] `&lt;a href=\"#quarkus-blaze-"
+"persistence_quarkus.blaze-persistence.create-empty-flat-views\"&gt;quarkus."
+"blaze-persistence.create-empty-flat-views&lt;/a&gt;`"
 
 #. type: Table
 #: upstream/_guides/quarkus-blaze-persistence.adoc:88
+#, fuzzy
 msgid ""
 "A boolean flag that allows to specify if empty flat views should be created "
 "by default if not specified via `EmptyFlatViewCreation`. By default the "
@@ -161,18 +231,30 @@ msgid ""
 "blaze-persistence.expression-cache-class[quarkus.blaze-persistence."
 "expression-cache-class]`"
 msgstr ""
+"`EmptyFlatViewCreation` で指定されていない場合、デフォルトで空のフラットビューを作成するかどうかを指定するブール値フラグです。 "
+"`true`デフォルトでは、空のフラットビューの作成は有効になっています。このプロパティの有効な値は `true` または `false` です。--"
+"|boolean | a<span class=\"icon\">|[lock]</span>  link:[, id=quarkus-blaze-"
+"persistence_quarkus.blaze-persistence.expression-cache-class] `&lt;a href="
+"\"#quarkus-blaze-persistence_quarkus.blaze-persistence.expression-cache-"
+"class\"&gt;quarkus.blaze-persistence.expression-cache-class&lt;/a&gt;`"
 
 #. type: Table
 #: upstream/_guides/quarkus-blaze-persistence.adoc:97
+#, fuzzy
 msgid ""
 "The full qualified expression cache implementation class name.  --|string | "
 "a|icon:lock[title=Fixed at build time] [[quarkus-blaze-persistence_quarkus."
 "blaze-persistence.inline-ctes]]`link:#quarkus-blaze-persistence_quarkus."
 "blaze-persistence.inline-ctes[quarkus.blaze-persistence.inline-ctes]`"
 msgstr ""
+"完全修飾式キャッシュの実装クラス名。--|string | a<span class=\"icon\">|[lock]</span>  link:[, "
+"id=quarkus-blaze-persistence_quarkus.blaze-persistence.inline-ctes] `&lt;a "
+"href=\"#quarkus-blaze-persistence_quarkus.blaze-persistence.inline-"
+"ctes\"&gt;quarkus.blaze-persistence.inline-ctes&lt;/a&gt;`"
 
 #. type: Table
 #: upstream/_guides/quarkus-blaze-persistence.adoc:103
+#, fuzzy
 msgid ""
 "If set to true, the CTE queries are inlined by default. Valid values for "
 "this property are `true`, `false` or `auto`. Default is `true` which will "
@@ -181,3 +263,7 @@ msgid ""
 "property can be changed for a criteria builder before constructing a query.  "
 "--|boolean |"
 msgstr ""
+"true に設定すると、CTE クエリはデフォルトでインライン化されます。このプロパティの有効な値は `true` 、 `false` または "
+"`auto` です。デフォルトは `true` で、非再帰的な CTE を常にインライン化します。 `auto` の設定では、JPA プロバイダと "
+"DBMS の方言がサポート/"
+"要求している場合にのみインライン化を使用します。このプロパティは、クエリを構築する前にクライテリアビルダーで変更することができます。--|boolean"
