--- a/i18n/po/ja_JP/_guides/security-authorization.adoc.po
+++ b/i18n/po/ja_JP/_guides/security-authorization.adoc.po
@@ -21,50 +21,60 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/security-authorization.adoc:6
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Quarkus - Authorization of Web Endpoints"
-msgstr ""
+msgstr "Quarkus - ウェブエンドポイントの認証"
 
 #. type: Plain text
 #: upstream/_guides/security-authorization.adoc:12
+#, fuzzy
 msgid ""
 "Quarkus has an integrated pluggable web security layer. If security is "
 "enabled all HTTP requests will have a permission check performed to make "
 "sure they are allowed to continue."
 msgstr ""
+"Quarkusには、プラグイン可能なウェブセキュリティレイヤーが統合されています。セキュリティが有効になっている場合、すべてのHTTPリクエストは、継続が許可されているかどうかを確認するためのパーミッションチェックが実行されます。"
 
 #. type: Plain text
 #: upstream/_guides/security-authorization.adoc:15
+#, fuzzy
 msgid ""
 "Configuration authorization checks are executed before any annotation-based "
 "authorization check is done, so both checks have to pass for a request to be "
 "allowed."
 msgstr ""
+"設定認可チェックは、アノテーションベースの認可チェックが行われる前に実行されるので、リクエストが許可されるためには両方のチェックを通過しなければなりません。"
 
 #. type: Title ==
 #: upstream/_guides/security-authorization.adoc:16
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Authorization using Configuration"
-msgstr ""
+msgstr "設定を利用した認証"
 
 #. type: Plain text
 #: upstream/_guides/security-authorization.adoc:20
+#, fuzzy
 msgid ""
 "The default implementation allows you to define permissions using config in "
 "`application.properties`. An example config is shown below:"
 msgstr ""
+"デフォルトの実装では、 `application.properties` の config を使用してパーミッションを定義することができます。以下に "
+"config の例を示します。"
 
 #. type: delimited block -
 #: upstream/_guides/security-authorization.adoc:24
 #, no-wrap
-msgid "quarkus.http.auth.policy.role-policy1.roles-allowed=user,admin                      <1>\n"
+msgid ""
+"quarkus.http.auth.policy.role-policy1.roles-allowed=user,admin               "
+"       <1>\n"
 msgstr ""
 
 #. type: delimited block -
 #: upstream/_guides/security-authorization.adoc:27
 #, no-wrap
 msgid ""
-"quarkus.http.auth.permission.roles1.paths=/roles-secured/*,/other/*,/api/*          <2>\n"
+"quarkus.http.auth.permission.roles1.paths=/roles-secured/*,/other/*,/api/*   "
+"       <2>\n"
 "quarkus.http.auth.permission.roles1.policy=role-policy1\n"
 msgstr ""
 
@@ -72,7 +82,8 @@ msgstr ""
 #: upstream/_guides/security-authorization.adoc:31
 #, no-wrap
 msgid ""
-"quarkus.http.auth.permission.permit1.paths=/public/*                                <3>\n"
+"quarkus.http.auth.permission.permit1.paths=/public/*                         "
+"       <3>\n"
 "quarkus.http.auth.permission.permit1.policy=permit\n"
 "quarkus.http.auth.permission.permit1.methods=GET\n"
 msgstr ""
@@ -81,42 +92,53 @@ msgstr ""
 #: upstream/_guides/security-authorization.adoc:34
 #, no-wrap
 msgid ""
-"quarkus.http.auth.permission.deny1.paths=/forbidden                                 <4>\n"
+"quarkus.http.auth.permission.deny1.paths=/forbidden                          "
+"       <4>\n"
 "quarkus.http.auth.permission.deny1.policy=deny\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-authorization.adoc:36
+#, fuzzy
 msgid ""
 "This defines a role based policy that allows users with the `user` and "
 "`admin` roles. This is referenced by later rules."
 msgstr ""
+"これは、 `user` と `admin` のロールを持つユーザーを許可するロールベースのポリシーを定義します。これは後のルールで参照されます。"
 
 #. type: Plain text
 #: upstream/_guides/security-authorization.adoc:37
+#, fuzzy
 msgid ""
 "This is a permission set that references the previously defined policy. "
 "`roles1` is an arbitrary name, you can call the permission sets whatever you "
 "want."
-msgstr ""
+msgstr "`roles1` は任意の名前ですので、好きなようにパーミッションセットを呼び出すことができます。"
 
 #. type: Plain text
 #: upstream/_guides/security-authorization.adoc:38
+#, fuzzy
 msgid ""
 "This permission references the default `permit` built-in policy to allow "
 "`GET` methods to `/public`. This is actually a no-op in this example, as "
 "this request would have been allowed anyway."
 msgstr ""
+"このパーミッションはデフォルトの `permit` ビルトインポリシーを参照して、 `/public` への `GET` "
+"メソッドを許可します。この例では、このリクエストはいずれにせよ許可されているはずなので、これは実際には実行されません。"
 
 #. type: Plain text
 #: upstream/_guides/security-authorization.adoc:39
+#, fuzzy
 msgid ""
 "This permission references the built-in `deny` policy for `/forbidden`. This "
 "is an exact path match as it does not end with `*`."
 msgstr ""
+"このパーミッションは、 `/forbidden` のビルトイン `deny` ポリシーを参照します。これは `*` "
+"で終わらないので、完全なパス一致です。"
 
 #. type: Plain text
 #: upstream/_guides/security-authorization.adoc:43
+#, fuzzy
 msgid ""
 "Permissions are defined in config using permission sets. These are "
 "arbitrarily named permission grouping. Each permission set must specify a "
@@ -124,72 +146,88 @@ msgid ""
 "`deny`, `permit` and `authenticated`, which respectively permits all, denies "
 "all and only allows authenticated users."
 msgstr ""
+"パーミッションはパーミッションセットを使用してconfigで定義されます。これらは任意の名前のパーミッショングループ化です。各パーミッションセットは、アクセスを制御するために使用されるポリシーを指定しなければなりません。 "
+"`deny` 、 `permit` 、 `authenticated` の 3 "
+"つのビルトインポリシーがあり、それぞれすべてを許可し、すべてを拒否し、認証されたユーザーのみを許可します。"
 
 #. type: Plain text
 #: upstream/_guides/security-authorization.adoc:46
+#, fuzzy
 msgid ""
 "It is also possible to define role based policies, as shown in the example. "
 "These policies will only allow users with the specified roles to access the "
 "resources."
 msgstr ""
+"例に示すように、ロールベースのポリシーを定義することも可能です。これらのポリシーは、指定されたロールを持つユーザーのみがリソースにアクセスできるようにします。"
 
 #. type: Title ===
 #: upstream/_guides/security-authorization.adoc:47
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Matching on paths, methods"
-msgstr ""
+msgstr "パス、メソッドのマッチング"
 
 #. type: Plain text
 #: upstream/_guides/security-authorization.adoc:51
+#, fuzzy
 msgid ""
-"Permission sets can also specify paths and methods as a comma separated "
-"list. If a path ends with `*` then it is considered to be a wildcard match "
-"and will match all sub paths, otherwise it is an exact match and will only "
-"match that specific path:"
+"Permission sets can also specify paths and methods as a comma separated list."
+" If a path ends with `*` then it is considered to be a wildcard match and "
+"will match all sub paths, otherwise it is an exact match and will only match "
+"that specific path:"
 msgstr ""
+"パーミッションセットでは、パスとメソッドをカンマ区切りのリストで指定することもできます。パスの末尾が `*` "
+"である場合はワイルドカードマッチとみなされ、すべてのサブパスにマッチしますが、そうでない場合は完全一致となり、特定のパスにのみマッチします。"
 
 #. type: delimited block -
 #: upstream/_guides/security-authorization.adoc:57
 #, no-wrap
 msgid ""
-"quarkus.http.auth.permission.permit1.paths=/public/*,/css/*,/js/*,/robots.txt\n"
+"quarkus.http.auth.permission.permit1.paths=/public/*,/css/*,/js/*,/robots."
+"txt\n"
 "quarkus.http.auth.permission.permit1.policy=permit\n"
 "quarkus.http.auth.permission.permit1.methods=GET,HEAD\n"
 msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/security-authorization.adoc:59
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Matching path but not method"
-msgstr ""
+msgstr "パスは一致するがメソッドは一致しない"
 
 #. type: Plain text
 #: upstream/_guides/security-authorization.adoc:63
+#, fuzzy
 msgid ""
 "If a request would match one or more permission sets based on the path, but "
 "does not match any due to method requirements then the request is rejected."
 msgstr ""
+"リクエストがパスに基づいて1つ以上のパーミッションセットにマッチするが、 メソッドの要件によりマッチしない場合、そのリクエストは拒否される。"
 
 #. type: Plain text
 #: upstream/_guides/security-authorization.adoc:66
+#, fuzzy
 msgid ""
 "Given the above permission set, `GET /public/foo` would match both the path "
 "and method and thus be allowed, whereas `POST /public/foo` would match the "
 "path but not the method and would thus be rejected."
 msgstr ""
+"上記のパーミッションセットを考えると、 `GET /public/foo` はパスとメソッドの両方にマッチするので許可されますが、 `POST /"
+"public/foo` はパスにはマッチするがメソッドにはマッチしないので拒否されます。"
 
 #. type: Title ===
 #: upstream/_guides/security-authorization.adoc:67
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Matching multiple paths: longest path wins"
-msgstr ""
+msgstr "複数のパスのマッチング：一番長いパスの勝ち"
 
 #. type: Plain text
 #: upstream/_guides/security-authorization.adoc:71
+#, fuzzy
 msgid ""
 "Matching is always done on a longest path wins basis, less specific "
 "permission sets are not considered if a more specific one has been matched:"
 msgstr ""
+"マッチングは常に最長パスの勝ちに基づいて行われ、より特定のパーミッションセットがマッチしている場合には、より特定のパーミッションセットは考慮されません。"
 
 #. type: delimited block -
 #: upstream/_guides/security-authorization.adoc:77
@@ -211,26 +249,34 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-authorization.adoc:85
+#, fuzzy
 msgid ""
 "Given the above permission set, `GET /public/forbidden-folder/foo` would "
 "match both permission sets' paths, but because it matches the `deny1` "
 "permission set's path on a longer match, `deny1` will be chosen and the "
 "request will be rejected."
 msgstr ""
+"上記のパーミッションセットを考えると、 `GET /public/forbidden-folder/foo` "
+"は両方のパーミッションセットのパスにマッチしますが、より長いマッチで `deny1` のパーミッションセットのパスにマッチするため、 `deny1` "
+"が選択され、リクエストは拒否されます。"
 
 #. type: Plain text
 #: upstream/_guides/security-authorization.adoc:87
+#, fuzzy
 msgid "[NOTE]"
 msgstr ""
 
 #. type: delimited block =
 #: upstream/_guides/security-authorization.adoc:90
+#, fuzzy
 msgid ""
 "Subpath permissions always win against the root path permissions as "
 "explained above in the `deny1` versus `permit1` permission example.  Here is "
 "another example showing a subpath permission allowing a public resource "
 "access with the root path permission requiring the authorization:"
 msgstr ""
+"上記の `deny1` と `permit1` "
+"のパーミッションの例で説明したように、サブパスパーミッションは常にルートパスパーミッションに対抗します。ここでは、サブパスパーミッションがパブリックリソースへのアクセスを許可し、ルートパスパーミッションが認可を必要としていることを示す別の例を示しています。"
 
 #. type: delimited block -
 #: upstream/_guides/security-authorization.adoc:96
@@ -251,12 +297,13 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/security-authorization.adoc:102
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Matching multiple paths: most specific method wins"
-msgstr ""
+msgstr "複数のパスを一致させる：最も特定の方法が勝つ"
 
 #. type: delimited block =
 #: upstream/_guides/security-authorization.adoc:108
+#, fuzzy
 msgid ""
 "If a path is registered with multiple permission sets then any permission "
 "sets that specify a HTTP method will take precedence and permissions sets "
@@ -265,6 +312,10 @@ msgid ""
 "come into effect if the request method does not match any of the sets with "
 "method permissions."
 msgstr ""
+"パスが複数のパーミッションセットで登録されている場合、HTTP メソッドを指定するパーミッションセットが優先され、 "
+"メソッドを持たないパーミッションセットは考慮されません "
+"(もちろんメソッドがマッチすると仮定します)。この例では、メソッドを持たないパーミッションセットは、 "
+"リクエストメソッドがメソッドパーミッションセットのどれにもマッチしない場合にのみ有効になります。"
 
 #. type: delimited block -
 #: upstream/_guides/security-authorization.adoc:117
@@ -276,6 +327,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-authorization.adoc:123
+#, fuzzy
 msgid ""
 "Given the above permission set, `GET /public/foo` would match both "
 "permission sets' paths, but because it matches the `permit1` permission "
@@ -284,15 +336,19 @@ msgid ""
 "permissions of `permit1` and so `deny1` will be activated and reject the "
 "request."
 msgstr ""
+"上記のパーミッションセットを考えると、 `GET /public/foo` は両方のパーミッションセットのパスにマッチしますが、 `permit1` "
+"のパーミッションセットの明示的なメソッドにマッチするため、 `permit1` が選択され、リクエストが受け入れられます。一方、 `PUT /"
+"public/foo` は `permit1` のメソッドパーミッションにマッチしないため、 `deny1` が有効化され、リクエストが拒否されます。"
 
 #. type: Title ===
 #: upstream/_guides/security-authorization.adoc:124
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Matching multiple paths and methods: both win"
-msgstr ""
+msgstr "複数のパスとメソッドのマッチング：両方の win"
 
 #. type: Plain text
 #: upstream/_guides/security-authorization.adoc:129
+#, fuzzy
 msgid ""
 "If multiple permission sets specify the same path and method (or multiple "
 "have no method) then both permissions have to allow access for the request "
@@ -300,6 +356,8 @@ msgid ""
 "the method, or have no method, method specific matches take precedence as "
 "stated above:"
 msgstr ""
+"複数のパーミッションセットが同じパスとメソッドを指定している場合 "
+"(あるいは複数のパーミッションセットがメソッドを持たない場合)、両方のパーミッションがリクエストを進めるためのアクセスを許可しなければなりません。これを実現するためには、両方ともメソッドを指定しているか、メソッドを持っていないかのどちらかでなければならないことに注意してください。"
 
 #. type: delimited block -
 #: upstream/_guides/security-authorization.adoc:134
@@ -327,78 +385,98 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-authorization.adoc:144
+#, fuzzy
 msgid ""
 "Given the above permission set, `GET /api/foo` would match both permission "
 "sets' paths, so would require both the `user` and `admin` roles."
 msgstr ""
+"上記のパーミッションセットを考えると、 `GET /api/foo` は両方のパーミッションセットのパスにマッチするので、 `user` と "
+"`admin` の両方のロールが必要になります。"
 
 #. type: Title ===
 #: upstream/_guides/security-authorization.adoc:145
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Configuration Properties to Deny access"
-msgstr ""
+msgstr "アクセスを拒否する設定プロパティ"
 
 #. type: Plain text
 #: upstream/_guides/security-authorization.adoc:148
-msgid "There are two configuration settings that alter the RBAC Deny behavior:"
-msgstr ""
+#, fuzzy
+msgid ""
+"There are two configuration settings that alter the RBAC Deny behavior:"
+msgstr "RBAC Denyの動作を変更する2つの設定があります。"
 
 #. type: Plain text
 #: upstream/_guides/security-authorization.adoc:151
+#, fuzzy
 msgid ""
 "`quarkus.security.jaxrs.deny-unannotated-endpoints=true|false` - if set to "
 "true, the access will be denied for all JAX-RS endpoints by default.  That "
 "is if the security annotations do not define the access control. Defaults to "
 "`false`."
 msgstr ""
+"`quarkus.security.jaxrs.deny-unannotated-endpoints=true|false` - true "
+"に設定すると、デフォルトではすべての JAX-RS "
+"エンドポイントに対してアクセスが拒否されます。つまり、セキュリティアノテーションでアクセス制御が定義されていない場合です。デフォルトは `false` "
+"です。"
 
 #. type: Plain text
 #: upstream/_guides/security-authorization.adoc:154
+#, fuzzy
 msgid ""
 "`quarkus.security.deny-unannotated-members=true|false` - if set to true, the "
 "access will be denied to all CDI methods and JAX-RS endpoints that do not "
 "have security annotations but are defined in classes that contain methods "
 "with security annotations. Defaults to `false`."
 msgstr ""
+"`quarkus.security.deny-unannotated-members=true|false` - true "
+"に設定すると、セキュリティアノテーションを持たないが、セキュリティアノテーションを持つメソッドを含むクラスで定義されているすべての CDI "
+"メソッドおよび JAX-RS エンドポイントへのアクセスが拒否されます。デフォルトは `false` です。"
 
 #. type: Title ===
 #: upstream/_guides/security-authorization.adoc:155
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Disabling permissions "
-msgstr ""
+msgstr "パーミッションを無効にする"
 
 #. type: Plain text
 #: upstream/_guides/security-authorization.adoc:158
+#, fuzzy
 msgid ""
 "Permissions can be disabled at build time with an `enabled` property for "
 "each declared permission, for example:"
-msgstr ""
+msgstr "パーミッションは、ビルド時に `enabled` プロパティで宣言されたパーミッションごとに無効にすることができます。"
 
 #. type: delimited block -
 #: upstream/_guides/security-authorization.adoc:165
 #, no-wrap
 msgid ""
 "quarkus.http.auth.permission.permit1.enabled=false\n"
-"quarkus.http.auth.permission.permit1.paths=/public/*,/css/*,/js/*,/robots.txt\n"
+"quarkus.http.auth.permission.permit1.paths=/public/*,/css/*,/js/*,/robots."
+"txt\n"
 "quarkus.http.auth.permission.permit1.policy=permit\n"
 "quarkus.http.auth.permission.permit1.methods=GET,HEAD\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-authorization.adoc:168
+#, fuzzy
 msgid ""
 "and enabled at runtime with a system property or environment variable, for "
 "example: `-Dquarkus.http.auth.permission.permit1.enabled=true`."
 msgstr ""
+"`-Dquarkus.http.auth.permission.permit1.enabled="
+"true`で、実行時にシステム・プロパティや環境変数で有効にします。"
 
 #. type: Title ==
 #: upstream/_guides/security-authorization.adoc:170
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Authorization using Annotations"
-msgstr ""
+msgstr "アノテーションを使った認証"
 
 #. type: Plain text
 #: upstream/_guides/security-authorization.adoc:177
+#, fuzzy
 msgid ""
 "Quarkus comes with built-in security to allow for Role-Based Access Control "
 "(link:https://en.wikipedia.org/wiki/Role-based_access_control[RBAC])  based "
@@ -407,15 +485,22 @@ msgid ""
 "of both JAX-RS and Common Security annotations to describe and secure its "
 "endpoints is given in <<subject-example>>. Quarkus also provides the `io."
 "quarkus.security.Authenticated` annotation that will permit any "
-"authenticated user to access the resource (equivalent to `@RolesAllowed(\"**"
-"\")`)."
+"authenticated user to access the resource (equivalent to "
+"`@RolesAllowed(\"**\")`)."
 msgstr ""
+"Quarkusには、共通のセキュリティアノテーション `@RolesAllowed`, `@DenyAll`, `@PermitAll` "
+"RESTエンドポイントとCDIビーンズに基づいた役割ベースのアクセス制御 link:https://en.wikipedia.org/wiki/Role-"
+"based_access_control[（RBAC]）を可能にするためのビルトインセキュリティが搭載されています。JAX-RSとCommon "
+"Securityアノテーションの両方を利用してエンドポイントを記述し、セキュリティを確保するエンドポイントの例は、 link:#subject-"
+"example[[subject-example]]に記載されています。Quarkusはまた、認証済みのユーザーがリソースにアクセスすることを許可する "
+"`io.quarkus.security.Authenticated` アノテーションも提供しています（ `@RolesAllowed(\"**\")` "
+"と同等です）。"
 
 #. type: Block title
 #: upstream/_guides/security-authorization.adoc:179
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "SubjectExposingResource Example"
-msgstr ""
+msgstr "SubjectExposingResourceの例"
 
 #. type: delimited block -
 #: upstream/_guides/security-authorization.adoc:183
@@ -439,8 +524,7 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_guides/security-authorization.adoc:194
 #, no-wrap
-msgid ""
-"@Path(\"subject\")\n"
+msgid "@Path(\"subject\")\n"
 "public class SubjectExposingResource {\n"
 msgstr ""
 
@@ -489,47 +573,62 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-authorization.adoc:224
+#, fuzzy
 msgid ""
 "This `/subject/secured` endpoint requires an authenticated user that has "
 "been granted the role \"Tester\" through the use of the "
 "`@RolesAllowed(\"Tester\")` annotation."
 msgstr ""
+"この `/subject/secured` エンドポイントには、 `@RolesAllowed(\"Tester\")` "
+"アノテーションを使用して「Tester」という役割を付与された認証済みユーザが必要です。"
 
 #. type: Plain text
 #: upstream/_guides/security-authorization.adoc:225
+#, fuzzy
 msgid ""
 "The endpoint obtains the user principal from the JAX-RS `SecurityContext`. "
 "This will be non-null for a secured endpoint."
 msgstr ""
+"エンドポイントは、JAX-RS `SecurityContext` からユーザー・プリンシパルを取得します。これは、保護されたエンドポイントの場合は非 "
+"null になります。"
 
 #. type: Plain text
 #: upstream/_guides/security-authorization.adoc:226
+#, fuzzy
 msgid ""
 "The `/subject/unsecured` endpoint allows for unauthenticated access by "
 "specifying the `@PermitAll` annotation."
 msgstr ""
+"`/subject/unsecured` エンドポイントでは、 `@PermitAll` "
+"アノテーションを指定することで、認証されていないアクセスが可能になります。"
 
 #. type: Plain text
 #: upstream/_guides/security-authorization.adoc:227
+#, fuzzy
 msgid ""
 "This call to obtain the user principal will return null if the caller is "
 "unauthenticated, non-null if the caller is authenticated."
 msgstr ""
+"ユーザプリンシパルを取得するためのこの呼び出しは、呼び出し元が認証されていない場合はnullを返し、呼び出し元が認証されている場合は非nullを返します。"
 
 #. type: Plain text
 #: upstream/_guides/security-authorization.adoc:228
+#, fuzzy
 msgid ""
 "The `/subject/denied` endpoint disallows any access regardless of whether "
 "the call is authenticated by specifying the `@DenyAll` annotation."
 msgstr ""
+"`/subject/denied` エンドポイントは、 `@DenyAll` "
+"アノテーションを指定することで、呼が認証されているかどうかにかかわらず、あらゆるアクセスを禁止します。"
 
 #. type: Title ==
 #: upstream/_guides/security-authorization.adoc:229
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "References"
-msgstr ""
+msgstr "参考文献"
 
 #. type: Plain text
 #: upstream/_guides/security-authorization.adoc:231
+#, fuzzy
 msgid "link:security[Quarkus Security]"
-msgstr ""
+msgstr "link:security[Quarkusのセキュリティ]"
