--- a/i18n/po/ja_JP/_guides/sending-emails.adoc.po
+++ b/i18n/po/ja_JP/_guides/sending-emails.adoc.po
@@ -21,82 +21,93 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/sending-emails.adoc:6
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Quarkus - Sending emails"
-msgstr ""
+msgstr "Quarkus - メールの送信"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:11
+#, fuzzy
 msgid ""
 "This guide demonstrates how your Quarkus application can send emails using "
 "an SMTP server."
-msgstr ""
+msgstr "このガイドでは、QuarkusアプリケーションがSMTPサーバーを使用して電子メールを送信する方法を説明します。"
 
 #. type: Title ==
 #: upstream/_guides/sending-emails.adoc:12
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Prerequisites"
-msgstr ""
+msgstr "前提条件"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:15
+#, fuzzy
 msgid "To complete this guide, you need:"
-msgstr ""
+msgstr "このガイドを完成させるには、以下のものが必要です。"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:17
+#, fuzzy
 msgid "less than 15 minutes"
-msgstr ""
+msgstr "15分以内"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:18
+#, fuzzy
 msgid "The SMTP hostname, port and credentials, and an email address"
-msgstr ""
+msgstr "SMTPホスト名、ポート、資格情報、および電子メール アドレス。"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:19
+#, fuzzy
 msgid "an IDE"
-msgstr ""
+msgstr "アイディーイーイー"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:20
+#, fuzzy
 msgid "JDK 1.8+ installed with `JAVA_HOME` configured appropriately"
-msgstr ""
+msgstr "JDK 1.8+ がインストールされ、 `JAVA_HOME` が適切に設定されています。"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:21
+#, fuzzy
 msgid "Apache Maven 3.6.2+"
-msgstr ""
+msgstr "Apache Maven 3.6.2+"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:22
+#, fuzzy
 msgid "GraalVM installed if you want to run in native mode."
-msgstr ""
+msgstr "ネイティブモードで動作させたい場合は、GraalVMをインストールします。"
 
 #. type: Title ==
 #: upstream/_guides/sending-emails.adoc:23
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Architecture"
-msgstr ""
+msgstr "建築"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:27
+#, fuzzy
 msgid ""
 "In this guide, we are going to see how you can send emails from a Quarkus "
 "application.  It covers simple emails, attachments, inlined attachments, the "
 "reactive and imperative APIs..."
 msgstr ""
+"このガイドでは、Quarkusアプリケーションからメールを送信する方法を見ていきます。シンプルな電子メール、添付ファイル、インラインの添付ファイル、反応型と命令型のAPIをカバーしています。"
 
 #. type: Title ==
 #: upstream/_guides/sending-emails.adoc:28
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Creating the Maven Project"
-msgstr ""
+msgstr "Mavenプロジェクトの作成"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:31
+#, fuzzy
 msgid "Create a new project with the following command:"
-msgstr ""
+msgstr "以下のコマンドで新規プロジェクトを作成します。"
 
 #. type: delimited block -
 #: upstream/_guides/sending-emails.adoc:38
@@ -110,8 +121,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:41
+#, fuzzy
 msgid "If you already have an existing project, add the `mailer` extension:"
-msgstr ""
+msgstr "既存のプロジェクトがある場合は、 `mailer` の拡張子を追加してください。"
 
 #. type: delimited block -
 #: upstream/_guides/sending-emails.adoc:45
@@ -121,23 +133,27 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/sending-emails.adoc:47
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Configuring the mailer"
-msgstr ""
+msgstr "メーラーの設定"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:51
+#, fuzzy
 msgid ""
 "The Quarkus mailer is using SMTP. In the `src/main/resources/application."
 "properties` file, you need to configure the host, port, username, password "
 "as well as the other configuration aspect.  Note that the password can also "
 "be configured using system properties and environment variables."
 msgstr ""
+"QuarkusのメーラーはSMTPを使用しています。 `src/main/resources/application.properties` "
+"ファイルでは、ホスト、ポート、ユーザー名、パスワードだけでなく、他の設定面も設定する必要があります。パスワードは、システムのプロパティや環境変数を使って設定することもできるので注意してください。"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:53
+#, fuzzy
 msgid "Here is an example using _sendgrid_:"
-msgstr ""
+msgstr "ここでは _sendgridを_使用した例を示します。"
 
 #. type: delimited block -
 #: upstream/_guides/sending-emails.adoc:62
@@ -153,84 +169,93 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:66
+#, fuzzy
 msgid ""
 "For more information about the Mailer extension configuration please refer "
 "to the <<configuration-reference, Configuration Reference>>."
-msgstr ""
+msgstr "メーラー拡張設定の詳細については、 link:#configuration-reference[設定リファレンスを]参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/sending-emails.adoc:67
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Sending simple emails"
-msgstr ""
+msgstr "簡単なメールの送信"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:70
+#, fuzzy
 msgid ""
 "In a JAX-RS resource, or in a bean, you can inject the mailer as follows:"
-msgstr ""
+msgstr "JAX-RSリソース内、またはビーン内では、以下のようにメーラーを注入することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/sending-emails.adoc:75
 #, no-wrap
-msgid ""
-"@Inject\n"
+msgid "@Inject\n"
 "Mailer mailer;\n"
 msgstr ""
 
 #. type: delimited block -
 #: upstream/_guides/sending-emails.adoc:78
 #, no-wrap
-msgid ""
-"@Inject\n"
+msgid "@Inject\n"
 "ReactiveMailer reactiveMailer;\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:81
+#, fuzzy
 msgid "There are 2 APIs:"
-msgstr ""
+msgstr "APIは2つあります。"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:83
+#, fuzzy
 msgid ""
 "`io.quarkus.mailer.Mailer` provides the imperative (blocking and "
 "synchronous) API;"
-msgstr ""
+msgstr "`io.quarkus.mailer.Mailer` は、必須（ブロッキングと同期）APIを提供しています。"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:84
+#, fuzzy
 msgid ""
 "`io.quarkus.mailer.ReactiveMailer` provides the reactive (non-blocking and "
 "asynchronous) API"
 msgstr ""
+"`io.quarkus.mailer.ReactiveMailer` は反応的な (ノンブロッキングで非同期の) API を提供しています。"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:86
+#, fuzzy
 msgid ""
 "The two APIs are equivalent feature-wise. Actually the `Mailer` "
 "implementation is built on top of the `ReactiveMailer` implementation."
-msgstr ""
+msgstr "2つのAPIは機能的には同等です。実際には `Mailer` の実装は `ReactiveMailer` の実装の上に構築されています。"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:88
+#, fuzzy
 msgid "To send a simple email, proceed as follows:"
-msgstr ""
+msgstr "簡単なメールを送信するには、以下のように進めます。"
 
 #. type: delimited block -
 #: upstream/_guides/sending-emails.adoc:95
 #, no-wrap
 msgid ""
 "// Imperative API:\n"
-"mailer.send(Mail.withText(\"to@acme.org\", \"A simple email from quarkus\", \"This is my body.\"));\n"
+"mailer.send(Mail.withText(\"to@acme.org\", \"A simple email from quarkus\", "
+"\"This is my body.\"));\n"
 "// Reactive API:\n"
-"CompletionStage<Void> stage = reactiveMailer.send(Mail.withText(\"to@acme.org\", \"A reactive email from quarkus\", \"This is my body.\"));\n"
+"CompletionStage<Void> stage = reactiveMailer.send(Mail.withText(\"to@acme."
+"org\", \"A reactive email from quarkus\", \"This is my body.\"));\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:98
+#, fuzzy
 msgid "For example, you can use the `Mailer` in a JAX-RS endpoint as follows:"
-msgstr ""
+msgstr "例えば、JAX-RS のエンドポイントで `Mailer` を使用すると、以下のようになります。"
 
 #. type: delimited block -
 #: upstream/_guides/sending-emails.adoc:107
@@ -239,7 +264,8 @@ msgid ""
 "@GET\n"
 "@Path(\"/simple\")\n"
 "public Response sendASimpleEmail() {\n"
-"    mailer.send(Mail.withText(\"to@acme.org\", \"A simple email from quarkus\", \"This is my body\"));\n"
+"    mailer.send(Mail.withText(\"to@acme.org\", \"A simple email from "
+"quarkus\", \"This is my body\"));\n"
 "    return Response.accepted().build();\n"
 "}\n"
 msgstr ""
@@ -252,38 +278,44 @@ msgid ""
 "@Path(\"/async\")\n"
 "public CompletionStage<Response> sendASimpleEmailAsync() {\n"
 "    return reactiveMailer.send(\n"
-"            Mail.withText(\"to@acme.org\", \"A reactive email from quarkus\", \"This is my body\"))\n"
+"            Mail.withText(\"to@acme.org\", \"A reactive email from "
+"quarkus\", \"This is my body\"))\n"
 "            .thenApply(x -> Response.accepted().build());\n"
 "}\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:118
+#, fuzzy
 msgid ""
 "With such a JAX-RS resource, you can check that everything is working with:"
-msgstr ""
+msgstr "このようなJAX-RSリソースがあれば、すべてが動作していることを確認することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/sending-emails.adoc:123
 #, no-wrap
-msgid ""
-"curl http://localhost:8080/simple\n"
+msgid "curl http://localhost:8080/simple\n"
 "curl http://localhost:8080/async\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:128
+#, fuzzy
 msgid ""
 "You can create new `io.quarkus.mailer.Mail` instances from the constructor "
 "or from the `Mail.withText` and `Mail.withHtml` helper methods. The `Mail` "
 "instance lets you add recipients (to, cc, or bcc), set the subject, headers, "
 "sender (from) address..."
 msgstr ""
+"コンストラクタ、または `Mail.withText` と `Mail.withHtml` ヘルパーメソッドから、新しい `io.quarkus."
+"mailer.Mail` インスタンスを作成できます。 `Mail` インスタンスでは、受信者 (to, cc, bcc) の追加、件名、ヘッダ、送信者 "
+"(from) アドレスの設定などを行うことができます。"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:130
+#, fuzzy
 msgid "You can also send several `Mail` objects in one call:"
-msgstr ""
+msgstr "一度の呼び出しで複数の `Mail` オブジェクトを送信することもできます。"
 
 #. type: delimited block -
 #: upstream/_guides/sending-emails.adoc:134
@@ -293,16 +325,19 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/sending-emails.adoc:136
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Sending attachments"
-msgstr ""
+msgstr "添付ファイルの送信"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:139
+#, fuzzy
 msgid ""
 "To send attachment, just use the `addAttachment` methods on the `io.quarkus."
 "mailer.Mail` instance:"
 msgstr ""
+"添付ファイルを送信するには、 `io.quarkus.mailer.Mail` インスタンスの `addAttachment` "
+"メソッドを使用するだけです。"
 
 #. type: delimited block -
 #: upstream/_guides/sending-emails.adoc:151
@@ -311,7 +346,8 @@ msgid ""
 "@GET\n"
 "@Path(\"/attachment\")\n"
 "public Response sendEmailWithAttachment() {\n"
-"    mailer.send(Mail.withText(\"to@acme.org\", \"An email from quarkus with attachment\",\n"
+"    mailer.send(Mail.withText(\"to@acme.org\", \"An email from quarkus with "
+"attachment\",\n"
 "            \"This is my body\")\n"
 "            .addAttachment(\"my-file.txt\",\n"
 "                \"content of my file\".getBytes(), \"text/plain\"));\n"
@@ -321,18 +357,21 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:154
+#, fuzzy
 msgid ""
 "Attachments can be created from raw bytes (as shown in the snippet) or files."
-msgstr ""
+""
+msgstr "添付ファイルは、（スニペットに示すように）生のバイトから作成することも、ファイルから作成することもできます。"
 
 #. type: Title ==
 #: upstream/_guides/sending-emails.adoc:155
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Sending HTML emails with inlined attachments"
-msgstr ""
+msgstr "インライン付きの添付ファイルでHTMLメールを送信する"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:159
+#, fuzzy
 msgid ""
 "When sending HTML email, you can add inlined attachments.  For example, you "
 "can send an image with your email, and this image will be displayed in the "
@@ -340,6 +379,8 @@ msgid ""
 "specify the full path to the file. \"e.g.\" \"META-INF/resources/quarkus-"
 "logo.png\" otherwise quarkus will lookup in the root folder of the project"
 msgstr ""
+"HTMLメールを送信する際に、インラインの添付ファイルを追加することができます。例えば、メールに画像を添付して送信すると、この画像がメールの内容に表示されます。画像ファイルをリソースフォルダに入れる場合は、ファイルのフルパスを指定する必要があります。\"例\"\"META-"
+"INF/resources/quarkus-logo.png\" でない場合、quarkusはプロジェクトのルートフォルダを検索します。"
 
 #. type: delimited block -
 #: upstream/_guides/sending-emails.adoc:174
@@ -349,7 +390,8 @@ msgid ""
 "@Path(\"/html\")\n"
 "public Response sendingHTML() {\n"
 "    String body = \"<strong>Hello!</strong>\" + \"\\n\" +\n"
-"        \"<p>Here is an image for you: <img src=\\\"cid:my-image@quarkus.io\\\"/></p>\" +\n"
+"        \"<p>Here is an image for you: <img src=\\\"cid:my-image@quarkus."
+"io\\\"/></p>\" +\n"
 "        \"<p>Regards</p>\";\n"
 "    mailer.send(Mail.withHtml(\"to@acme.org\", \"An email in HTML\", body)\n"
 "        .addInlineAttachment(\"quarkus-logo.png\",\n"
@@ -361,6 +403,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:180
+#, fuzzy
 msgid ""
 "Note the _content-id_ format and reference.  By spec, when you create the "
 "inline attachment, the content-id must be structured as follows: "
@@ -369,15 +412,20 @@ msgid ""
 "for instance in the `src` attribute, use `cid:id@domain` (without the `<` "
 "and `>`)."
 msgstr ""
+"content _-id の_形式と参照に注意してください。仕様上、インライン添付ファイルを作成する際には、content-"
+"idは以下のように構成する必要があります。 `&amp;lt;id@domain&amp;gt;`. `&amp;lt;&amp;gt;` の間に "
+"content-id を挟まない場合は、自動的にラップされます。添付ファイルを参照したい場合、例えば `src` 属性で参照したい場合は `cid:"
+"id@domain` を使用してください（ `&amp;lt;` と `&amp;gt;` は使用しないでください）。"
 
 #. type: Title ==
 #: upstream/_guides/sending-emails.adoc:181
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Testing email sending"
-msgstr ""
+msgstr "メール送信のテスト"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:186
+#, fuzzy
 msgid ""
 "Because it is very inconvenient to send emails during development and "
 "testing, you can set the `quarkus.mailer.mock` boolean configuration to "
@@ -385,19 +433,22 @@ msgid ""
 "in a `MockMailbox` bean instead.  This is the default if you are running "
 "Quarkus in `DEV` or `TEST` mode."
 msgstr ""
+"開発中やテスト中にメールを送信するのは非常に不便なので、 `quarkus.mailer.mock` のブール設定を `true` "
+"に設定して、実際にはメールを送信せずに標準出力に印刷して、代わりに `MockMailbox` ビーンに収集することができます。これは、 `DEV` "
+"または `TEST` モードでQuarkusを実行している場合のデフォルトです。"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:188
+#, fuzzy
 msgid ""
 "You can then write tests to verify that your emails were sent, for example, "
 "by a REST endpoint:"
-msgstr ""
+msgstr "そして、テストを書いて、例えばRESTエンドポイントでメールが送信されたかどうかを確認することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/sending-emails.adoc:193
 #, no-wrap
-msgid ""
-"@QuarkusTest\n"
+msgid "@QuarkusTest\n"
 "class MailTest {\n"
 msgstr ""
 
@@ -410,16 +461,14 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_guides/sending-emails.adoc:198
 #, no-wrap
-msgid ""
-"    @Inject\n"
+msgid "    @Inject\n"
 "    MockMailbox mailbox;\n"
 msgstr ""
 
 #. type: delimited block -
 #: upstream/_guides/sending-emails.adoc:203
 #, no-wrap
-msgid ""
-"    @BeforeEach\n"
+msgid "    @BeforeEach\n"
 "    void init() {\n"
 "        mailbox.clear();\n"
 "    }\n"
@@ -463,29 +512,36 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/sending-emails.adoc:226
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Gmail specific configuration"
-msgstr ""
+msgstr "Gmail特有の設定"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:229
+#, fuzzy
 msgid ""
 "If you want to use the Gmail SMTP server, first create a dedicated password "
 "in `Google Account > Security > App passwords` or go to https://myaccount."
 "google.com/apppasswords."
 msgstr ""
+"GmailのSMTPサーバーを利用する場合は、まず、 `Google Account &amp;gt; Security &amp;gt; App "
+"passwords` で専用のパスワードを作成するか、 https://myaccount.google.com/apppasswords 。"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:231
+#, fuzzy
 msgid ""
 "When done, you can configure your Quarkus application by adding the "
 "following properties to your `application.properties`:"
 msgstr ""
+"完了したら、 `application.properties`."
+"Quarkusアプリケーションに以下のプロパティを追加して、Quarkusアプリケーションを設定することができます。"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:233
+#, fuzzy
 msgid "With TLS:"
-msgstr ""
+msgstr "TLSで。"
 
 #. type: delimited block -
 #: upstream/_guides/sending-emails.adoc:242
@@ -501,8 +557,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:245
+#, fuzzy
 msgid "Or with SSL:"
-msgstr ""
+msgstr "もしくはSSLで。"
 
 #. type: delimited block -
 #: upstream/_guides/sending-emails.adoc:254
@@ -518,27 +575,31 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/sending-emails.adoc:256
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Using SSL with native executables"
-msgstr ""
+msgstr "ネイティブ実行ファイルでSSLを使用する"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:260
+#, fuzzy
 msgid ""
 "Note that if you enable SSL for the mailer and you want to build a native "
 "executable, you will need to enable the SSL support.  Please refer to the "
 "native-and-ssl-guide.html[Using SSL With Native Executables] guide for more "
 "information."
 msgstr ""
+"メーラーのSSLを有効にして、ネイティブ実行ファイルを構築する場合は、SSL対応を有効にする必要がありますのでご注意ください。詳しくは、native-"
+"and-ssl-guide.html[Using SSL With Native Executables]ガイドを参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/sending-emails.adoc:261
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Using the underlying Vert.x Mail Client"
-msgstr ""
+msgstr "基礎となる Vert.x メールクライアントの使用"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:265
+#, fuzzy
 msgid ""
 "The Quarkus Mailer is implemented on top of the https://vertx.io/docs/vertx-"
 "mail-client/java/[Vert.x Mail Client], providing an asynchronous and non-"
@@ -546,6 +607,8 @@ msgid ""
 "sent, for instance if you need to retrieve the message ids, you can inject "
 "the underlying client, and use it directly:"
 msgstr ""
+"Quarkus Mailerは、 link:https://vertx.io/docs/vertx-mail-client/java/[Vert."
+"xメールクライアントの]上に実装されており、非同期でノンブロッキングな方法でメールを送信することができます。メールの送信方法を細かく制御する必要がある場合、例えばメッセージのIDを取得する必要がある場合など、基礎となるクライアントを注入して直接使用することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/sending-emails.adoc:269
@@ -555,56 +618,69 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:272
+#, fuzzy
 msgid "Three API flavors are exposed:"
-msgstr ""
+msgstr "3つのAPIフレーバーが公開されています。"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:274
+#, fuzzy
 msgid ""
 "the Axle client (`io.vertx.axle.ext.mail.MailClient`), using "
 "`CompletionStage` and Reactive Streams `Publisher`"
 msgstr ""
+"Axle クライアント ( `io.vertx.axle.ext.mail.MailClient`) を使用して、 `CompletionStage` "
+"と Reactive Streams を使用します。 `Publisher`"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:275
+#, fuzzy
 msgid "the RX Java 2 client (`io.vertx.reactivex.ext.mail.MailClient`)"
-msgstr ""
+msgstr "RX Java 2 クライアント ( `io.vertx.reactivex.ext.mail.MailClient`)"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:276
+#, fuzzy
 msgid "the bare client (`io.vertx.ext.mail.MailClient`)"
-msgstr ""
+msgstr "ベアクライアント ( `io.vertx.ext.mail.MailClient`)"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:278
+#, fuzzy
 msgid ""
 "Check the link:using-vertx.html[Using Vert.x guide] for further details "
 "about these different APIs and how to select the most suitable for you."
 msgstr ""
+"これらの異なる API の詳細と、あなたに最も適した API を選択する方法については、 link:using-vertx.html[Using "
+"Vert.x ガイドを]確認してください。"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:281
+#, fuzzy
 msgid ""
 "The retrieved `MailClient` is configured using the configuration key "
 "presented above.  You can also create your own instance, and pass your own "
 "configuration."
 msgstr ""
+"取得した `MailClient` は、上記で提示した設定キーを使用して設定します。また、独自のインスタンスを作成し、独自の設定を渡すこともできます。"
 
 #. type: Title ==
 #: upstream/_guides/sending-emails.adoc:282
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Conclusion"
-msgstr ""
+msgstr "結論"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:286
+#, fuzzy
 msgid ""
 "This guide has shown how you can send emails from a Quarkus application.  "
 "The _mailer_ extension works in JVM and native mode."
 msgstr ""
+"このガイドでは、Quarkusアプリケーションからメールを送信する方法を紹介しました。 _メーラー_拡張機能は、JVMとネイティブモードで動作します。"
 
 #. type: Title ==
 #: upstream/_guides/sending-emails.adoc:289
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Mailer Configuration Reference"
-msgstr ""
+msgstr "メーラー設定リファレンス"
