--- a/i18n/po/ja_JP/_guides/tika.adoc.po
+++ b/i18n/po/ja_JP/_guides/tika.adoc.po
@@ -21,19 +21,23 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/tika.adoc:6
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Quarkus - Using Apache Tika"
-msgstr ""
+msgstr "Quarkus - Apache Tikaの使用"
 
 #. type: Plain text
 #: upstream/_guides/tika.adoc:11
+#, fuzzy
 msgid ""
 "This guide explains how your Quarkus application can use https://tika.apache."
 "org/[Apache Tika] to parse the documents."
 msgstr ""
+"このガイドでは、Quarkusアプリケーションが link:https://tika.apache.org/[Apache "
+"Tika]を使用してドキュメントを解析する方法について説明します。"
 
 #. type: Plain text
 #: upstream/_guides/tika.adoc:13
+#, fuzzy
 msgid ""
 "https://tika.apache.org/[Apache Tika] is a content analysis toolkit which is "
 "used to parse the documents in PDF, Open Document, Excel and many other well "
@@ -41,9 +45,14 @@ msgid ""
 "text and properties (metadata) are available once the document has been "
 "parsed."
 msgstr ""
+"link:https://tika.apache.org/[Apache Tika は]コンテンツ分析ツールキットで、シンプルな統一 API を使って "
+"PDF, Open Document, Excel "
+"やその他多くのよく知られたバイナリやテキスト形式の文書を解析するのに使われます。文書のテキストとプロパティ (メタデータ) "
+"の両方が、文書が解析されると利用可能になります。"
 
 #. type: delimited block =
 #: upstream/_guides/tika.adoc:17
+#, fuzzy
 msgid ""
 "If you are planning to run the application as a native executable and parse "
 "documents that may have been created with charsets different than the "
@@ -51,6 +60,9 @@ msgid ""
 "Quarkus Maven Plugin to get the native image generator include all the "
 "charsets available to the JVM:"
 msgstr ""
+"アプリケーションをネイティブ実行ファイルとして実行し、 `UTF-8` "
+"のようなJavaでサポートされている標準の文字セットとは異なる文字セットで作成された可能性のあるドキュメントを解析する場合は、Quarkus Maven "
+"Pluginを設定して、ネイティブイメージジェネレータがJVMで利用可能なすべての文字セットを含むようにする必要があります。"
 
 #. type: delimited block -
 #: upstream/_guides/tika.adoc:35
@@ -76,94 +88,110 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/tika.adoc:39
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Prerequisites"
-msgstr ""
+msgstr "前提条件"
 
 #. type: delimited block =
 #: upstream/_guides/tika.adoc:42
+#, fuzzy
 msgid "To complete this guide, you need:"
-msgstr ""
+msgstr "このガイドを完成させるには、以下のものが必要です。"
 
 #. type: delimited block =
 #: upstream/_guides/tika.adoc:44
+#, fuzzy
 msgid "less than 20 minutes"
-msgstr ""
+msgstr "二十分弱"
 
 #. type: delimited block =
 #: upstream/_guides/tika.adoc:45
+#, fuzzy
 msgid "an IDE"
-msgstr ""
+msgstr "アイディーイーイー"
 
 #. type: delimited block =
 #: upstream/_guides/tika.adoc:46
+#, fuzzy
 msgid "JDK 1.8+ installed with `JAVA_HOME` configured appropriately"
-msgstr ""
+msgstr "JDK 1.8+ がインストールされ、 `JAVA_HOME` が適切に設定されています。"
 
 #. type: delimited block =
 #: upstream/_guides/tika.adoc:47
+#, fuzzy
 msgid "Apache Maven {maven-version}"
-msgstr ""
+msgstr "Apache Maven {maven-version} の場合"
 
 #. type: delimited block =
 #: upstream/_guides/tika.adoc:48
+#, fuzzy
 msgid "Docker"
-msgstr ""
+msgstr "ドッカー"
 
 #. type: delimited block =
 #: upstream/_guides/tika.adoc:49
+#, fuzzy
 msgid ""
 "link:building-native-image[GraalVM installed if you want to run in native "
 "mode]"
-msgstr ""
+msgstr "link:building-native-image[ネイティブモードで動作させたい場合は、GraalVMをインストールしてください。]"
 
 #. type: Title ==
 #: upstream/_guides/tika.adoc:50
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Solution"
-msgstr ""
+msgstr "解決策"
 
 #. type: delimited block =
 #: upstream/_guides/tika.adoc:54
+#, fuzzy
 msgid ""
 "We recommend that you follow the instructions in the next sections and "
 "create the application step by step.  However, you can go right to the "
 "completed example."
-msgstr ""
+msgstr "次の章で紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、完成した例にそのまま進んでも構いません。"
 
 #. type: delimited block =
 #: upstream/_guides/tika.adoc:56
+#, fuzzy
 msgid ""
 "Clone the Git repository: `git clone {quickstarts-clone-url}`, or download "
 "an {quickstarts-archive-url}[archive]."
 msgstr ""
+"Git リポジトリをクローンします: `git clone {quickstarts-clone-url}` 、または {quickstarts-"
+"archive-url}[archive] をダウンロードしてください。"
 
 #. type: delimited block =
 #: upstream/_guides/tika.adoc:58
+#, fuzzy
 msgid ""
 "The solution is located in the `tika-quickstart` {quickstarts-tree-url}/tika-"
 "quickstart[directory]."
 msgstr ""
+"ソリューションは `tika-quickstart` {quickstarts-tree-url}/tika-quickstart[directory] "
+"にあります。"
 
 #. type: Plain text
 #: upstream/_guides/tika.adoc:62
+#, fuzzy
 msgid ""
 "The provided solution contains a few additional elements such as tests and "
 "testing infrastructure."
-msgstr ""
+msgstr "提供されるソリューションには、テストやテストのインフラストラクチャなど、いくつかの追加要素が含まれています。"
 
 #. type: Title ==
 #: upstream/_guides/tika.adoc:65
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Creating the Maven Project"
-msgstr ""
+msgstr "Mavenプロジェクトの作成"
 
 #. type: delimited block =
 #: upstream/_guides/tika.adoc:68
+#, fuzzy
 msgid ""
 "First, we need a new project. Create a new project with the following "
 "command:"
-msgstr ""
+msgstr "まず、新しいプロジェクトが必要です。以下のコマンドで新規プロジェクトを作成します。"
 
 #. type: delimited block -
 #: upstream/_guides/tika.adoc:78
@@ -180,18 +208,22 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/tika.adoc:81
+#, fuzzy
 msgid ""
 "This command generates a Maven project, importing the `tika` and `resteasy` "
 "extensions."
-msgstr ""
+msgstr "このコマンドは、 `tika` と `resteasy` の拡張子をインポートして、Maven プロジェクトを生成します。"
 
 #. type: Plain text
 #: upstream/_guides/tika.adoc:84
+#, fuzzy
 msgid ""
 "If you already have your Quarkus project configured you can add the `tika` "
 "and `resteasy` extensions to your project by running the following command "
 "in your project base directory."
 msgstr ""
+"すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリで次のコマンドを実行することで、 `tika` と "
+"`resteasy` の拡張子をプロジェクトに追加できます。"
 
 #. type: delimited block -
 #: upstream/_guides/tika.adoc:88
@@ -201,8 +233,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/tika.adoc:91
+#, fuzzy
 msgid "This will add the following to your `pom.xml`:"
-msgstr ""
+msgstr "これにより、 `pom.xml`."
 
 #. type: delimited block -
 #: upstream/_guides/tika.adoc:102
@@ -220,16 +253,19 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/tika.adoc:104
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Examine the generated JAX-RS resource"
-msgstr ""
+msgstr "生成されたJAX-RSリソースを調べる"
 
 #. type: Plain text
 #: upstream/_guides/tika.adoc:107
+#, fuzzy
 msgid ""
 "Open the `src/main/java/org/acme/tika/TikaParserResource.java` file and see "
 "the following content:"
 msgstr ""
+"`src/main/java/org/acme/tika/TikaParserResource.java` "
+"ファイルを開くと、以下のような内容が表示されます。"
 
 #. type: delimited block -
 #: upstream/_guides/tika.adoc:111 upstream/_guides/tika.adoc:135
@@ -250,8 +286,7 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_guides/tika.adoc:119
 #, no-wrap
-msgid ""
-"@Path(\"/parse\")\n"
+msgid "@Path(\"/parse\")\n"
 "public class TikaParserResource {\n"
 msgstr ""
 
@@ -269,16 +304,18 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/tika.adoc:128
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Update the JAX-RS resource"
-msgstr ""
+msgstr "JAX-RSリソースの更新"
 
 #. type: Plain text
 #: upstream/_guides/tika.adoc:131
+#, fuzzy
 msgid ""
 "Next update `TikaParserResource` to accept and parse PDF and OpenDocument "
 "format documents:"
 msgstr ""
+"次に `TikaParserResource` を更新して、PDF および OpenDocument 形式の文書を受け入れて解析するようにします。"
 
 #. type: delimited block -
 #: upstream/_guides/tika.adoc:139
@@ -304,8 +341,7 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_guides/tika.adoc:149
 #, no-wrap
-msgid ""
-"import io.quarkus.tika.TikaParser;\n"
+msgid "import io.quarkus.tika.TikaParser;\n"
 "import org.jboss.logging.Logger;\n"
 msgstr ""
 
@@ -315,14 +351,14 @@ msgstr ""
 msgid ""
 "@Path(\"/parse\")\n"
 "public class TikaParserResource {\n"
-"    private static final Logger log = Logger.getLogger(TikaParserResource.class);\n"
+"    private static final Logger log = Logger.getLogger(TikaParserResource."
+"class);\n"
 msgstr ""
 
 #. type: delimited block -
 #: upstream/_guides/tika.adoc:156
 #, no-wrap
-msgid ""
-"    @Inject\n"
+msgid "    @Inject\n"
 "    TikaParser parser;\n"
 msgstr ""
 
@@ -332,7 +368,8 @@ msgstr ""
 msgid ""
 "    @POST\n"
 "    @Path(\"/text\")\n"
-"    @Consumes({\"application/pdf\", \"application/vnd.oasis.opendocument.text\"})\n"
+"    @Consumes({\"application/pdf\", \"application/vnd.oasis.opendocument."
+"text\"})\n"
 "    @Produces(MediaType.TEXT_PLAIN)\n"
 "    public String extractText(InputStream stream) {\n"
 "        Instant start = Instant.now();\n"
@@ -353,20 +390,22 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_guides/tika.adoc:169
 #, no-wrap
-msgid "        log.info(Duration.between(start, finish).toMillis() + \" mls have passed\");\n"
+msgid ""
+"        log.info(Duration.between(start, finish).toMillis() + \" mls have "
+"passed\");\n"
 msgstr ""
 
 #. type: delimited block -
 #: upstream/_guides/tika.adoc:173
 #, no-wrap
-msgid ""
-"        return text;\n"
+msgid "        return text;\n"
 "    }\n"
 "}\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/tika.adoc:176
+#, fuzzy
 msgid ""
 "As you can see the JAX-RS resource method was renamed to `extractText`, "
 "`@GET` annotation was replaced with `POST` and `@Path(/text)` annotation was "
@@ -375,17 +414,22 @@ msgid ""
 "documents and report the extracted text. It also measures how long does it "
 "take to parse a given document."
 msgstr ""
+"ご覧のように、JAX-RSのリソースメソッドの名前が `extractText` に変更され、 `@GET` アノテーションが `POST` "
+"に置き換わり、 `@Path(/text)` アノテーションが追加され、 `@Consumes` アノテーションでは、PDF と "
+"OpenDocument のメディアタイプのフォーマットが受け入れられるようになったことが示されています。注入された `TikaParser` "
+"は、文書を解析し、抽出されたテキストを報告するために使用されます。また、与えられた文書を解析するのにどのくらいの時間がかかるかを測定します。"
 
 #. type: Title ==
 #: upstream/_guides/tika.adoc:177
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Run the application"
-msgstr ""
+msgstr "アプリケーションの実行"
 
 #. type: Plain text
 #: upstream/_guides/tika.adoc:180
+#, fuzzy
 msgid "Now we are ready to run our application. Use:"
-msgstr ""
+msgstr "これで、アプリケーションを実行する準備が整いました。使用してください。"
 
 #. type: delimited block -
 #: upstream/_guides/tika.adoc:184
@@ -395,14 +439,15 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/tika.adoc:187
+#, fuzzy
 msgid "and you should see output similar to:"
-msgstr ""
+msgstr "のような出力が表示されるはずです。"
 
 #. type: Block title
 #: upstream/_guides/tika.adoc:188
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "quarkus:dev Output"
-msgstr ""
+msgstr "quarkus:dev 出力"
 
 #. type: delimited block -
 #: upstream/_guides/tika.adoc:206
@@ -411,64 +456,83 @@ msgid ""
 "$ ./mvnw clean compile quarkus:dev\n"
 "[INFO] Scanning for projects...\n"
 "[INFO]\n"
-"INFO] --------------------< org.acme.example:apache-tika >--------------------\n"
+"INFO] --------------------< org.acme.example:apache-tika >-------------------"
+"-\n"
 "[INFO] Building apache-tika 1.0-SNAPSHOT\n"
-"[INFO] --------------------------------[ jar ]---------------------------------\n"
+"[INFO] --------------------------------[ jar ]-------------------------------"
+"--\n"
 "...\n"
 "Listening for transport dt_socket at address: 5005\n"
-"2019-10-15 14:23:26,442 INFO  [io.qua.dep.QuarkusAugmentor] (main) Beginning quarkus augmentation\n"
-"2019-10-15 14:23:26,960 INFO  [io.qua.resteasy] (build-15) Resteasy running without servlet container.\n"
-"2019-10-15 14:23:26,960 INFO  [io.qua.resteasy] (build-15) - Add quarkus-undertow to run Resteasy within a servlet container\n"
-"2019-10-15 14:23:26,991 INFO  [io.qua.dep.QuarkusAugmentor] (main) Quarkus augmentation completed in 549ms\n"
-"2019-10-15 14:23:27,637 INFO  [io.quarkus] (main) Quarkus 999-SNAPSHOT started in 1.361s. Listening on: http://0.0.0.0:8080\n"
-"2019-10-15 14:23:27,638 INFO  [io.quarkus] (main) Profile dev activated. Live Coding activated.\n"
-"2019-10-15 14:23:27,639 INFO  [io.quarkus] (main) Installed features: [cdi, resteasy, tika]\n"
+"2019-10-15 14:23:26,442 INFO  [io.qua.dep.QuarkusAugmentor] (main) Beginning "
+"quarkus augmentation\n"
+"2019-10-15 14:23:26,960 INFO  [io.qua.resteasy] (build-15) Resteasy running "
+"without servlet container.\n"
+"2019-10-15 14:23:26,960 INFO  [io.qua.resteasy] (build-15) - Add quarkus-"
+"undertow to run Resteasy within a servlet container\n"
+"2019-10-15 14:23:26,991 INFO  [io.qua.dep.QuarkusAugmentor] (main) Quarkus "
+"augmentation completed in 549ms\n"
+"2019-10-15 14:23:27,637 INFO  [io.quarkus] (main) Quarkus 999-SNAPSHOT "
+"started in 1.361s. Listening on: http://0.0.0.0:8080\n"
+"2019-10-15 14:23:27,638 INFO  [io.quarkus] (main) Profile dev activated. "
+"Live Coding activated.\n"
+"2019-10-15 14:23:27,639 INFO  [io.quarkus] (main) Installed features: [cdi, "
+"resteasy, tika]\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/tika.adoc:209
+#, fuzzy
 msgid ""
 "Now that the REST endpoint is running, we can get it to parse PDF and "
 "OpenDocument documents using a command line tool like curl:"
 msgstr ""
+"REST エンドポイントが実行されているので、curl のようなコマンドラインツールを使用して PDF や OpenDocument "
+"ドキュメントを解析することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/tika.adoc:214
 #, no-wrap
 msgid ""
-"$ curl -X POST -H \"Content-type: application/pdf\" --data-binary @target/classes/quarkus.pdf http://localhost:8080/parse/text\n"
+"$ curl -X POST -H \"Content-type: application/pdf\" --data-binary @target/"
+"classes/quarkus.pdf http://localhost:8080/parse/text\n"
 "Hello Quarkus\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/tika.adoc:217
+#, fuzzy
 msgid "and"
-msgstr ""
+msgstr "そして"
 
 #. type: delimited block -
 #: upstream/_guides/tika.adoc:222
 #, no-wrap
 msgid ""
-"$ curl -X POST -H \"Content-type: Content-type: application/vnd.oasis.opendocument.text\" --data-binary @target/classes/quarkus.odt http://localhost:8080/parse/text\n"
+"$ curl -X POST -H \"Content-type: Content-type: application/vnd.oasis."
+"opendocument.text\" --data-binary @target/classes/quarkus.odt http://"
+"localhost:8080/parse/text\n"
 "Hello Quarkus\n"
 msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/tika.adoc:224
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Building a native executable"
-msgstr ""
+msgstr "ネイティブ実行ファイルの構築"
 
 #. type: Plain text
 #: upstream/_guides/tika.adoc:228
+#, fuzzy
 msgid ""
 "You can build a native executable with the usual command `./mvnw package -"
-"Pnative`.  Running it is as simple as executing `./target/tika-"
-"quickstart-1.0-SNAPSHOT-runner`."
+"Pnative`.  Running it is as simple as executing `./target/tika-quickstart-1."
+"0-SNAPSHOT-runner`."
 msgstr ""
+"通常のコマンド `./mvnw package -Pnative` でネイティブの実行ファイルをビルドできます。実行は `./target/tika-"
+"quickstart-1.0-SNAPSHOT-runner` を実行するだけで簡単です。"
 
 #. type: Title ==
 #: upstream/_guides/tika.adoc:229
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Configuration Reference"
-msgstr ""
+msgstr "設定リファレンス"
