--- a/i18n/po/ja_JP/_guides/topic/developer-joy.adoc.po
+++ b/i18n/po/ja_JP/_guides/topic/developer-joy.adoc.po
@@ -18,33 +18,33 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/topic/developer-joy.adoc:1
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "---\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/topic/developer-joy.adoc:4
-#, no-wrap
-msgid ""
-"layout: vision\n"
+#, no-wrap, fuzzy
+msgid "layout: vision\n"
 "permalink: /vision/developer-joy\n"
 "---\n"
-msgstr ""
+msgstr "layout: vision permalink./vision/developer-joy ---."
 
 #. type: Title =
 #: upstream/_guides/topic/developer-joy.adoc:7
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "{project-name} - Developer Joy"
-msgstr ""
+msgstr "プロジェクト名} - Developer Joy"
 
 #. type: Title ==
 #: upstream/_guides/topic/developer-joy.adoc:9
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Beyond simply working, we're aiming for Joy"
-msgstr ""
+msgstr "単純に働くことを超えて、Joyを目指す"
 
 #. type: Plain text
 #: upstream/_guides/topic/developer-joy.adoc:12
+#, fuzzy
 msgid ""
 "{project-name} is not just about being great for writing Web Applications or "
 "Micro-Services. We're focusing on more than the feature set: we make sure "
@@ -52,24 +52,31 @@ msgid ""
 "the most intuitive way possible. It should be trivial to develop simple "
 "things, and easy to develop the more complex ones."
 msgstr ""
+"project-"
+"name}は、単にWebアプリケーションやマイクロサービスを書くために優れているということだけではありません。私たちが重視しているのは機能セットだけではありません:"
+" 私たちは、可能な限り直感的な方法で、ほとんど設定をせずに、シンプルに、すべての機能がうまく動作するようにしています。シンプルなものを開発するのは簡単で、複雑なものを開発するのは簡単でなければなりません。"
 
 #. type: Plain text
 #: upstream/_guides/topic/developer-joy.adoc:14
+#, fuzzy
 msgid ""
 "We've looked for the most useful extensions, we've made sure they all work "
 "together, that every use-case is covered, that out-of-the-box configuration "
 "is the most sensible, that every error helps you to resolve it. More than "
 "productivity: using {project-name} should be enjoyable."
 msgstr ""
+"私たちは最も有用な拡張機能を探し、それらがすべて一緒に動作し、すべてのユースケースがカバーされていること、箱から出してすぐに使える設定が最も賢明であること、すべてのエラーが解決に役立つことを確認しました。生産性以上のもの:"
+" {project-name} を使うことは楽しいものでなければなりません。"
 
 #. type: Title ===
 #: upstream/_guides/topic/developer-joy.adoc:15
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Unified configuration"
-msgstr ""
+msgstr "統一された設定"
 
 #. type: Plain text
 #: upstream/_guides/topic/developer-joy.adoc:18
+#, fuzzy
 msgid ""
 "Gone are the days of a thousand configuration files and formats. We're "
 "aiming for cohesion, so a single configuration file is all it takes for "
@@ -78,49 +85,61 @@ msgid ""
 "and sensible defaults so you can get started with no configuration "
 "whatsoever."
 msgstr ""
+"何千もの設定ファイルやフォーマットの時代は終わりました。私たちは一貫性を目指しているので、{project-"
+"name}アプリケーションがすべての拡張機能を設定するために必要なのは、単一の設定ファイルだけです。それだけでなく、すべての設定可能なオプションには、最も便利で賢明なデフォルト値が設定されていることを確認していますので、何も設定しなくても始めることができます。"
 
 #. type: Title ===
 #: upstream/_guides/topic/developer-joy.adoc:19
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Live Coding"
-msgstr ""
+msgstr "ライブコーディング"
 
 #. type: Plain text
 #: upstream/_guides/topic/developer-joy.adoc:23
+#, fuzzy
 msgid ""
 "One of the major productivity problems that face most Java developers is "
 "traditional Java development workflow. For most web developers this will "
 "generally be:"
 msgstr ""
+"ほとんどのJava開発者が直面している大きな生産性の問題の1つは、従来のJava開発ワークフローです。ほとんどのウェブ開発者にとって、これは一般的には"
 
 #. type: Plain text
 #: upstream/_guides/topic/developer-joy.adoc:25
+#, fuzzy
 msgid "_Write Code_ -> _Compile_ -> _Deploy_ -> _Refresh Browser_ -> _Repeat_"
-msgstr ""
+msgstr "_コードを書く_→ _コンパイル_→ _デプロイ_→ _ブラウザを更新_→ _繰り返し_"
 
 #. type: Plain text
 #: upstream/_guides/topic/developer-joy.adoc:29
+#, fuzzy
 msgid ""
 "This can be a major drain on productivity, as the compile + redeploy cycle "
 "can often take up to a minute or more. {project-name} aims to solve this "
 "problem with its _Live Coding_ feature. When running in development mode the "
 "workflow is simply:"
 msgstr ""
+"これは、コンパイルと再デプロイのサイクルが1分以上かかることが多く、生産性を大きく低下させる可能性があります。project-name}は、 "
+"_ライブコーディング_機能でこの問題を解決しようとしています。開発モードで実行している場合、ワークフローは単純です。"
 
 #. type: Plain text
 #: upstream/_guides/topic/developer-joy.adoc:31
+#, fuzzy
 msgid "_Write Code_ -> _Refresh Browser_ -> _Repeat_"
-msgstr ""
+msgstr "_コードを書く_→ _ブラウザを更新_→ _繰り返し_"
 
 #. type: Plain text
 #: upstream/_guides/topic/developer-joy.adoc:34
+#, fuzzy
 msgid ""
 "This will work out of the box, with no special setup required. This works "
 "for Java file, application config, and static resources."
 msgstr ""
+"これは、特別な設定を必要とせず、箱から出してすぐに動作します。これはJavaファイル、アプリケーション設定、静的リソースに対して動作します。"
 
 #. type: Plain text
 #: upstream/_guides/topic/developer-joy.adoc:43
+#, fuzzy
 msgid ""
 "When you run `mvn compile quarkus:dev` {project-name} will launch in "
 "development mode. When it receives a HTTP request it will hold the request, "
@@ -131,15 +150,20 @@ msgid ""
 "a traditional app server, so for all but the largest applications this "
 "should take well under a second."
 msgstr ""
+"`mvn compile quarkus:dev` {project-name} を実行すると、開発モードで起動します。HTTP "
+"リクエストを受信すると、リクエストを保持し、アプリケーションのソースファイルが変更されたかどうかをチェックします。もし変更されていれば、変更されたファイルを透過的にコンパイルし、変更されたファイルでアプリケーションを再デプロイし、再デプロイされたアプリケーションへの "
+"HTTP リクエストを続けます。project-name} "
+"の再デプロイは、従来のアプリサーバよりもはるかに高速なので、大規模なアプリケーションを除くすべてのアプリケーションでは、1秒以下で完了するはずです。"
 
 #. type: Title ===
 #: upstream/_guides/topic/developer-joy.adoc:45
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Works on all the things"
-msgstr ""
+msgstr "すべてのことに取り組む"
 
 #. type: Plain text
 #: upstream/_guides/topic/developer-joy.adoc:48
+#, fuzzy
 msgid ""
 "There's nothing worse than getting different results when running your "
 "application or tests under Maven, Gradle, or the IDE. Whatever your "
@@ -147,24 +171,29 @@ msgid ""
 "environment, so pick your favorite tool and we make sure you get the same "
 "results as easily as possible."
 msgstr ""
+"Maven、Gradle、IDEでアプリケーションやテストを実行したときに、異なる結果が出ることほど最悪なことはありません。ワークフローがどのようなものであれ、{project-"
+"name}アプリケーションやテストはどのような環境でも簡単に実行できます。"
 
 #. type: Title ===
 #: upstream/_guides/topic/developer-joy.adoc:49
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Opinionated"
-msgstr ""
+msgstr "ご意見番"
 
 #. type: Plain text
 #: upstream/_guides/topic/developer-joy.adoc:52
+#, fuzzy
 msgid ""
 "We get it: there are a thousand ways to write the same code. Every company "
 "has traditions about how a project should be structured, and that can be "
 "fine. But it makes it really hard to write simple documentation, to onboard "
 "new developers, and to make things simple."
 msgstr ""
+"同じコードを書く方法は何千通りもあります。どの会社にもプロジェクトの構造化についての伝統があり、それはそれでいいのです。しかし、簡単なドキュメントを書いたり、新しい開発者を迎え入れたり、物事をシンプルにするのは本当に難しいことです。"
 
 #. type: Plain text
 #: upstream/_guides/topic/developer-joy.adoc:54
+#, fuzzy
 msgid ""
 "{project-name} will focus on what we feel is the simplest and most useful "
 "way to use any given feature. We will work hard to trim that particular "
@@ -174,12 +203,17 @@ msgid ""
 "what we think is the best way to do things. That's taking an opinion on how "
 "you should do things and voicing it."
 msgstr ""
+"project-"
+"name}は、与えられた機能を使用するための最もシンプルで最も有用な方法と思われるものに焦点を当てます。私たちは、その特定の機能を最も有用な本質に落とし込み、直観的な方法で徹底的に文書化するように努力します。これは、その機能をどのように使うのが一番良いかを前もって分析し、私たちの経験から、そのような分析を避けるためのお手伝いをし、私たちが考える最善の方法をお客様にご案内することです。これは、物事をどのように行うべきかについて意見を述べ、それを表明することです。"
 
 #. type: Plain text
 #: upstream/_guides/topic/developer-joy.adoc:55
+#, fuzzy
 msgid ""
 "Perhaps you'll disagree with our opinion, or you'll have a much more complex "
 "use-case that will not be solved by our recommended way, but that's fine. "
 "Don't worry: we will not prevent you from more advanced usage on the "
 "features we provide or the frameworks we integrate."
 msgstr ""
+"おそらくあなたは私たちの意見に同意しないかもしれませんし、私たちの推奨する方法では解決できない複雑なユースケースを抱えているかもしれませんが、それは構いません。ご心配なく:"
+" 私たちが提供する機能や私たちが統合しているフレームワークのより高度な利用を妨げることはありません。"
