--- a/i18n/po/ja_JP/_guides/vault-transit.adoc.po
+++ b/i18n/po/ja_JP/_guides/vault-transit.adoc.po
@@ -21,141 +21,168 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/vault-transit.adoc:6
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Quarkus - Using HashiCorp Vault's Transit Secret Engine"
-msgstr ""
+msgstr "Quarkus - HashiCorp Vaultのトランジットシークレットエンジンを使用する"
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:18
+#, fuzzy
 msgid ""
 "Vault's Transit Secret Engine offers an \"encryption as a service\" "
 "functionality. It allows to store encryption keys into Vault, and provides "
 "services to encrypt/decrypt and sign/verify arbitrary pieces of data. This "
 "brings several advantages, such as:"
 msgstr ""
+"VaultのTransit Secret "
+"Engineは、「サービスとしての暗号化」機能を提供します。これは、暗号化キーをVaultに格納することを可能にし、データの任意の部分を暗号化/"
+"復号化し、署名/検証するサービスを提供します。これにより、以下のようないくつかの利点がもたらされます。"
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:21
+#, fuzzy
 msgid ""
 "limited key exposure: keys never leave the Vault. Instead the data is sent "
 "to Vault to get encrypted/decrypted/signed/verified."
 msgstr ""
+"限られた鍵の露出：鍵は、Vaultを離れることはありません。代わりにデータは、暗号化/復号化/署名/検証を取得するためにボールトに送信されます。"
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:23
+#, fuzzy
 msgid ""
 "reliable and consistent algorithms: algorithms are implemented by Vault. It "
 "supports a wide variety, and there is only one implementation used for a "
 "given algorithm type, regardless of the client's technology."
 msgstr ""
+"信頼性の高い一貫したアルゴリズム：アルゴリズムはVaultによって実装されています。多種多様なアルゴリズムをサポートしており、クライアントの技術に関係なく、与えられたアルゴリズムタイプに使用される実装は1つしかありません。"
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:24
+#, fuzzy
 msgid ""
 "it relieves developers from having to embed cryptographic libraries into "
 "their applications."
-msgstr ""
+msgstr "これにより、開発者は暗号ライブラリをアプリケーションに組み込む必要がなくなります。"
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:26
+#, fuzzy
 msgid ""
 "In the context of Quarkus, the main (non administration) services are being "
 "covered:"
-msgstr ""
+msgstr "Quarkusの文脈では、主な（管理以外の）サービスが対象となっています。"
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:28
+#, fuzzy
 msgid "encrypt: encrypt some data and return the cipher text"
-msgstr ""
+msgstr "encrypt: データを暗号化して暗号文を返す"
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:29
+#, fuzzy
 msgid "decrypt: decrypt the cipher text and return the clear data"
-msgstr ""
+msgstr "decrypt: 暗号文を復号してクリアデータを返す"
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:30
+#, fuzzy
 msgid "rewrap: reencrypt a cipher text using the most recent key version"
-msgstr ""
+msgstr "rewrap: 最新の鍵バージョンを使って暗号文を再暗号化する"
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:31
+#, fuzzy
 msgid "sign: sign a piece of data"
-msgstr ""
+msgstr "sign: データに署名する"
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:32
+#, fuzzy
 msgid ""
 "verify signature: verify that a signature is correct for a piece of data"
-msgstr ""
+msgstr "verify signature: 署名がデータに対して正しいことを検証する"
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:34
+#, fuzzy
 msgid ""
 "See https://www.vaultproject.io/docs/secrets/transit/index.html#transit-"
 "secrets-engine[Vault Transit Secret Engine's official documentation]"
 msgstr ""
+"link:https://www.vaultproject.io/docs/secrets/transit/index.html#transit-"
+"secrets-engine[Vault Transit Secret Engineの公式ドキュメントを]参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/vault-transit.adoc:37
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Prerequisites"
-msgstr ""
+msgstr "前提条件"
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:40
+#, fuzzy
 msgid "To complete this guide, you need:"
-msgstr ""
+msgstr "このガイドを完成させるには、以下のものが必要です。"
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:42
+#, fuzzy
 msgid "to complete the \"Starting Vault\" section of the {base-guide}"
-msgstr ""
+msgstr "ベースガイド}の「Vaultの起動」セクションを完了させるために"
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:43
+#, fuzzy
 msgid "roughly 15 minutes"
-msgstr ""
+msgstr "ざっと15分"
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:44
+#, fuzzy
 msgid "an IDE"
-msgstr ""
+msgstr "アイディーイーイー"
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:45
+#, fuzzy
 msgid "JDK 1.8+ installed with `JAVA_HOME` configured appropriately"
-msgstr ""
+msgstr "JDK 1.8+ がインストールされ、 `JAVA_HOME` が適切に設定されています。"
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:46
+#, fuzzy
 msgid "Apache Maven {maven-version}"
-msgstr ""
+msgstr "Apache Maven {maven-version} の場合"
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:47
+#, fuzzy
 msgid "Docker installed"
-msgstr ""
+msgstr "Dockerのインストール"
 
 #. type: Title ==
 #: upstream/_guides/vault-transit.adoc:48
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Setup"
-msgstr ""
+msgstr "セットアップ"
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:52
+#, fuzzy
 msgid ""
 "We assume there is a Vault running from the {base-guide}, and the root token "
 "is known.  The first step consists in activating the Transit Secret Engine, "
 "and creating the different keys:"
 msgstr ""
+"ここでは、{base-"
+"guide}から実行されているVaultがあり、ルート・トークンが既知であると仮定します。最初のステップは、トランジット・シークレット・エンジンを起動し、異なる鍵を作成することです。"
 
 #. type: delimited block -
 #: upstream/_guides/vault-transit.adoc:57
 #, no-wrap
-msgid ""
-"docker exec -it dev-vault sh\n"
+msgid "docker exec -it dev-vault sh\n"
 "export VAULT_TOKEN={root-token}\n"
 msgstr ""
 
@@ -185,17 +212,20 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:70
+#, fuzzy
 msgid ""
 "Note that you did not have to provide the key value. You only provide its "
 "name, and Vault will generate it for you and keep it secured."
 msgstr ""
+"キーの値を提供する必要がなかったことに注意してください。あなたはその名前を提供するだけで、Vaultはあなたのためにそれを生成し、それを安全に保つことができます。"
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:72
+#, fuzzy
 msgid ""
 "Once the keys have been created, we now need to create a policy that "
 "provides access for it:"
-msgstr ""
+msgstr "鍵が作成されたら、次に鍵へのアクセスを提供するポリシーを作成する必要があります。"
 
 #. type: delimited block -
 #: upstream/_guides/vault-transit.adoc:90
@@ -220,21 +250,27 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:93
+#, fuzzy
 msgid ""
 "And finally, let's add the `vault-transit-quickstart-policy` to user `bob` "
 "that was created in the {base-guide}:"
 msgstr ""
+"そして最後に、{base-guide}で作成したユーザー `bob` に `vault-transit-quickstart-policy` "
+"を追加してみましょう。"
 
 #. type: delimited block -
 #: upstream/_guides/vault-transit.adoc:97
 #, no-wrap
-msgid "vault write auth/userpass/users/bob password=sinclair policies=vault-quickstart-policy,vault-transit-quickstart-policy\n"
+msgid ""
+"vault write auth/userpass/users/bob password=sinclair policies=vault-"
+"quickstart-policy,vault-transit-quickstart-policy\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:100
+#, fuzzy
 msgid "To check that the configuration is correct, try logging in:"
-msgstr ""
+msgstr "設定が正しいことを確認するには、ログインしてみてください。"
 
 #. type: delimited block -
 #: upstream/_guides/vault-transit.adoc:104
@@ -245,15 +281,17 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:107
 #: upstream/_guides/vault-transit.adoc:136
+#, fuzzy
 msgid "You should see:"
-msgstr ""
+msgstr "見た方がいいですよ。"
 
 #. type: delimited block -
 #: upstream/_guides/vault-transit.adoc:113
 #, no-wrap
 msgid ""
 "Success! You are now authenticated. The token information displayed below\n"
-"is already stored in the token helper. You do NOT need to run \"vault login\"\n"
+"is already stored in the token helper. You do NOT need to run \"vault "
+"login\"\n"
 "again. Future Vault requests will automatically use this token.\n"
 msgstr ""
 
@@ -275,10 +313,12 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:127
+#, fuzzy
 msgid ""
 "Now set `VAULT_TOKEN` to the `token` above (instead of the root token), and "
 "try encrypting some data:"
 msgstr ""
+"ここで `VAULT_TOKEN` を上記の `token` に設定して（ルートトークンの代わりに）、いくつかのデータを暗号化してみてください。"
 
 #. type: delimited block -
 #: upstream/_guides/vault-transit.adoc:133
@@ -286,7 +326,8 @@ msgstr ""
 msgid ""
 "export VAULT_TOKEN={client-token}\n"
 "# note: \"my secret data\" in base64 is \"bXkgc2VjcmV0IGRhdGEK\"\n"
-"vault write transit/encrypt/my-encryption-key plaintext=bXkgc2VjcmV0IGRhdGEK\n"
+"vault write transit/encrypt/my-encryption-key plaintext="
+"bXkgc2VjcmV0IGRhdGEK\n"
 msgstr ""
 
 #. type: delimited block -
@@ -295,21 +336,23 @@ msgstr ""
 msgid ""
 "Key           Value\n"
 "---           -----\n"
-"ciphertext    vault:v1:vIQxsLANFbcfKofJL55zjoIXV6MqAzvjKUUQLGg5pWTz0W2Qab/B4nEJaQ==\n"
+"ciphertext    vault:v1:vIQxsLANFbcfKofJL55zjoIXV6MqAzvjKUUQLGg5pWTz0W2Qab/"
+"B4nEJaQ==\n"
 msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/vault-transit.adoc:143
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Encrypt and Decrypt"
-msgstr ""
+msgstr "暗号化と復号化"
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:146
+#, fuzzy
 msgid ""
 "First, let's create a simple Quarkus application with Vault and Jackson "
 "extensions:"
-msgstr ""
+msgstr "まずは、VaultとJacksonの拡張機能を使って、シンプルなQuarkusアプリケーションを作ってみましょう。"
 
 #. type: delimited block -
 #: upstream/_guides/vault-transit.adoc:156
@@ -326,14 +369,14 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:159
+#, fuzzy
 msgid "Now, configure access to Vault from the `{config-file}`:"
-msgstr ""
+msgstr "さて、 `{config-file}` から Vault へのアクセスを設定します。"
 
 #. type: delimited block -
 #: upstream/_guides/vault-transit.adoc:164
 #, no-wrap
-msgid ""
-"# vault url\n"
+msgid "# vault url\n"
 "quarkus.vault.url=http://localhost:8200\n"
 msgstr ""
 
@@ -348,19 +391,22 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:173
+#, fuzzy
 msgid ""
 "Note that you did not need to specify the existence of a particular "
 "encryption key in the configuration. You only do so in special cases such as "
 "specifying the key type for upsert, or changing the signature algorithm, ... "
 "Check the complete configuration for more information."
 msgstr ""
+"構成で特定の暗号化キーの存在を指定する必要はないことに注意してください。アップサートのキータイプを指定したり、署名アルゴリズムを変更したりするなど、特別な場合にのみ指定する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:175
+#, fuzzy
 msgid ""
 "We can then add a new endpoint that will allow us to encrypt and decrypt "
 "data:"
-msgstr ""
+msgstr "そして、データの暗号化と復号化を可能にする新しいエンドポイントを追加することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/vault-transit.adoc:182
@@ -375,8 +421,7 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_guides/vault-transit.adoc:185
 #, no-wrap
-msgid ""
-"    @Inject\n"
+msgid "    @Inject\n"
 "    public VaultTransitSecretEngine transitSecretEngine;\n"
 msgstr ""
 
@@ -387,7 +432,8 @@ msgid ""
 "    @POST\n"
 "    @Path(\"/encrypt\")\n"
 "    public String encrypt(String clearData) {\n"
-"        return transitSecretEngine.encrypt(\"my-encryption-key\", clearData);\n"
+"        return transitSecretEngine.encrypt(\"my-encryption-key\", "
+"clearData);\n"
 "    }\n"
 msgstr ""
 
@@ -398,49 +444,57 @@ msgid ""
 "    @POST\n"
 "    @Path(\"/decrypt\")\n"
 "    public String decrypt(String cipherText) {\n"
-"        return transitSecretEngine.decrypt(\"my-encryption-key\", cipherText).asString();\n"
+"        return transitSecretEngine.decrypt(\"my-encryption-key\", "
+"cipherText).asString();\n"
 "    }\n"
 "}\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:201
+#, fuzzy
 msgid ""
 "After compiling and starting the Quarkus application, let's encrypt some "
 "data:"
-msgstr ""
+msgstr "Quarkusアプリケーションをコンパイルして起動したら、データを暗号化してみましょう。"
 
 #. type: delimited block -
 #: upstream/_guides/vault-transit.adoc:205
 #, no-wrap
 msgid ""
-"curl -X POST --data 'some secret data' --header \"Content-Type: text/plain\"  http://localhost:8080/transit/encrypt\n"
-"# ==> vault:v1:fN4P7WNjIegpb3lD/pSuhXvyONhGrI21gcKNcedk+5jpjguOw6JkqXYXlkY=\n"
+"curl -X POST --data 'some secret data' --header \"Content-Type: text/plain\" "
+" http://localhost:8080/transit/encrypt\n"
+"# ==> vault:v1:fN4P7WNjIegpb3lD/pSuhXvyONhGrI21gcKNcedk+5jpjguOw6JkqXYXlkY="
+"\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:208
+#, fuzzy
 msgid "And decrypt back this cipher text:"
-msgstr ""
+msgstr "そして、この暗号文を復号化して"
 
 #. type: delimited block -
 #: upstream/_guides/vault-transit.adoc:212
 #, no-wrap
 msgid ""
-"curl -X POST --data 'vault:v1:fN4P7WNjIegpb3lD/pSuhXvyONhGrI21gcKNcedk+5jpjguOw6JkqXYXlkY=' --header \"Content-Type: text/plain\"  http://localhost:8080/transit/decrypt\n"
+"curl -X POST --data 'vault:v1:fN4P7WNjIegpb3lD/"
+"pSuhXvyONhGrI21gcKNcedk+5jpjguOw6JkqXYXlkY=' --header \"Content-Type: text/"
+"plain\"  http://localhost:8080/transit/decrypt\n"
 "# ==> some secret data\n"
 msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/vault-transit.adoc:214
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Sign and Verify"
-msgstr ""
+msgstr "署名と検証"
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:217
+#, fuzzy
 msgid "Let's add 2 new methods to our `TransitResource`:"
-msgstr ""
+msgstr "`TransitResource` に 2 つの新しいメソッドを追加してみましょう。"
 
 #. type: delimited block -
 #: upstream/_guides/vault-transit.adoc:225
@@ -471,76 +525,94 @@ msgid ""
 "@Path(\"/verify\")\n"
 "@Consumes(APPLICATION_JSON)\n"
 "public Response verify(VerifyRequest request) {\n"
-"    transitSecretEngine.verifySignature(\"my-sign-key\", request.signature, request.input);\n"
+"    transitSecretEngine.verifySignature(\"my-sign-key\", request.signature, "
+"request.input);\n"
 "    return Response.accepted().build();\n"
 "}\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:241
+#, fuzzy
 msgid "And start signing some data:"
-msgstr ""
+msgstr "データに署名して"
 
 #. type: delimited block -
 #: upstream/_guides/vault-transit.adoc:245
 #, no-wrap
 msgid ""
-"curl -X POST --data 'some secret data' --header \"Content-Type: text/plain\"  http://localhost:8080/transit/sign\n"
-"# ==> vault:v1:MEUCIQDl+nE4y4E878bkugGG6FG1/RsttaQnoWfZHppeuk4TnQIgTGWTtMhVPCzN8VH/EEr2qp5h34lI1bnEP6L1F+QQoPI=\n"
+"curl -X POST --data 'some secret data' --header \"Content-Type: text/plain\" "
+" http://localhost:8080/transit/sign\n"
+"# ==> vault:v1:MEUCIQDl+nE4y4E878bkugGG6FG1/"
+"RsttaQnoWfZHppeuk4TnQIgTGWTtMhVPCzN8VH/EEr2qp5h34lI1bnEP6L1F+QQoPI=\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:248
+#, fuzzy
 msgid "And finally, let's make sure the signature is matching our input data:"
-msgstr ""
+msgstr "そして最後に、署名が入力データと一致していることを確認しましょう。"
 
 #. type: delimited block -
 #: upstream/_guides/vault-transit.adoc:252
 #, no-wrap
 msgid ""
-"curl -v -X POST --data '{\"input\":\"some secret data\",\"signature\":\"vault:v1:MEUCIQDl+nE4y4E878bkugGG6FG1/RsttaQnoWfZHppeuk4TnQIgTGWTtMhVPCzN8VH/EEr2qp5h34lI1bnEP6L1F+QQoPI=\"}' --header \"Content-Type: application/json\" http://localhost:8080/transit/verify\n"
+"curl -v -X POST --data '{\"input\":\"some secret data\",\"signature\":"
+"\"vault:v1:MEUCIQDl+nE4y4E878bkugGG6FG1/"
+"RsttaQnoWfZHppeuk4TnQIgTGWTtMhVPCzN8VH/EEr2qp5h34lI1bnEP6L1F+QQoPI=\"}' --"
+"header \"Content-Type: application/json\" http://localhost:8080/transit/"
+"verify\n"
 "# ==> ... < HTTP/1.1 202 Accepted\n"
 msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/vault-transit.adoc:254
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Conclusion"
-msgstr ""
+msgstr "結論"
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:259
+#, fuzzy
 msgid ""
 "The Transit Secret Engine is a powerful tool in the enterprise.  We have "
 "seen the most obvious functions of the interface, but the rest of the "
 "methods or flavors should not be overlooked:"
 msgstr ""
+"トランジット・シークレット・エンジンは、企業の強力なツールです。インターフェイスの最も明白な機能を見てきましたが、残りのメソッドやフレーバーも見落としてはいけません。"
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:261
+#, fuzzy
 msgid ""
 "For instance batch oriented methods are strongly recommended for mass "
 "operations (encrypt, decrypt, ...)"
-msgstr ""
+msgstr "例えば、大量処理（暗号化、復号化、...）には、バッチ指向の方法が強く推奨されます。"
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:263
+#, fuzzy
 msgid ""
 "Transit contexts allow key derivation where one key is used to derive other "
 "keys for specific named contexts (e.g. person names, person addresses, ...)"
 msgstr ""
+"トランジットコンテキストでは、特定の名前付きコンテキスト(人名、人の住所、...)のために、1つのキーを使用して他のキーを導出することができます。"
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:265
+#, fuzzy
 msgid ""
 "Rewrapping allows to reencrypt data with the most recent key version when "
 "the Vault administrator decides to rotate keys"
-msgstr ""
+msgstr "リラップでは、Vault 管理者がキーをローテートすることを決定した場合に、最新のキーバージョンでデータを再暗号化することができます。"
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:267
+#, fuzzy
 msgid ""
 "Feel free to look at the `VaultTransitSecretEngine` interface plus the "
 "dedicated Transit Secret Engine configuration properties in the {base-guide} "
 "for all the details."
 msgstr ""
+"詳細については、 `VaultTransitSecretEngine` インターフェイスと{base-guide}にある専用のTransit "
+"Secret Engineコンフィギュレーション・プロパティをご覧ください。"
